--- a/doc/info/Differential.texi
+++ b/doc/info/Differential.texi
@@ -31,7 +31,7 @@ See @mref{ode2} for an example of its usage.
 
 @opencatbox{Categories:}
 @ctindex  Differential equations  @subentry  bc2
-@category{Differential equations}
+@cat2{ Differential equations ,  Differential-equations }
 @closecatbox
 @end deffn
 
@@ -104,9 +104,9 @@ See also @mrefcomma{ode2} @mref{drawdf} and @mrefdot{rk}
 
 @opencatbox{Categories:}
 @ctindex  Differential equations  @subentry  desolve
-@category{Differential equations}
+@cat2{ Differential equations ,  Differential-equations }
 @ctindex  Laplace transform  @subentry  desolve
-@category{Laplace transform}
+@cat2{ Laplace transform ,  Laplace-transform }
 @closecatbox
 @end deffn
 @anchor{ic1}
@@ -122,7 +122,7 @@ See @mref{ode2} for an example of its usage.
 
 @opencatbox{Categories:}
 @ctindex  Differential equations  @subentry  ic1
-@category{Differential equations}
+@cat2{ Differential equations ,  Differential-equations }
 @closecatbox
 @end deffn
 @anchor{ic2}
@@ -141,7 +141,7 @@ See @mref{ode2} for an example of its usage.
 
 @opencatbox{Categories:}
 @ctindex  Differential equations  @subentry  ic2
-@category{Differential equations}
+@cat2{ Differential equations ,  Differential-equations }
 @closecatbox
 @end deffn
 
@@ -240,7 +240,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Differential equations  @subentry  ode2
-@category{Differential equations}
+@cat2{ Differential equations ,  Differential-equations }
 @closecatbox
 @end deffn
 
@@ -252,9 +252,9 @@ method.
 
 @opencatbox{Categories:}
 @ctindex  Differential equations  @subentry  method
-@category{Differential equations}
+@cat2{ Differential equations ,  Differential-equations }
 @ctindex  Package contrib_ode  @subentry  method
-@category{Package contrib_ode}
+@cat2{ Package contrib_ode ,  Package-contrib_ode }
 @closecatbox
 
 @end defvr
@@ -267,9 +267,9 @@ order ODEs returned from @mref{ode2}.
 
 @opencatbox{Categories:}
 @ctindex  Differential equations  @subentry  %c
-@category{Differential equations}
+@cat2{ Differential equations ,  Differential-equations }
 @ctindex  Package contrib_ode  @subentry  %c
-@category{Package contrib_ode}
+@cat2{ Package contrib_ode ,  Package-contrib_ode }
 @closecatbox
 
 @end defvr
@@ -282,9 +282,9 @@ order ODEs returned from @mref{ode2}.
 
 @opencatbox{Categories:}
 @ctindex  Differential equations  @subentry  %k1
-@category{Differential equations}
+@cat2{ Differential equations ,  Differential-equations }
 @ctindex  Package contrib_ode  @subentry  %k1
-@category{Package contrib_ode}
+@cat2{ Package contrib_ode ,  Package-contrib_ode }
 @closecatbox
 
 @end defvr
@@ -297,9 +297,9 @@ order ODEs returned from @mref{ode2}.
 
 @opencatbox{Categories:}
 @ctindex  Differential equations  @subentry  %k2
-@category{Differential equations}
+@cat2{ Differential equations ,  Differential-equations }
 @ctindex  Package contrib_ode  @subentry  %k2
-@category{Package contrib_ode}
+@cat2{ Package contrib_ode ,  Package-contrib_ode }
 @closecatbox
 
 @end defvr
@@ -313,7 +313,7 @@ when using the variation of parameters technique.
 
 @opencatbox{Categories:}
 @ctindex  Differential equations  @subentry  yp
-@category{Differential equations}
+@cat2{ Differential equations ,  Differential-equations }
 @closecatbox
 
 @end defvr
