--- a/doc/info/Differentiation.texi
+++ b/doc/info/Differentiation.texi
@@ -79,7 +79,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Integral calculus  @subentry  antid
-@category{Integral calculus}
+@cat2{ Integral calculus ,  Integral-calculus }
 @closecatbox
 @end deffn
 
@@ -154,7 +154,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Integral calculus  @subentry  antidiff
-@category{Integral calculus}
+@cat2{ Integral calculus ,  Integral-calculus }
 @closecatbox
 @end deffn
 
@@ -268,9 +268,9 @@ seen in the following example:
 
 @opencatbox{Categories:}
 @ctindex  Evaluation  @subentry  at
-@category{Evaluation}
+@cat2{ Evaluation ,  Evaluation }
 @ctindex  Differential equations  @subentry  at
-@category{Differential equations}
+@cat2{ Differential equations ,  Differential-equations }
 @closecatbox
 @end deffn
 
@@ -288,7 +288,7 @@ This property is assigned by @code{gradef}.
 @c NEED EXAMPLE HERE
 @opencatbox{Categories:}
 @ctindex  Differential calculus  @subentry  atomgrad
-@category{Differential calculus}
+@cat2{ Differential calculus ,  Differential-calculus }
 @closecatbox
 @end defvr
 
@@ -376,9 +376,9 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Differential equations  @subentry  atvalue
-@category{Differential equations}
+@cat2{ Differential equations ,  Differential-equations }
 @ctindex  Declarations and inferences  @subentry  atvalue
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end deffn
 
@@ -404,7 +404,7 @@ description of these commands along with examples.
 
 @opencatbox{Categories:}
 @ctindex  Differential geometry  @subentry  cartan
-@category{Differential geometry}
+@cat2{ Differential geometry ,  Differential-geometry }
 @closecatbox
 @end deffn
 
@@ -429,9 +429,9 @@ containing the Cartan coordinates @code{@var{x_1}, ..., @var{x_n}} is parsed.
 
 @opencatbox{Categories:}
 @ctindex  Differential geometry  @subentry  init_cartan
-@category{Differential geometry}
+@cat2{ Differential geometry ,  Differential-geometry }
 @ctindex  Package cartan  @subentry  init_cartan
-@category{Package cartan}
+@cat2{ Package cartan ,  Package-cartan }
 @closecatbox
 @end deffn
 
@@ -468,7 +468,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Differential calculus  @subentry  del
-@category{Differential calculus}
+@cat2{ Differential calculus ,  Differential-calculus }
 @closecatbox
 @end deffn
 
@@ -497,9 +497,9 @@ p;
 
 @opencatbox{Categories:}
 @ctindex  Mathematical functions  @subentry  delta
-@category{Mathematical functions}
+@cat2{ Mathematical functions ,  Mathematical-functions }
 @ctindex  Laplace transform  @subentry  delta
-@category{Laplace transform}
+@cat2{ Laplace transform ,  Laplace-transform }
 @closecatbox
 @end deffn
 
@@ -571,9 +571,9 @@ See also @mref{depends} and @mrefdot{gradef}
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  dependencies
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @ctindex  Global variables  @subentry  dependencies
-@category{Global variables}
+@cat2{ Global variables ,  Global-variables }
 @closecatbox
 @end defvr
 
@@ -662,9 +662,9 @@ See also @mrefcomma{diff} @mrefcomma{del} @mref{derivdegree} and
 
 @opencatbox{Categories:}
 @ctindex  Differential calculus  @subentry  depends
-@category{Differential calculus}
+@cat2{ Differential calculus ,  Differential-calculus }
 @ctindex  Declarations and inferences  @subentry  depends
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end deffn
 
@@ -680,9 +680,9 @@ Otherwise, derivatives are displayed in the Leibniz notation @code{dy/dx}.
 @c NEED EXAMPLES HERE
 @opencatbox{Categories:}
 @ctindex  Differential calculus  @subentry  derivabbrev
-@category{Differential calculus}
+@cat2{ Differential calculus ,  Differential-calculus }
 @ctindex  Global flags  @subentry  derivabbrev
-@category{Global flags}
+@cat2{ Global flags ,  Global-flags }
 @closecatbox
 @end defvr
 
@@ -715,9 +715,9 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Differential calculus  @subentry  derivdegree
-@category{Differential calculus}
+@cat2{ Differential calculus ,  Differential-calculus }
 @ctindex  Expressions  @subentry  derivdegree
-@category{Expressions}
+@cat2{ Expressions ,  Expressions }
 @closecatbox
 @end deffn
 
@@ -732,9 +732,9 @@ the indicated variables, within the @mref{ev} command.
 
 @opencatbox{Categories:}
 @ctindex  Differential calculus  @subentry  derivlist
-@category{Differential calculus}
+@cat2{ Differential calculus ,  Differential-calculus }
 @ctindex  Evaluation  @subentry  derivlist
-@category{Evaluation}
+@cat2{ Evaluation ,  Evaluation }
 @closecatbox
 @end deffn
 
@@ -748,9 +748,9 @@ When @code{derivsubst} is @code{true}, a non-syntactic substitution such as
 
 @opencatbox{Categories:}
 @ctindex  Differential calculus  @subentry  derivsubst
-@category{Differential calculus}
+@cat2{ Differential calculus ,  Differential-calculus }
 @ctindex  Expressions  @subentry  derivsubst
-@category{Expressions}
+@cat2{ Expressions ,  Expressions }
 @closecatbox
 @end defvr
 
@@ -849,7 +849,7 @@ treated as in (1) above.
 @c NEED EXAMPLES FOR TENSOR STUFF
 @opencatbox{Categories:}
 @ctindex  Differential calculus  @subentry  diff
-@category{Differential calculus}
+@cat2{ Differential calculus ,  Differential-calculus }
 @closecatbox
 @end deffn
 
@@ -959,11 +959,11 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Differential calculus  @subentry  express
-@category{Differential calculus}
+@cat2{ Differential calculus ,  Differential-calculus }
 @ctindex  Vectors  @subentry  express
-@category{Vectors}
+@cat2{ Vectors ,  Vectors }
 @ctindex  Operators  @subentry  express
-@category{Operators}
+@cat2{ Operators ,  Operators }
 @closecatbox
 @end deffn
 
@@ -1041,9 +1041,9 @@ higher order derivatives.
 @c NEED EXAMPLES HERE
 @opencatbox{Categories:}
 @ctindex  Differential calculus  @subentry  gradef
-@category{Differential calculus}
+@cat2{ Differential calculus ,  Differential-calculus }
 @ctindex  Declarations and inferences  @subentry  gradef
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end deffn
 
@@ -1059,9 +1059,9 @@ for which partial derivatives have been defined by @code{gradef}.
 
 @opencatbox{Categories:}
 @ctindex  Differential calculus  @subentry  gradefs
-@category{Differential calculus}
+@cat2{ Differential calculus ,  Differential-calculus }
 @ctindex  Declarations and inferences  @subentry  gradefs
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end defvr
 
@@ -1187,9 +1187,9 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Laplace transform  @subentry  laplace
-@category{Laplace transform}
+@cat2{ Laplace transform ,  Laplace-transform }
 @ctindex  Differential equations  @subentry  laplace
-@category{Differential equations}
+@cat2{ Differential equations ,  Differential-equations }
 @closecatbox
 @end deffn
 
