--- a/doc/info/Evaluation.texi
+++ b/doc/info/Evaluation.texi
@@ -195,9 +195,9 @@ quote.
 
 @opencatbox{Categories:}
 @ctindex  Evaluation  @subentry  '
-@category{Evaluation}
+@cat2{ Evaluation ,  Evaluation }
 @ctindex  Operators  @subentry  '
-@category{Operators}
+@cat2{ Operators ,  Operators }
 @closecatbox
 @end deffn
 
@@ -390,9 +390,9 @@ quote @code{'}.
 
 @opencatbox{Categories:}
 @ctindex  Evaluation  @subentry  ''
-@category{Evaluation}
+@cat2{ Evaluation ,  Evaluation }
 @ctindex  Operators  @subentry  ''
-@category{Operators}
+@cat2{ Operators ,  Operators }
 @closecatbox
 @end deffn
 
@@ -592,7 +592,7 @@ Solution
 
 @opencatbox{Categories:}
 @ctindex  Evaluation  @subentry  ev
-@category{Evaluation}
+@cat2{ Evaluation ,  Evaluation }
 @closecatbox
 @end deffn
 
@@ -627,7 +627,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Evaluation flags  @subentry  eval
-@category{Evaluation flags}
+@cat2{ Evaluation flags ,  Evaluation-flags }
 @closecatbox
 @end defvr
 
@@ -718,9 +718,9 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Evaluation flags  @subentry  evflag
-@category{Evaluation flags}
+@cat2{ Evaluation flags ,  Evaluation-flags }
 @ctindex  Simplification flags and variables  @subentry  evflag
-@category{Simplification flags and variables}
+@cat2{ Simplification flags and variables ,  Simplification-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -822,7 +822,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Evaluation flags  @subentry  evfun
-@category{Evaluation flags}
+@cat2{ Evaluation flags ,  Evaluation-flags }
 @closecatbox
 @end defvr
 
@@ -840,7 +840,7 @@ generate an infinite loop.
 
 @opencatbox{Categories:}
 @ctindex  Evaluation flags  @subentry  infeval
-@category{Evaluation flags}
+@cat2{ Evaluation flags ,  Evaluation-flags }
 @closecatbox
 @end defvr
 
@@ -857,7 +857,7 @@ to be resimplified without being reevaluated.
 
 @opencatbox{Categories:}
 @ctindex  Evaluation flags  @subentry  noeval
-@category{Evaluation flags}
+@cat2{ Evaluation flags ,  Evaluation-flags }
 @closecatbox
 @end defvr
 
@@ -874,9 +874,9 @@ being @code{ev}'d to "verbs", i.e., evaluates them.  See also
 
 @opencatbox{Categories:}
 @ctindex  Evaluation flags  @subentry  nouns
-@category{Evaluation flags}
+@cat2{ Evaluation flags ,  Evaluation-flags }
 @ctindex  Nouns and verbs  @subentry  nouns
-@category{Nouns and verbs}
+@cat2{ Nouns and verbs ,  Nouns-and-verbs }
 @closecatbox
 @end defvr
 
@@ -903,7 +903,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Evaluation flags  @subentry  pred
-@category{Evaluation flags}
+@cat2{ Evaluation flags ,  Evaluation-flags }
 @closecatbox
 @end defvr
 
