--- a/doc/info/Function.texi
+++ b/doc/info/Function.texi
@@ -19,9 +19,9 @@
 
 @opencatbox{Categories:}
 @ctindex  Function definition  @subentry  Function
-@category{Function definition}
+@cat2{ Function definition ,  Function-definition }
 @ctindex  Programming  @subentry  Function
-@category{Programming}
+@cat2{ Programming ,  Programming }
 @closecatbox
 
 @c -----------------------------------------------------------------------------
@@ -440,7 +440,7 @@ create another function for which some of the arguments are fixed.
 
 @opencatbox{Categories:}
 @ctindex  Function definition  @subentry  buildq
-@category{Function definition}
+@cat2{ Function definition ,  Function-definition }
 @closecatbox
 @end deffn
 
@@ -501,7 +501,7 @@ Examples
 
 @opencatbox{Categories:}
 @ctindex  Function application  @subentry  macroexpand
-@category{Function application}
+@cat2{ Function application ,  Function-application }
 @closecatbox
 @end deffn
 
@@ -560,7 +560,7 @@ Examples
 
 @opencatbox{Categories:}
 @ctindex  Function application  @subentry  macroexpand1
-@category{Function application}
+@cat2{ Function application ,  Function-application }
 @closecatbox
 @end deffn
 
@@ -578,9 +578,9 @@ See also @mrefdot{infolists}
 
 @opencatbox{Categories:}
 @ctindex  Function definition  @subentry  macros
-@category{Function definition}
+@cat2{ Function definition ,  Function-definition }
 @ctindex  Global variables  @subentry  macros
-@category{Global variables}
+@cat2{ Global variables ,  Global-variables }
 @closecatbox
 @end defvr
 
@@ -637,7 +637,7 @@ Examples
 
 @opencatbox{Categories:}
 @ctindex  Function definition  @subentry  splice
-@category{Function definition}
+@cat2{ Function definition ,  Function-definition }
 @closecatbox
 @end deffn
 
@@ -778,7 +778,7 @@ How to convert a nested list into a matrix:
 
 @opencatbox{Categories:}
 @ctindex  Function application  @subentry  apply
-@category{Function application}
+@cat2{ Function application ,  Function-application }
 @closecatbox
 @end deffn
 
@@ -850,9 +850,9 @@ See also @mref{return} and @mrefdot{go}
 
 @opencatbox{Categories:}
 @ctindex  Expressions  @subentry  block
-@category{Expressions}
+@cat2{ Expressions ,  Expressions }
 @ctindex  Programming  @subentry  block
-@category{Programming}
+@cat2{ Programming ,  Programming }
 @closecatbox
 @end deffn
 
@@ -868,7 +868,7 @@ his environment.  Upon typing @code{exit;} the computation resumes.
 
 @opencatbox{Categories:}
 @ctindex  Debugging  @subentry  break
-@category{Debugging}
+@cat2{ Debugging ,  Debugging }
 @closecatbox
 @end deffn
 
@@ -912,7 +912,7 @@ the first negative element of @code{l} and "throws" it up.
 
 @opencatbox{Categories:}
 @ctindex  Programming  @subentry  catch
-@category{Programming}
+@cat2{ Programming ,  Programming }
 @closecatbox
 @end deffn
 
@@ -940,7 +940,7 @@ See also @mrefcomma{translate} @mrefcomma{translate_file} and @mrefdot{compile_f
 
 @opencatbox{Categories:}
 @ctindex  Translation and compilation  @subentry  compfile
-@category{Translation and compilation}
+@cat2{ Translation and compilation ,  Translation-and-compilation }
 @closecatbox
 @end deffn
 
@@ -991,7 +991,7 @@ to limit the code's functionality are the following:
 
 @opencatbox{Categories:}
 @ctindex  Translation and compilation  @subentry  compile
-@category{Translation and compilation}
+@cat2{ Translation and compilation ,  Translation-and-compilation }
 @closecatbox
 @end deffn
 
@@ -1150,7 +1150,7 @@ When the first argument is an expression with operator @code{funmake},
 
 @opencatbox{Categories:}
 @ctindex  Function definition  @subentry  define
-@category{Function definition}
+@cat2{ Function definition ,  Function-definition }
 @closecatbox
 @end deffn
 
@@ -1335,7 +1335,7 @@ Cannot assign to `baz_quux'.
 
 @opencatbox{Categories:}
 @ctindex  Translation and compilation  @subentry  define_variable
-@category{Translation and compilation}
+@cat2{ Translation and compilation ,  Translation-and-compilation }
 @closecatbox
 @end deffn
 
@@ -1454,9 +1454,9 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Function definition  @subentry  dispfun
-@category{Function definition}
+@cat2{ Function definition ,  Function-definition }
 @ctindex  Display functions  @subentry  dispfun
-@category{Display functions}
+@cat2{ Display functions ,  Display-functions }
 @closecatbox
 @end deffn
 
@@ -1495,9 +1495,9 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Function application  @subentry  fullmap
-@category{Function application}
+@cat2{ Function application ,  Function-application }
 @ctindex  Expressions  @subentry  fullmap
-@category{Expressions}
+@cat2{ Expressions ,  Expressions }
 @closecatbox
 @end deffn
 
@@ -1522,9 +1522,9 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Function application  @subentry  fullmapl
-@category{Function application}
+@cat2{ Function application ,  Function-application }
 @ctindex  Expressions  @subentry  fullmapl
-@category{Expressions}
+@cat2{ Expressions ,  Expressions }
 @closecatbox
 @end deffn
 
@@ -1608,9 +1608,9 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Function definition  @subentry  functions
-@category{Function definition}
+@cat2{ Function definition ,  Function-definition }
 @ctindex  Global variables  @subentry  functions
-@category{Global variables}
+@cat2{ Global variables ,  Global-variables }
 @closecatbox
 @end defvr
 
@@ -1643,7 +1643,7 @@ and assigns the definition to the label.
 @c PROBABLY NEED SOME EXAMPLES HERE
 @opencatbox{Categories:}
 @ctindex  Function definition  @subentry  fundef
-@category{Function definition}
+@cat2{ Function definition ,  Function-definition }
 @closecatbox
 @end deffn
 
@@ -1819,9 +1819,9 @@ Maxima simplifies @code{funmake}'s return value.
 
 @opencatbox{Categories:}
 @ctindex  Function application  @subentry  funmake
-@category{Function application}
+@cat2{ Function application ,  Function-application }
 @ctindex  Expressions  @subentry  funmake
-@category{Expressions}
+@cat2{ Expressions ,  Expressions }
 @closecatbox
 @end deffn
 
@@ -2061,7 +2061,7 @@ The arguments appear within the function body as a list.
 
 @opencatbox{Categories:}
 @ctindex  Function definition  @subentry  lambda
-@category{Function definition}
+@cat2{ Function definition ,  Function-definition }
 @closecatbox
 @end deffn
 
@@ -2121,9 +2121,9 @@ A local function definition.
 
 @opencatbox{Categories:}
 @ctindex  Function definition  @subentry  local
-@category{Function definition}
+@cat2{ Function definition ,  Function-definition }
 @ctindex  Programming  @subentry  local
-@category{Programming}
+@cat2{ Programming ,  Programming }
 @closecatbox
 @end deffn
 
@@ -2350,9 +2350,9 @@ x + 99 is equal to x
 
 @opencatbox{Categories:}
 @ctindex  Function application  @subentry  macroexpansion
-@category{Function application}
+@cat2{ Function application ,  Function-application }
 @ctindex  Global flags  @subentry  macroexpansion
-@category{Global flags}
+@cat2{ Global flags ,  Global-flags }
 @closecatbox
 @end defvr
 
@@ -2462,7 +2462,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Translation and compilation  @subentry  mode_declare
-@category{Translation and compilation}
+@cat2{ Translation and compilation ,  Translation-and-compilation }
 @closecatbox
 @end deffn
 
@@ -2524,7 +2524,7 @@ To enable the Lisp debugger set *debugger-hook* to nil.
 
 @opencatbox{Categories:}
 @ctindex  Translation flags and variables  @subentry  mode_checkp
-@category{Translation flags and variables}
+@cat2{ Translation flags and variables ,  Translation-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -2539,7 +2539,7 @@ error.
 
 @opencatbox{Categories:}
 @ctindex  Translation flags and variables  @subentry  mode_check_errorp
-@category{Translation flags and variables}
+@cat2{ Translation flags and variables ,  Translation-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -2555,7 +2555,7 @@ described.
 
 @opencatbox{Categories:}
 @ctindex  Translation flags and variables  @subentry  mode_check_warnp
-@category{Translation flags and variables}
+@cat2{ Translation flags and variables ,  Translation-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -2599,7 +2599,7 @@ compile(firstnumb)
 of a list that is guaranteed to be filled with numbers.
 @opencatbox{Categories:}
 @ctindex  Translation and compilation  @subentry  mode_identity
-@category{Translation and compilation}
+@cat2{ Translation and compilation ,  Translation-and-compilation }
 @closecatbox
 @end deffn
 
@@ -2626,7 +2626,7 @@ which there is no function definition.
 
 @opencatbox{Categories:}
 @ctindex  Function definition  @subentry  remfunction
-@category{Function definition}
+@cat2{ Function definition ,  Function-definition }
 @closecatbox
 @end deffn
 
@@ -2646,7 +2646,7 @@ removed from the @code{functions} list.
 
 @opencatbox{Categories:}
 @ctindex  Translation flags and variables  @subentry  savedef
-@category{Translation flags and variables}
+@cat2{ Translation flags and variables ,  Translation-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -2713,7 +2713,7 @@ functions translated.
 
 @opencatbox{Categories:}
 @ctindex  Translation and compilation  @subentry  translate
-@category{Translation and compilation}
+@cat2{ Translation and compilation ,  Translation-and-compilation }
 @closecatbox
 @end deffn
 
@@ -2790,7 +2790,7 @@ and @mrefdot{tr_warn_undefined_variable}
 
 @opencatbox{Categories:}
 @ctindex  Translation and compilation  @subentry  translate_file
-@category{Translation and compilation}
+@cat2{ Translation and compilation ,  Translation-and-compilation }
 @closecatbox
 @end deffn
 
@@ -2805,7 +2805,7 @@ rather than the translated version.
 
 @opencatbox{Categories:}
 @ctindex  Translation flags and variables  @subentry  transrun
-@category{Translation flags and variables}
+@cat2{ Translation flags and variables ,  Translation-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -2828,7 +2828,7 @@ otherwise array names appear as literal symbols in translated code.
 
 @opencatbox{Categories:}
 @ctindex  Translation flags and variables  @subentry  tr_array_as_ref
-@category{Translation flags and variables}
+@cat2{ Translation flags and variables ,  Translation-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -2882,7 +2882,7 @@ note: instead I'll translate it as: apply(f,[3])
 
 @opencatbox{Categories:}
 @ctindex  Translation flags and variables  @subentry  tr_bound_function_applyp
-@category{Translation flags and variables}
+@cat2{ Translation flags and variables ,  Translation-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -2898,7 +2898,7 @@ translation of the file are only inserted into the UNLISP file.
 
 @opencatbox{Categories:}
 @ctindex  Translation flags and variables  @subentry  tr_file_tty_messagesp
-@category{Translation flags and variables}
+@cat2{ Translation flags and variables ,  Translation-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -2919,7 +2919,7 @@ When @code{false} then @code{acos(x)} is of mode
 
 @opencatbox{Categories:}
 @ctindex  Translation flags and variables  @subentry  tr_float_can_branch_complex
-@category{Translation flags and variables}
+@cat2{ Translation flags and variables ,  Translation-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -2940,7 +2940,7 @@ Maxima interpreter.
 
 @opencatbox{Categories:}
 @ctindex  Translation flags and variables  @subentry  tr_function_call_default
-@category{Translation flags and variables}
+@cat2{ Translation flags and variables ,  Translation-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -2954,7 +2954,7 @@ atoms which have them, e.g. @code{%pi}.
 
 @opencatbox{Categories:}
 @ctindex  Translation flags and variables  @subentry  tr_numer
-@category{Translation flags and variables}
+@cat2{ Translation flags and variables ,  Translation-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -2970,7 +2970,7 @@ non-terminating optimization properties.
 
 @opencatbox{Categories:}
 @ctindex  Translation flags and variables  @subentry  tr_optimize_max_loop
-@category{Translation flags and variables}
+@cat2{ Translation flags and variables ,  Translation-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -2996,7 +2996,7 @@ track down bugs.
 
 @opencatbox{Categories:}
 @ctindex  Translation flags and variables  @subentry  tr_state_vars
-@category{Translation flags and variables}
+@cat2{ Translation flags and variables ,  Translation-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -3013,7 +3013,7 @@ the translator during the current translation.
 
 @opencatbox{Categories:}
 @ctindex  Translation and compilation  @subentry  tr_warnings_get
-@category{Translation and compilation}
+@cat2{ Translation and compilation ,  Translation-and-compilation }
 @closecatbox
 @end deffn
 
@@ -3027,7 +3027,7 @@ improper declarations that were made at translate time.
 
 @opencatbox{Categories:}
 @ctindex  Translation flags and variables  @subentry  tr_warn_bad_function_calls
-@category{Translation flags and variables}
+@cat2{ Translation flags and variables ,  Translation-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -3042,7 +3042,7 @@ all legitimate special program forms are translated.
 
 @opencatbox{Categories:}
 @ctindex  Translation flags and variables  @subentry  tr_warn_fexpr
-@category{Translation flags and variables}
+@cat2{ Translation flags and variables ,  Translation-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -3056,7 +3056,7 @@ called that indicates problems in the translation.
 
 @opencatbox{Categories:}
 @ctindex  Translation flags and variables  @subentry  tr_warn_meval
-@category{Translation flags and variables}
+@cat2{ Translation flags and variables ,  Translation-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -3070,7 +3070,7 @@ assigned values inappropriate for their mode.
 
 @opencatbox{Categories:}
 @ctindex  Translation flags and variables  @subentry  tr_warn_mode
-@category{Translation flags and variables}
+@cat2{ Translation flags and variables ,  Translation-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -3084,7 +3084,7 @@ warnings about undeclared variables to the TTY.
 
 @opencatbox{Categories:}
 @ctindex  Translation flags and variables  @subentry  tr_warn_undeclared
-@category{Translation flags and variables}
+@cat2{ Translation flags and variables ,  Translation-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -3098,7 +3098,7 @@ undefined global variables are seen.
 
 @opencatbox{Categories:}
 @ctindex  Translation flags and variables  @subentry  tr_warn_undefined_variable
-@category{Translation flags and variables}
+@cat2{ Translation flags and variables ,  Translation-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -3143,7 +3143,7 @@ flags (@code{tr_numer}, etc.) have no effect on the translation.
 
 @opencatbox{Categories:}
 @ctindex  Translation and compilation  @subentry  compile_file
-@category{Translation and compilation}
+@cat2{ Translation and compilation ,  Translation-and-compilation }
 @closecatbox
 @end deffn
 
@@ -3164,7 +3164,7 @@ the translator does not know @code{fn} is going to be a Lisp function.
 
 @opencatbox{Categories:}
 @ctindex  Translation and compilation  @subentry  declare_translated
-@category{Translation and compilation}
+@cat2{ Translation and compilation ,  Translation-and-compilation }
 @closecatbox
 @end deffn
 
