--- a/doc/info/Help.texi
+++ b/doc/info/Help.texi
@@ -40,7 +40,7 @@ and additional output.
 
 @opencatbox{Categories:}
 @ctindex  Console interaction  @subentry  Documentation
-@category{Console interaction}
+@cat2{ Console interaction ,  Console-interaction }
 @closecatbox
 
 @c -----------------------------------------------------------------------------
@@ -102,7 +102,7 @@ The number of symbols in the current Maxima session. This will vary.
 
 @opencatbox{Categories:}
 @ctindex  Help  @subentry  apropos
-@category{Help}
+@cat2{ Help ,  Help }
 @closecatbox
 @end deffn
 
@@ -148,11 +148,11 @@ _
 
 @opencatbox{Categories:}
 @ctindex  Help  @subentry  demo
-@category{Help}
+@cat2{ Help ,  Help }
 @ctindex  Console interaction  @subentry  demo
-@category{Console interaction}
+@cat2{ Console interaction ,  Console-interaction }
 @ctindex  File input  @subentry  demo
-@category{File input}
+@cat2{ File input ,  File-input }
 @closecatbox
 @end deffn
 
@@ -233,9 +233,9 @@ respectively.
 
 @opencatbox{Categories:}
 @ctindex  Help  @subentry  describe
-@category{Help}
+@cat2{ Help ,  Help }
 @ctindex  Console interaction  @subentry  describe
-@category{Console interaction}
+@cat2{ Console interaction ,  Console-interaction }
 @closecatbox
 @end deffn
 
@@ -267,9 +267,9 @@ See also @mrefcomma{browser} and @mrefdot{url_base}
 
 @opencatbox{Categories:}
 @ctindex  Help  @subentry  output_format_for_help
-@category{Help}
+@cat2{ Help ,  Help }
 @ctindex  Global variables  @subentry  output_format_for_help
-@category{Global variables}
+@cat2{ Global variables ,  Global-variables }
 @closecatbox
 @end defvr
 
@@ -295,9 +295,9 @@ See also @mrefcomma{output_format_for_help} and @mrefdot{url_base}
 
 @opencatbox{Categories:}
 @ctindex  Help  @subentry  browser
-@category{Help}
+@cat2{ Help ,  Help }
 @ctindex  Global variables  @subentry  browser
-@category{Global variables}
+@cat2{ Global variables ,  Global-variables }
 @closecatbox
 @end defvr
 
@@ -316,9 +316,9 @@ See also @ref{output_format_for_help} and @mrefdot{browser}
 
 @opencatbox{Categories:}
 @ctindex  Help  @subentry  url_base
-@category{Help}
+@cat2{ Help ,  Help }
 @ctindex  Global variables  @subentry  url_base
-@category{Global variables}
+@cat2{ Global variables ,  Global-variables }
 @closecatbox
 @end defvr
 
@@ -369,9 +369,9 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Help  @subentry  example
-@category{Help}
+@cat2{ Help ,  Help }
 @ctindex  Console interaction  @subentry  example
-@category{Console interaction}
+@cat2{ Console interaction ,  Console-interaction }
 @closecatbox
 @end deffn
 
@@ -385,9 +385,9 @@ the function @code{example}.  See @mrefdot{example}
 
 @opencatbox{Categories:}
 @ctindex  Help  @subentry  manual_demo
-@category{Help}
+@cat2{ Help ,  Help }
 @ctindex  Global variables  @subentry  manual_demo
-@category{Global variables}
+@cat2{ Global variables ,  Global-variables }
 @closecatbox
 @end defvr
 
