--- a/doc/info/Introduction.texi
+++ b/doc/info/Introduction.texi
@@ -191,6 +191,6 @@ Maxima can generate plots of one or more functions:
 
 @opencatbox{Categories:}
 @ctindex  Help  @subentry  
-@category{Help}
+@cat2{ Help ,  Help }
 @closecatbox
 
