--- a/doc/info/MathFunctions.texi
+++ b/doc/info/MathFunctions.texi
@@ -132,7 +132,7 @@ transform of @code{abs}: see @mrefdot{laplace}
 
 @opencatbox{Categories:}
 @ctindex  Mathematical functions  @subentry  abs
-@category{Mathematical functions}
+@cat2{ Mathematical functions ,  Mathematical-functions }
 @closecatbox
 @end deffn
 
@@ -289,7 +289,7 @@ reverse(uf))
 
 @opencatbox{Categories:}
 @ctindex  Mathematical functions  @subentry  ceiling
-@category{Mathematical functions}
+@cat2{ Mathematical functions ,  Mathematical-functions }
 @closecatbox
 @end deffn
 
@@ -303,7 +303,7 @@ numeric.  @mref{fix} (as in @code{fixnum}) is a synonym for this, so
 
 @opencatbox{Categories:}
 @ctindex  Mathematical functions  @subentry  entier
-@category{Mathematical functions}
+@cat2{ Mathematical functions ,  Mathematical-functions }
 @closecatbox
 @end deffn
 
@@ -388,7 +388,7 @@ can use this information; for example:
 
 @opencatbox{Categories:}
 @ctindex  Mathematical functions  @subentry  floor
-@category{Mathematical functions}
+@cat2{ Mathematical functions ,  Mathematical-functions }
 @closecatbox
 @end deffn
 
@@ -400,7 +400,7 @@ A synonym for @code{entier (@var{x})}.
 
 @opencatbox{Categories:}
 @ctindex  Mathematical functions  @subentry  fix
-@category{Mathematical functions}
+@cat2{ Mathematical functions ,  Mathematical-functions }
 @closecatbox
 @end deffn
 
@@ -416,9 +416,9 @@ equal to zero, use @mrefdot{unit_step}
 
 @opencatbox{Categories:}
 @ctindex  Laplace transform  @subentry  hstep
-@category{Laplace transform}
+@cat2{ Laplace transform ,  Laplace-transform }
 @ctindex  Mathematical functions  @subentry  hstep
-@category{Mathematical functions}
+@cat2{ Mathematical functions ,  Mathematical-functions }
 @closecatbox
 
 @end deffn
@@ -433,11 +433,11 @@ See also @mref{lmin} and @mrefdot{max}
 
 @opencatbox{Categories:}
 @ctindex  Mathematical functions  @subentry  lmax
-@category{Mathematical functions}
+@cat2{ Mathematical functions ,  Mathematical-functions }
 @ctindex  Lists  @subentry  lmax
-@category{Lists}
+@cat2{ Lists ,  Lists }
 @ctindex  Sets  @subentry  lmax
-@category{Sets}
+@cat2{ Sets ,  Sets }
 @closecatbox
 @end deffn
 
@@ -451,11 +451,11 @@ See also @mref{lmax} and @mrefdot{min}
 
 @opencatbox{Categories:}
 @ctindex  Mathematical functions  @subentry  lmin
-@category{Mathematical functions}
+@cat2{ Mathematical functions ,  Mathematical-functions }
 @ctindex  Lists  @subentry  lmin
-@category{Lists}
+@cat2{ Lists ,  Lists }
 @ctindex  Sets  @subentry  lmin
-@category{Sets}
+@cat2{ Sets ,  Sets }
 @closecatbox
 @end deffn
 
@@ -510,7 +510,7 @@ members and excludes those that are in between; for example
 
 @opencatbox{Categories:}
 @ctindex  Mathematical functions  @subentry  max
-@category{Mathematical functions}
+@cat2{ Mathematical functions ,  Mathematical-functions }
 @closecatbox
 @end deffn
 
@@ -564,7 +564,7 @@ members and excludes those that are in between; for example
 
 @opencatbox{Categories:}
 @ctindex  Mathematical functions  @subentry  min
-@category{Mathematical functions}
+@cat2{ Mathematical functions ,  Mathematical-functions }
 @closecatbox
 @end deffn
 
@@ -581,7 +581,7 @@ See @mrefdot{distribute_over}
 
 @opencatbox{Categories:}
 @ctindex  Mathematical functions  @subentry  round
-@category{Mathematical functions}
+@cat2{ Mathematical functions ,  Mathematical-functions }
 @closecatbox
 @end deffn
 
@@ -605,7 +605,7 @@ equation.  See @mref{sign} and @mrefdot{distribute_over}
 
 @opencatbox{Categories:}
 @ctindex  Mathematical functions  @subentry  signum
-@category{Mathematical functions}
+@cat2{ Mathematical functions ,  Mathematical-functions }
 @closecatbox
 @end deffn
 
@@ -622,7 +622,7 @@ See @mrefdot{distribute_over}
 
 @opencatbox{Categories:}
 @ctindex  Mathematical functions  @subentry  truncate
-@category{Mathematical functions}
+@cat2{ Mathematical functions ,  Mathematical-functions }
 @closecatbox
 @end deffn
 
@@ -782,7 +782,7 @@ example for @mrefdot{bessel_j}
 
 @opencatbox{Categories:}
 @ctindex  Complex variables  @subentry  cabs
-@category{Complex variables}
+@cat2{ Complex variables ,  Complex-variables }
 @closecatbox
 @end deffn
 
@@ -882,7 +882,7 @@ some properties of the variables involved not being known:
 
 @opencatbox{Categories:}
 @ctindex  Complex variables  @subentry  carg
-@category{Complex variables}
+@cat2{ Complex variables ,  Complex-variables }
 @closecatbox
 @end deffn
 
@@ -924,7 +924,7 @@ Returns the complex conjugate of @var{x}.
 
 @opencatbox{Categories:}
 @ctindex  Complex variables  @subentry  conjugate
-@category{Complex variables}
+@cat2{ Complex variables ,  Complex-variables }
 @closecatbox
 @end deffn
 
@@ -970,7 +970,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Complex variables  @subentry  imagpart
-@category{Complex variables}
+@cat2{ Complex variables ,  Complex-variables }
 @closecatbox
 @end deffn
 
@@ -1012,9 +1012,9 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Complex variables  @subentry  polarform
-@category{Complex variables}
+@cat2{ Complex variables ,  Complex-variables }
 @ctindex  Exponential and logarithm functions  @subentry  polarform
-@category{Exponential and logarithm functions}
+@cat2{ Exponential and logarithm functions ,  Exponential-and-logarithm-functions }
 @closecatbox
 @end deffn
 
@@ -1055,7 +1055,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Complex variables  @subentry  realpart
-@category{Complex variables}
+@cat2{ Complex variables ,  Complex-variables }
 @closecatbox
 @end deffn
 
@@ -1090,7 +1090,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Complex variables  @subentry  rectform
-@category{Complex variables}
+@cat2{ Complex variables ,  Complex-variables }
 @closecatbox
 @end deffn
 
@@ -1124,9 +1124,9 @@ yields a noun form @code{genfact (n, n/2, 2)}.
 
 @opencatbox{Categories:}
 @ctindex  Gamma and factorial functions  @subentry  !!
-@category{Gamma and factorial functions}
+@cat2{ Gamma and factorial functions ,  Gamma-and-factorial-functions }
 @ctindex  Operators  @subentry  !!
-@category{Operators}
+@cat2{ Operators ,  Operators }
 @closecatbox
 @end deffn
 
@@ -1177,7 +1177,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  binomial
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -1233,7 +1233,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Gamma and factorial functions  @subentry  factcomb
-@category{Gamma and factorial functions}
+@cat2{ Gamma and factorial functions ,  Gamma-and-factorial-functions }
 @closecatbox
 @end deffn
 
@@ -1386,9 +1386,9 @@ simplification of expressions with the factorial function.
 
 @opencatbox{Categories:}
 @ctindex  Gamma and factorial functions  @subentry  factorial
-@category{Gamma and factorial functions}
+@cat2{ Gamma and factorial functions ,  Gamma-and-factorial-functions }
 @ctindex  Operators  @subentry  factorial
-@category{Operators}
+@cat2{ Operators ,  Operators }
 @closecatbox
 @end deffn
 
@@ -1404,7 +1404,7 @@ automatically expanded.  If it is -1 then all integers are expanded.
 
 @opencatbox{Categories:}
 @ctindex  Gamma and factorial functions  @subentry  factlim
-@category{Gamma and factorial functions}
+@cat2{ Gamma and factorial functions ,  Gamma-and-factorial-functions }
 @closecatbox
 @end defvr
 
@@ -1419,7 +1419,7 @@ See @mref{factorial} for an example.
 
 @opencatbox{Categories:}
 @ctindex  Gamma and factorial functions  @subentry  factorial_expand
-@category{Gamma and factorial functions}
+@cat2{ Gamma and factorial functions ,  Gamma-and-factorial-functions }
 @closecatbox
 @end defvr
 
@@ -1435,7 +1435,7 @@ Returns the generalized factorial, defined as
 
 @opencatbox{Categories:}
 @ctindex  Gamma and factorial functions  @subentry  genfact
-@category{Gamma and factorial functions}
+@cat2{ Gamma and factorial functions ,  Gamma-and-factorial-functions }
 @closecatbox
 @end deffn
 
@@ -1470,7 +1470,7 @@ which differ by an integer.
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  minfactorial
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -1528,9 +1528,9 @@ When @code{sumsplitfact} is @code{false},
 
 @opencatbox{Categories:}
 @ctindex  Gamma and factorial functions  @subentry  sumsplitfact
-@category{Gamma and factorial functions}
+@cat2{ Gamma and factorial functions ,  Gamma-and-factorial-functions }
 @ctindex  Simplification flags and variables  @subentry  sumsplitfact
-@category{Simplification flags and variables}
+@cat2{ Simplification flags and variables ,  Simplification-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -1552,9 +1552,9 @@ command "contracts" expressions containing @code{log}.
 
 @opencatbox{Categories:}
 @ctindex  Exponential and logarithm functions  @subentry  %e_to_numlog
-@category{Exponential and logarithm functions}
+@cat2{ Exponential and logarithm functions ,  Exponential-and-logarithm-functions }
 @ctindex  Simplification flags and variables  @subentry  %e_to_numlog
-@category{Simplification flags and variables}
+@cat2{ Simplification flags and variables ,  Simplification-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -1628,9 +1628,9 @@ When @code{%emode} is @code{false}, no special simplification of
 
 @opencatbox{Categories:}
 @ctindex  Exponential and logarithm functions  @subentry  %emode
-@category{Exponential and logarithm functions}
+@cat2{ Exponential and logarithm functions ,  Exponential-and-logarithm-functions }
 @ctindex  Simplification flags and variables  @subentry  %emode
-@category{Simplification flags and variables}
+@cat2{ Simplification flags and variables ,  Simplification-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -1700,9 +1700,9 @@ See also @mref{ev} and @mrefdot{numer}
 
 @opencatbox{Categories:}
 @ctindex  Exponential and logarithm functions  @subentry  %enumer
-@category{Exponential and logarithm functions}
+@cat2{ Exponential and logarithm functions ,  Exponential-and-logarithm-functions }
 @ctindex  Evaluation flags  @subentry  %enumer
-@category{Evaluation flags}
+@cat2{ Evaluation flags ,  Evaluation-flags }
 @closecatbox
 @end defvr
 
@@ -1755,7 +1755,7 @@ See @mrefdot{%emode}
 
 @opencatbox{Categories:}
 @ctindex  Exponential and logarithm functions  @subentry  exp
-@category{Exponential and logarithm functions}
+@cat2{ Exponential and logarithm functions ,  Exponential-and-logarithm-functions }
 @closecatbox
 @end deffn
 
@@ -1861,7 +1861,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Exponential and logarithm functions  @subentry  li
-@category{Exponential and logarithm functions}
+@cat2{ Exponential and logarithm functions ,  Exponential-and-logarithm-functions }
 @closecatbox
 @end deffn
 
@@ -1903,7 +1903,7 @@ command "contracts" expressions containing @code{log}.
 
 @opencatbox{Categories:}
 @ctindex  Exponential and logarithm functions  @subentry  log
-@category{Exponential and logarithm functions}
+@cat2{ Exponential and logarithm functions ,  Exponential-and-logarithm-functions }
 @closecatbox
 @end deffn
 
@@ -1921,11 +1921,11 @@ endpoints is often needed.
 
 @opencatbox{Categories:}
 @ctindex  Exponential and logarithm functions  @subentry  logabs
-@category{Exponential and logarithm functions}
+@cat2{ Exponential and logarithm functions ,  Exponential-and-logarithm-functions }
 @ctindex  Integral calculus  @subentry  logabs
-@category{Integral calculus}
+@cat2{ Integral calculus ,  Integral-calculus }
 @ctindex  Global flags  @subentry  logabs
-@category{Global flags}
+@cat2{ Global flags ,  Global-flags }
 @closecatbox
 @end defvr
 
@@ -1941,11 +1941,11 @@ variable @code{logarc}.
 
 @opencatbox{Categories:}
 @ctindex  Exponential and logarithm functions  @subentry  logarc
-@category{Exponential and logarithm functions}
+@cat2{ Exponential and logarithm functions ,  Exponential-and-logarithm-functions }
 @ctindex  Simplification flags and variables  @subentry  logarc
-@category{Simplification flags and variables}
+@cat2{ Simplification flags and variables ,  Simplification-flags-and-variables }
 @ctindex  Simplification functions  @subentry  logarc
-@category{Simplification functions}
+@cat2{ Simplification functions ,  Simplification-functions }
 @closecatbox
 @end deffn
 
@@ -1959,11 +1959,11 @@ The default value of @code{logarc} is @code{false}.
 
 @opencatbox{Categories:}
 @ctindex  Exponential and logarithm functions  @subentry  logarc
-@category{Exponential and logarithm functions}
+@cat2{ Exponential and logarithm functions ,  Exponential-and-logarithm-functions }
 @ctindex  Simplification flags and variables  @subentry  logarc
-@category{Simplification flags and variables}
+@cat2{ Simplification flags and variables ,  Simplification-flags-and-variables }
 @ctindex  Simplification functions  @subentry  logarc
-@category{Simplification functions}
+@cat2{ Simplification functions ,  Simplification-functions }
 @closecatbox
 @end defvr
 
@@ -1981,9 +1981,9 @@ logconfun(m):=featurep(m,integer) or ratnump(m)$} .  Then
 
 @opencatbox{Categories:}
 @ctindex  Exponential and logarithm functions  @subentry  logconcoeffp
-@category{Exponential and logarithm functions}
+@cat2{ Exponential and logarithm functions ,  Exponential-and-logarithm-functions }
 @ctindex  Simplification flags and variables  @subentry  logconcoeffp
-@category{Simplification flags and variables}
+@cat2{ Simplification flags and variables ,  Simplification-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -2020,7 +2020,7 @@ logconfun(m):=featurep(m,integer) or ratnump(m)$} .  Then
 
 @opencatbox{Categories:}
 @ctindex  Exponential and logarithm functions  @subentry  logcontract
-@category{Exponential and logarithm functions}
+@cat2{ Exponential and logarithm functions ,  Exponential-and-logarithm-functions }
 @closecatbox
 @end deffn
 
@@ -2141,9 +2141,9 @@ these simplifications are disabled.
 
 @opencatbox{Categories:}
 @ctindex  Exponential and logarithm functions  @subentry  logexpand
-@category{Exponential and logarithm functions}
+@cat2{ Exponential and logarithm functions ,  Exponential-and-logarithm-functions }
 @ctindex  Simplification flags and variables  @subentry  logexpand
-@category{Simplification flags and variables}
+@cat2{ Simplification flags and variables ,  Simplification-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -2157,9 +2157,9 @@ If @code{true} implements the rule
 
 @opencatbox{Categories:}
 @ctindex  Exponential and logarithm functions  @subentry  lognegint
-@category{Exponential and logarithm functions}
+@cat2{ Exponential and logarithm functions ,  Exponential-and-logarithm-functions }
 @ctindex  Simplification flags and variables  @subentry  lognegint
-@category{Simplification flags and variables}
+@cat2{ Simplification flags and variables ,  Simplification-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -2173,9 +2173,9 @@ power containing @code{log}'s is done.
 
 @opencatbox{Categories:}
 @ctindex  Exponential and logarithm functions  @subentry  logsimp
-@category{Exponential and logarithm functions}
+@cat2{ Exponential and logarithm functions ,  Exponential-and-logarithm-functions }
 @ctindex  Simplification flags and variables  @subentry  logsimp
-@category{Simplification flags and variables}
+@cat2{ Simplification flags and variables ,  Simplification-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -2188,9 +2188,9 @@ logarithm with @code{-%pi < carg(@var{x}) <= +%pi} .
 
 @opencatbox{Categories:}
 @ctindex  Exponential and logarithm functions  @subentry  plog
-@category{Exponential and logarithm functions}
+@cat2{ Exponential and logarithm functions ,  Exponential-and-logarithm-functions }
 @ctindex  Complex variables  @subentry  plog
-@category{Complex variables}
+@cat2{ Complex variables ,  Complex-variables }
 @closecatbox
 @end deffn
 
@@ -2203,7 +2203,7 @@ The square root of @var{x}.  It is represented internally by
 
 @opencatbox{Categories:}
 @ctindex  Mathematical functions  @subentry  sqrt
-@category{Mathematical functions}
+@cat2{ Mathematical functions ,  Mathematical-functions }
 @closecatbox
 @end deffn
 
@@ -2241,7 +2241,7 @@ for details.
 
 @opencatbox{Categories:}
 @ctindex  Trigonometric functions  @subentry  Introduction to Trigonometric
-@category{Trigonometric functions}
+@cat2{ Trigonometric functions ,  Trigonometric-functions }
 @closecatbox
 
 @c -----------------------------------------------------------------------------
@@ -2347,9 +2347,9 @@ an integer variable.
 
 @opencatbox{Categories:}
 @ctindex  Trigonometric functions  @subentry  %piargs
-@category{Trigonometric functions}
+@cat2{ Trigonometric functions ,  Trigonometric-functions }
 @ctindex  Simplification flags and variables  @subentry  %piargs
-@category{Simplification flags and variables}
+@cat2{ Simplification flags and variables ,  Simplification-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -2417,11 +2417,11 @@ Even when the argument is demonstrably real, the simplification is applied.
 
 @opencatbox{Categories:}
 @ctindex  Trigonometric functions  @subentry  %iargs
-@category{Trigonometric functions}
+@cat2{ Trigonometric functions ,  Trigonometric-functions }
 @ctindex  Hyperbolic functions  @subentry  %iargs
-@category{Hyperbolic functions}
+@cat2{ Hyperbolic functions ,  Hyperbolic-functions }
 @ctindex  Simplification flags and variables  @subentry  %iargs
-@category{Simplification flags and variables}
+@cat2{ Simplification flags and variables ,  Simplification-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -2433,7 +2433,7 @@ Even when the argument is demonstrably real, the simplification is applied.
 
 @opencatbox{Categories:}
 @ctindex  Trigonometric functions  @subentry  acos
-@category{Trigonometric functions}
+@cat2{ Trigonometric functions ,  Trigonometric-functions }
 @closecatbox
 @end deffn
 
@@ -2445,7 +2445,7 @@ Even when the argument is demonstrably real, the simplification is applied.
 
 @opencatbox{Categories:}
 @ctindex  Hyperbolic functions  @subentry  acosh
-@category{Hyperbolic functions}
+@cat2{ Hyperbolic functions ,  Hyperbolic-functions }
 @closecatbox
 @end deffn
 
@@ -2457,7 +2457,7 @@ Even when the argument is demonstrably real, the simplification is applied.
 
 @opencatbox{Categories:}
 @ctindex  Trigonometric functions  @subentry  acot
-@category{Trigonometric functions}
+@cat2{ Trigonometric functions ,  Trigonometric-functions }
 @closecatbox
 @end deffn
 
@@ -2469,7 +2469,7 @@ Even when the argument is demonstrably real, the simplification is applied.
 
 @opencatbox{Categories:}
 @ctindex  Hyperbolic functions  @subentry  acoth
-@category{Hyperbolic functions}
+@cat2{ Hyperbolic functions ,  Hyperbolic-functions }
 @closecatbox
 @end deffn
 
@@ -2481,7 +2481,7 @@ Even when the argument is demonstrably real, the simplification is applied.
 
 @opencatbox{Categories:}
 @ctindex  Trigonometric functions  @subentry  acsc
-@category{Trigonometric functions}
+@cat2{ Trigonometric functions ,  Trigonometric-functions }
 @closecatbox
 @end deffn
 
@@ -2493,7 +2493,7 @@ Even when the argument is demonstrably real, the simplification is applied.
 
 @opencatbox{Categories:}
 @ctindex  Hyperbolic functions  @subentry  acsch
-@category{Hyperbolic functions}
+@cat2{ Hyperbolic functions ,  Hyperbolic-functions }
 @closecatbox
 @end deffn
 
@@ -2505,7 +2505,7 @@ Even when the argument is demonstrably real, the simplification is applied.
 
 @opencatbox{Categories:}
 @ctindex  Trigonometric functions  @subentry  asec
-@category{Trigonometric functions}
+@cat2{ Trigonometric functions ,  Trigonometric-functions }
 @closecatbox
 @end deffn
 
@@ -2517,7 +2517,7 @@ Even when the argument is demonstrably real, the simplification is applied.
 
 @opencatbox{Categories:}
 @ctindex  Hyperbolic functions  @subentry  asech
-@category{Hyperbolic functions}
+@cat2{ Hyperbolic functions ,  Hyperbolic-functions }
 @closecatbox
 @end deffn
 
@@ -2529,7 +2529,7 @@ Even when the argument is demonstrably real, the simplification is applied.
 
 @opencatbox{Categories:}
 @ctindex  Trigonometric functions  @subentry  asin
-@category{Trigonometric functions}
+@cat2{ Trigonometric functions ,  Trigonometric-functions }
 @closecatbox
 @end deffn
 
@@ -2541,7 +2541,7 @@ Even when the argument is demonstrably real, the simplification is applied.
 
 @opencatbox{Categories:}
 @ctindex  Hyperbolic functions  @subentry  asinh
-@category{Hyperbolic functions}
+@cat2{ Hyperbolic functions ,  Hyperbolic-functions }
 @closecatbox
 @end deffn
 
@@ -2555,7 +2555,7 @@ See also @mref{atan2}.
 
 @opencatbox{Categories:}
 @ctindex  Trigonometric functions  @subentry  atan
-@category{Trigonometric functions}
+@cat2{ Trigonometric functions ,  Trigonometric-functions }
 @closecatbox
 @end deffn
 
@@ -2570,7 +2570,7 @@ See also @mref{atan}.
 
 @opencatbox{Categories:}
 @ctindex  Trigonometric functions  @subentry  atan2
-@category{Trigonometric functions}
+@cat2{ Trigonometric functions ,  Trigonometric-functions }
 @closecatbox
 @end deffn
 
@@ -2582,7 +2582,7 @@ See also @mref{atan}.
 
 @opencatbox{Categories:}
 @ctindex  Hyperbolic functions  @subentry  atanh
-@category{Hyperbolic functions}
+@cat2{ Hyperbolic functions ,  Hyperbolic-functions }
 @closecatbox
 @end deffn
 
@@ -2602,9 +2602,9 @@ Do @code{load("atrig1");} to use them.
 
 @opencatbox{Categories:}
 @ctindex  Trigonometric functions  @subentry  atrig1
-@category{Trigonometric functions}
+@cat2{ Trigonometric functions ,  Trigonometric-functions }
 @ctindex  Package atrig1  @subentry  atrig1
-@category{Package atrig1}
+@cat2{ Package atrig1 ,  Package-atrig1 }
 @closecatbox
 @end defvr
 
@@ -2616,7 +2616,7 @@ Do @code{load("atrig1");} to use them.
 
 @opencatbox{Categories:}
 @ctindex  Trigonometric functions  @subentry  cos
-@category{Trigonometric functions}
+@cat2{ Trigonometric functions ,  Trigonometric-functions }
 @closecatbox
 @end deffn
 
@@ -2628,7 +2628,7 @@ Do @code{load("atrig1");} to use them.
 
 @opencatbox{Categories:}
 @ctindex  Hyperbolic functions  @subentry  cosh
-@category{Hyperbolic functions}
+@cat2{ Hyperbolic functions ,  Hyperbolic-functions }
 @closecatbox
 @end deffn
 
@@ -2640,7 +2640,7 @@ Do @code{load("atrig1");} to use them.
 
 @opencatbox{Categories:}
 @ctindex  Trigonometric functions  @subentry  cot
-@category{Trigonometric functions}
+@cat2{ Trigonometric functions ,  Trigonometric-functions }
 @closecatbox
 @end deffn
 
@@ -2652,7 +2652,7 @@ Do @code{load("atrig1");} to use them.
 
 @opencatbox{Categories:}
 @ctindex  Hyperbolic functions  @subentry  coth
-@category{Hyperbolic functions}
+@cat2{ Hyperbolic functions ,  Hyperbolic-functions }
 @closecatbox
 @end deffn
 
@@ -2664,7 +2664,7 @@ Do @code{load("atrig1");} to use them.
 
 @opencatbox{Categories:}
 @ctindex  Trigonometric functions  @subentry  csc
-@category{Trigonometric functions}
+@cat2{ Trigonometric functions ,  Trigonometric-functions }
 @closecatbox
 @end deffn
 
@@ -2676,7 +2676,7 @@ Do @code{load("atrig1");} to use them.
 
 @opencatbox{Categories:}
 @ctindex  Hyperbolic functions  @subentry  csch
-@category{Hyperbolic functions}
+@cat2{ Hyperbolic functions ,  Hyperbolic-functions }
 @closecatbox
 @end deffn
 
@@ -2755,9 +2755,9 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Trigonometric functions  @subentry  halfangles
-@category{Trigonometric functions}
+@cat2{ Trigonometric functions ,  Trigonometric-functions }
 @ctindex  Simplification flags and variables  @subentry  halfangles
-@category{Simplification flags and variables}
+@cat2{ Simplification flags and variables ,  Simplification-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -2775,9 +2775,9 @@ used to simplify trigonometric function whose arguments are of the form
 
 @opencatbox{Categories:}
 @ctindex  Trigonometric functions  @subentry  ntrig
-@category{Trigonometric functions}
+@cat2{ Trigonometric functions ,  Trigonometric-functions }
 @ctindex  Package ntrig  @subentry  ntrig
-@category{Package ntrig}
+@cat2{ Package ntrig ,  Package-ntrig }
 @closecatbox
 @end defvr
 
@@ -2789,7 +2789,7 @@ used to simplify trigonometric function whose arguments are of the form
 
 @opencatbox{Categories:}
 @ctindex  Trigonometric functions  @subentry  sec
-@category{Trigonometric functions}
+@cat2{ Trigonometric functions ,  Trigonometric-functions }
 @closecatbox
 @end deffn
 
@@ -2801,7 +2801,7 @@ used to simplify trigonometric function whose arguments are of the form
 
 @opencatbox{Categories:}
 @ctindex  Hyperbolic functions  @subentry  sech
-@category{Hyperbolic functions}
+@cat2{ Hyperbolic functions ,  Hyperbolic-functions }
 @closecatbox
 @end deffn
 
@@ -2813,7 +2813,7 @@ used to simplify trigonometric function whose arguments are of the form
 
 @opencatbox{Categories:}
 @ctindex  Trigonometric functions  @subentry  sin
-@category{Trigonometric functions}
+@cat2{ Trigonometric functions ,  Trigonometric-functions }
 @closecatbox
 @end deffn
 
@@ -2825,7 +2825,7 @@ used to simplify trigonometric function whose arguments are of the form
 
 @opencatbox{Categories:}
 @ctindex  Hyperbolic functions  @subentry  sinh
-@category{Hyperbolic functions}
+@cat2{ Hyperbolic functions ,  Hyperbolic-functions }
 @closecatbox
 @end deffn
 
@@ -2837,7 +2837,7 @@ used to simplify trigonometric function whose arguments are of the form
 
 @opencatbox{Categories:}
 @ctindex  Trigonometric functions  @subentry  tan
-@category{Trigonometric functions}
+@cat2{ Trigonometric functions ,  Trigonometric-functions }
 @closecatbox
 @end deffn
 
@@ -2849,7 +2849,7 @@ used to simplify trigonometric function whose arguments are of the form
 
 @opencatbox{Categories:}
 @ctindex  Hyperbolic functions  @subentry  tanh
-@category{Hyperbolic functions}
+@cat2{ Hyperbolic functions ,  Hyperbolic-functions }
 @closecatbox
 @end deffn
 
@@ -2905,9 +2905,9 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Trigonometric functions  @subentry  trigexpand
-@category{Trigonometric functions}
+@cat2{ Trigonometric functions ,  Trigonometric-functions }
 @ctindex  Simplification functions  @subentry  trigexpand
-@category{Simplification functions}
+@cat2{ Simplification functions ,  Simplification-functions }
 @closecatbox
 @end deffn
 
@@ -2924,9 +2924,9 @@ Default value: @code{true}
 
 @opencatbox{Categories:}
 @ctindex  Trigonometric functions  @subentry  trigexpandplus
-@category{Trigonometric functions}
+@cat2{ Trigonometric functions ,  Trigonometric-functions }
 @ctindex  Simplification flags and variables  @subentry  trigexpandplus
-@category{Simplification flags and variables}
+@cat2{ Simplification flags and variables ,  Simplification-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -2942,9 +2942,9 @@ will take place only if @code{trigexpandtimes} is @code{true}.
 
 @opencatbox{Categories:}
 @ctindex  Trigonometric functions  @subentry  trigexpandtimes
-@category{Trigonometric functions}
+@cat2{ Trigonometric functions ,  Trigonometric-functions }
 @ctindex  Simplification flags and variables  @subentry  trigexpandtimes
-@category{Simplification flags and variables}
+@cat2{ Simplification flags and variables ,  Simplification-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -2970,9 +2970,9 @@ simplifications are turned off.
 
 @opencatbox{Categories:}
 @ctindex  Trigonometric functions  @subentry  triginverses
-@category{Trigonometric functions}
+@cat2{ Trigonometric functions ,  Trigonometric-functions }
 @ctindex  Simplification flags and variables  @subentry  triginverses
-@category{Simplification flags and variables}
+@cat2{ Simplification flags and variables ,  Simplification-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -3026,9 +3026,9 @@ See also @mref{poissimp}.
 
 @opencatbox{Categories:}
 @ctindex  Trigonometric functions  @subentry  trigreduce
-@category{Trigonometric functions}
+@cat2{ Trigonometric functions ,  Trigonometric-functions }
 @ctindex  Simplification functions  @subentry  trigreduce
-@category{Simplification functions}
+@cat2{ Simplification functions ,  Simplification-functions }
 @closecatbox
 @end deffn
 
@@ -3043,9 +3043,9 @@ arguments to trigonometric functions.  E.g., @code{sin(-x)} will become
 
 @opencatbox{Categories:}
 @ctindex  Trigonometric functions  @subentry  trigsign
-@category{Trigonometric functions}
+@cat2{ Trigonometric functions ,  Trigonometric-functions }
 @ctindex  Simplification flags and variables  @subentry  trigsign
-@category{Simplification flags and variables}
+@cat2{ Simplification flags and variables ,  Simplification-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -3079,9 +3079,9 @@ able to further simplify the result.
 
 @opencatbox{Categories:}
 @ctindex  Trigonometric functions  @subentry  trigsimp
-@category{Trigonometric functions}
+@cat2{ Trigonometric functions ,  Trigonometric-functions }
 @ctindex  Simplification functions  @subentry  trigsimp
-@category{Simplification functions}
+@cat2{ Simplification functions ,  Simplification-functions }
 @closecatbox
 @end deffn
 
@@ -3176,9 +3176,9 @@ Addison-Wesley), section 1.5.5, Morley theorem.
 
 @opencatbox{Categories:}
 @ctindex  Trigonometric functions  @subentry  trigrat
-@category{Trigonometric functions}
+@cat2{ Trigonometric functions ,  Trigonometric-functions }
 @ctindex  Simplification functions  @subentry  trigrat
-@category{Simplification functions}
+@cat2{ Simplification functions ,  Simplification-functions }
 @closecatbox
 @end deffn
 
@@ -3220,7 +3220,7 @@ of the random number generator.
 
 @opencatbox{Categories:}
 @ctindex  Random numbers  @subentry  make_random_state
-@category{Random numbers}
+@cat2{ Random numbers ,  Random-numbers }
 @closecatbox
 @end deffn
 
@@ -3234,7 +3234,7 @@ Copies @var{s} to the random number generator state.
 
 @opencatbox{Categories:}
 @ctindex  Random numbers  @subentry  set_random_state
-@category{Random numbers}
+@cat2{ Random numbers ,  Random-numbers }
 @closecatbox
 @end deffn
 
@@ -3323,9 +3323,9 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Random numbers  @subentry  random
-@category{Random numbers}
+@cat2{ Random numbers ,  Random-numbers }
 @ctindex  Numerical methods  @subentry  random
-@category{Numerical methods}
+@cat2{ Numerical methods ,  Numerical-methods }
 @closecatbox
 @end deffn
 
