--- a/doc/info/Miscellaneous.texi
+++ b/doc/info/Miscellaneous.texi
@@ -52,7 +52,7 @@ by entering a Maxima break with control-A.
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  askexp
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end defvr
 
@@ -66,7 +66,7 @@ next variable of summation when necessary.
 
 @opencatbox{Categories:}
 @ctindex  Sums and products  @subentry  genindex
-@category{Sums and products}
+@cat2{ Sums and products ,  Sums-and-products }
 @closecatbox
 @end defvr
 
@@ -80,7 +80,7 @@ of @code{genindex} with no numeric suffix.
 
 @opencatbox{Categories:}
 @ctindex  Sums and products  @subentry  gensumnum
-@category{Sums and products}
+@cat2{ Sums and products ,  Sums-and-products }
 @closecatbox
 @end defvr
 
@@ -142,7 +142,7 @@ creating Maxima init files.
 
 @opencatbox{Categories:}
 @ctindex  Translation flags and variables  @subentry  packagefile
-@category{Translation flags and variables}
+@cat2{ Translation flags and variables ,  Translation-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -166,7 +166,7 @@ See also @mrefdot{values}
 
 @opencatbox{Categories:}
 @ctindex  Evaluation  @subentry  remvalue
-@category{Evaluation}
+@cat2{ Evaluation ,  Evaluation }
 @closecatbox
 @end deffn
 
@@ -191,7 +191,7 @@ cancellations.
 
 @opencatbox{Categories:}
 @ctindex  Expressions  @subentry  rncombine
-@category{Expressions}
+@cat2{ Expressions ,  Expressions }
 @closecatbox
 @end deffn
 
@@ -240,9 +240,9 @@ Warning - you are redefining the Macsyma function legendre_p
 
 @opencatbox{Categories:}
 @ctindex  Function definition  @subentry  setup_autoload
-@category{Function definition}
+@cat2{ Function definition ,  Function-definition }
 @ctindex  File input  @subentry  setup_autoload
-@category{File input}
+@cat2{ File input ,  File-input }
 @closecatbox
 @end deffn
 
