--- a/doc/info/Number.texi
+++ b/doc/info/Number.texi
@@ -34,7 +34,7 @@ See also @mrefdot{burn}
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  bern
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -47,7 +47,7 @@ variable @var{x}.
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  bernpoly
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -61,9 +61,9 @@ The return value is a big float (bfloat);
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  bfzeta
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @ctindex  Numerical evaluation  @subentry  bfzeta
-@category{Numerical evaluation}
+@cat2{ Numerical evaluation ,  Numerical-evaluation }
 @closecatbox
 @end deffn
 
@@ -96,9 +96,9 @@ $$\zeta \left(s,h\right) = \sum_{k=0}^\infty {1 \over \left(k+h\right)^{s}}$$
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  bfhzeta
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @ctindex  Numerical evaluation  @subentry  bfhzeta
-@category{Numerical evaluation}
+@cat2{ Numerical evaluation ,  Numerical-evaluation }
 @closecatbox
 @end deffn
 
@@ -128,7 +128,7 @@ returning.  @code{burn} invokes the approximation for even integers @code{n >
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  burn
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -159,7 +159,7 @@ positive and pairwise coprime integers.
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  chinese
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -251,7 +251,7 @@ Maxima does not know about operations on continued fractions outside of
 
 @opencatbox{Categories:}
 @ctindex  Continued fractions  @subentry  cf
-@category{Continued fractions}
+@cat2{ Continued fractions ,  Continued-fractions }
 @closecatbox
 @end deffn
 
@@ -281,7 +281,7 @@ from the list representation of a continued fraction @code{[a, b, c, ...]}.
 
 @opencatbox{Categories:}
 @ctindex  Continued fractions  @subentry  cfdisrep
-@category{Continued fractions}
+@cat2{ Continued fractions ,  Continued-fractions }
 @closecatbox
 @end deffn
 
@@ -307,7 +307,7 @@ next-to-last (column 2) convergents of the continued fraction @var{x}.
 
 @opencatbox{Categories:}
 @ctindex  Continued fractions  @subentry  cfexpand
-@category{Continued fractions}
+@cat2{ Continued fractions ,  Continued-fractions }
 @closecatbox
 @end deffn
 
@@ -334,7 +334,7 @@ Thus the default is to give one period.
 
 @opencatbox{Categories:}
 @ctindex  Continued fractions  @subentry  cflength
-@category{Continued fractions}
+@cat2{ Continued fractions ,  Continued-fractions }
 @closecatbox
 @end defvr
 
@@ -362,7 +362,7 @@ raised to the @var{k}'th power.
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  divsum
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -387,7 +387,7 @@ For the Euler-Mascheroni constant, see @code{%gamma}.
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  euler
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -405,7 +405,7 @@ Example: See @mrefdot{ifactors}
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  factors_only
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end defvr
 
@@ -428,7 +428,7 @@ the Fibonacci number preceding the last one computed.
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  fib
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -470,7 +470,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  fibtophi
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -506,7 +506,7 @@ prime factors.
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  ifactors
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -538,7 +538,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  igcdex
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -556,7 +556,7 @@ Returns the integer @var{n}'th root of the absolute value of @var{x}.
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  inrt
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -579,7 +579,7 @@ if @var{n} is a zero divisor modulo @var{m}.
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  inv_mod
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -592,7 +592,7 @@ integer.
 
 @opencatbox{Categories:}
 @ctindex  Mathematical functions  @subentry  isqrt
-@category{Mathematical functions}
+@cat2{ Mathematical functions ,  Mathematical-functions }
 @closecatbox
 @end deffn
 
@@ -610,7 +610,7 @@ Returns the Jacobi symbol of @var{p} and @var{q}.
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  jacobi
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -625,7 +625,7 @@ The arguments may be general expressions as well as integers.
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  lcm
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -659,7 +659,7 @@ how Fibonacci numbers can be computed via @code{lucas} and @code{next_lucas}.
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  lucas
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -704,7 +704,7 @@ simplification rules:
 
 @opencatbox{Categories:}
 @ctindex  Mathematical functions  @subentry  mod
-@category{Mathematical functions}
+@cat2{ Mathematical functions ,  Mathematical-functions }
 @closecatbox
 @end deffn
 
@@ -721,7 +721,7 @@ Returns the smallest prime bigger than @var{n}.
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  next_prime
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -780,7 +780,7 @@ If @var{n} is negative, @code{inv_mod} is used to find the modular inverse.
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  power_mod
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -805,9 +805,9 @@ composite is much smaller that 10^-15.
 
 @opencatbox{Categories:}
 @ctindex  Predicate functions  @subentry  primep
-@category{Predicate functions}
+@cat2{ Predicate functions ,  Predicate-functions }
 @ctindex  Number theory  @subentry  primep
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -820,7 +820,7 @@ Number of Miller-Rabin's tests used in @code{primep}.
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  primep_number_of_tests
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end defvr
 
@@ -837,7 +837,7 @@ Returns the list of all primes from @var{start} to @var{end}.
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  primes
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -854,7 +854,7 @@ Returns the greatest prime smaller than @var{n}.
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  prev_prime
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -876,7 +876,7 @@ This amounts to solving Pell's equation @code{a^2 - @var{n} b^2 = 1}.
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  qunit
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -889,7 +889,7 @@ are relatively prime to @var{n}.
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  totient
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -903,7 +903,7 @@ See @code{bern} and @code{euler}.
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  zerobern
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end defvr
 
@@ -949,7 +949,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  zeta
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -984,7 +984,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  zeta%pi
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end defvr
 
@@ -998,7 +998,7 @@ See also @mrefcomma{zn_mult_table}  @mrefdot{zn_power_table}
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  zn_add_table
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -1085,7 +1085,7 @@ and each of these has @code{2^2} square roots.
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  zn_characteristic_factors
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -1100,7 +1100,7 @@ For remarks and examples see @mrefdot{zn_characteristic_factors}
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  zn_carmichael_lambda
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -1138,7 +1138,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  zn_determinant
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -1153,7 +1153,7 @@ For remarks and examples see @mrefdot{zn_characteristic_factors}
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  zn_factor_generators
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -1189,7 +1189,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  zn_invert_by_lu
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -1270,7 +1270,7 @@ The running time primarily depends on the bitlength of the totient's greatest pr
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  zn_log
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -1385,7 +1385,7 @@ the top left corner, just like in table @code{T9}.
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  zn_mult_table
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -1509,7 +1509,7 @@ and passed as the fourth argument.
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  zn_nth_root
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -1569,7 +1569,7 @@ The optional third argument must be of the same form as the list returned by
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  zn_order
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -1673,7 +1673,7 @@ The following table shows a very small example of RSA.
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  zn_power_table
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -1741,7 +1741,7 @@ The optional second argument must be of the same form as the list returned by
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  zn_primroot
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -1756,7 +1756,7 @@ set to @code{true}, a message will be printed when @code{zn_primroot_limit} is r
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  zn_primroot_limit
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end defvr
 
@@ -1808,9 +1808,9 @@ The optional third argument must be of the same form as the list returned by
 
 @opencatbox{Categories:}
 @ctindex  Predicate functions  @subentry  zn_primroot_p
-@category{Predicate functions}
+@cat2{ Predicate functions ,  Predicate-functions }
 @ctindex  Number theory  @subentry  zn_primroot_p
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end deffn
 
@@ -1830,7 +1830,7 @@ performed.
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  zn_primroot_pretest
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end defvr
 
@@ -1844,7 +1844,7 @@ Controls whether @mref{zn_primroot} prints a message when reaching
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  zn_primroot_verbose
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @closecatbox
 @end defvr
 
