--- a/doc/info/Plotting.texi
+++ b/doc/info/Plotting.texi
@@ -61,7 +61,7 @@ those two packages.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  Introduction to Plotting
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 
 @c -----------------------------------------------------------------------------
@@ -146,7 +146,7 @@ format, the geomview program must be installed.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  Plotting Formats
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 
 @c -----------------------------------------------------------------------------
@@ -173,7 +173,7 @@ you may change the value of this variable. For instance,
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  geomview_command
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -210,7 +210,7 @@ variable. For instance,
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  gnuplot_command
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -229,7 +229,7 @@ options before the format directive "~s".
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  gnuplot_file_args
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -270,7 +270,7 @@ of @code{gnuplot_view_args}.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  gnuplot_view_args
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -322,9 +322,9 @@ corresponding the maximum 36 iterations would not be black.
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  julia
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  julia
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 
 @end deffn
@@ -346,7 +346,7 @@ for those two transformations.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  make_transform
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end deffn
 
@@ -393,9 +393,9 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  mandelbrot
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  mandelbrot
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 
 @end deffn
@@ -411,7 +411,7 @@ coordinates), and transform them into x and y coordinates.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  polar_to_xy
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end deffn
 
@@ -741,7 +741,7 @@ See also the section about Plotting Options.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  plot2d
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end deffn
 
@@ -965,7 +965,7 @@ See also @mrefdot{Plotting Options}
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  plot3d
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end deffn
 
@@ -980,7 +980,7 @@ values or remove options, use @mrefcomma{set_plot_option}
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  plot_options
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -995,7 +995,7 @@ See also @mrefcomma{set_plot_option} @mref{get_plot_option} and
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  remove_plot_option
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end deffn
 @c -----------------------------------------------------------------------------
@@ -1034,7 +1034,7 @@ red, brown, black]], [gnuplot_preamble, ], [gnuplot_term, default]]
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  set_plot_option
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end deffn
 
@@ -1051,7 +1051,7 @@ transform them into x, y and z coordinates.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  spherical_to_xyz
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end deffn
 
@@ -1093,7 +1093,7 @@ of @code{plot2d}.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1115,7 +1115,7 @@ synonyms for @code{[axes, true]} and @code{[axes, false]}.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  axes @
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1136,7 +1136,7 @@ See also @mrefdot{elevation}
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1153,7 +1153,7 @@ synonyms for @code{[box, true]} and @code{[box, false]}.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ], box, nobox
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1176,7 +1176,7 @@ will be used instead.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1196,7 +1196,7 @@ as synonyms for @code{[color_bar, true]} and @code{[color_bar, false]}.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ], color_bar, @
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1217,7 +1217,7 @@ tics on the color bar.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  , @
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1238,7 +1238,7 @@ See also @mrefdot{azimuth}
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1255,7 +1255,7 @@ For a way to actually draw a grid See @mrefdot{grid2d}
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1275,7 +1275,7 @@ See also @mrefdot{grid}
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ], grid2d, nogrid2d
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1289,7 +1289,7 @@ Number of iterations made by the programs mandelbrot and julia.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1302,7 +1302,7 @@ coordinates indicated after each label.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1322,7 +1322,7 @@ leaving it to the plotting program to set up a legend. The keyword
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  , @
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1345,7 +1345,7 @@ values of the expression plotted, if they exist within the domain used.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ] 
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1361,7 +1361,7 @@ used as synonyms for @code{[logx, true]} and @code{[logx, false]}.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ], logx, nologx
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1378,7 +1378,7 @@ synonyms for @code{[logy, true]} and @code{[logy, false]}.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ], logy, nology
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1400,7 +1400,7 @@ to use. The keyword @code{no_mesh_lines} is a synonym for
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ], @
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1417,7 +1417,7 @@ it sets the number of points that will be shown for the plot.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1456,7 +1456,7 @@ and @code{nopalette} is a synonym for @code{[palette, false]}.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  palette @
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1479,7 +1479,7 @@ therefore, as being part of the curve to be plotted.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1498,7 +1498,7 @@ It sets the format to be used for plotting as explained in
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1523,7 +1523,7 @@ is a synonym for @code{[plot_realpart, false]}.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ], @
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1543,7 +1543,7 @@ The possible objects that can be used are: @code{bullet}, @code{circle},
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  , @
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1565,7 +1565,7 @@ size of 17.2 cm by 12.9 cm and font of 18 points.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1586,7 +1586,7 @@ will be used, with a font of size 12.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1608,7 +1608,7 @@ size of 16.4 cm by 12.3 cm and font of 24 points.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1644,7 +1644,7 @@ false]}.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ], run_viewer, @
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1659,7 +1659,7 @@ axes will be the same, in either 2d or 3d plots. See also
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ], same_xy, nosame_xy
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1673,7 +1673,7 @@ synonyms for @code{[same_xyz, true]} and @code{[same_xyz, false]}.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ], same_xyz, nosame_xyz
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1697,7 +1697,7 @@ increasing @var{nx} and @var{ny}.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1741,7 +1741,7 @@ See also @mref{color} and @mrefdot{point_type}
  
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  style @
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1762,7 +1762,7 @@ will be used with font of 14 points.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1774,7 +1774,7 @@ Default range for parametric plots.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1786,7 +1786,7 @@ Defines a title that will be written at the top of the plot.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1805,7 +1805,7 @@ See @mrefcomma{make_transform} @mref{polar_to_xy} and
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ], notransform_xy
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1819,7 +1819,7 @@ will be replaced by the current plot.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1836,7 +1836,7 @@ horizontal domain that will be shown in the plot.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1852,7 +1852,7 @@ expression in the case of a parametric plot.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1875,7 +1875,7 @@ and @code{noxtics} is a synonym for @code{[xtics, false]}
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ], @
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1894,7 +1894,7 @@ plot, it is better to use option @mrefdot{yx_ratio} For instance,
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1909,7 +1909,7 @@ shown in the plot.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1925,7 +1925,7 @@ case of a parametric plot.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1948,7 +1948,7 @@ and @code{noytics} is a synonym for @code{[ytics, false]}
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ], @
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1961,7 +1961,7 @@ the rectangle used to make the plot. See also @mrefdot{same_xy}
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1974,7 +1974,7 @@ shown in the plot.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1990,7 +1990,7 @@ ignored by @mrefdot{plot2d}
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -2005,7 +2005,7 @@ defined, leaving it to the graphic program to decide the value to use.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ], zmin
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -2028,7 +2028,7 @@ and @code{noztics} is a synonym for @code{[ztics, false]}
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ], @
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -2096,7 +2096,7 @@ name.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -2122,7 +2122,7 @@ or @mrefdot{svg_file}
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -2175,7 +2175,7 @@ directory rather than in the temporary directory.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -2188,7 +2188,7 @@ mode, which is enabled by default.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -2202,7 +2202,7 @@ be separated with a semi-colon. See also @mrefdot{gnuplot_postamble}
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -2217,7 +2217,7 @@ semi-colon. See also @mrefdot{gnuplot_preamble}
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -2231,7 +2231,7 @@ terminal. It this option is not set, the command used will be: @code{"set term w
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  gnuplot_default_term_command
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -2246,7 +2246,7 @@ this option is not set, the command used will be: @code{"set term dumb
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  gnuplot_dumb_term_command
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -2259,7 +2259,7 @@ terminal.  If this option is not set, the command used will be: @code{"set term 
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -2274,7 +2274,7 @@ for more information.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -2288,7 +2288,7 @@ more information.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -2306,7 +2306,7 @@ not treat any characters as formatting characters.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -2321,7 +2321,7 @@ more information.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -2334,7 +2334,7 @@ above.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  gnuplot_curve_titles
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -2346,7 +2346,7 @@ This is an obsolete option that has been replaced by @mrefdot{style}
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  gnuplot_curve_styles
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -2364,7 +2364,7 @@ format.  Is not necessary to manually open the pipe before plotting.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  gnuplot_start
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end deffn
 
@@ -2376,7 +2376,7 @@ Closes the pipe to gnuplot which is used with the @code{gnuplot_pipes} format.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  gnuplot_close
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end deffn
 
@@ -2390,7 +2390,7 @@ string.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  gnuplot_send
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end deffn
 
@@ -2403,7 +2403,7 @@ format and opens a new pipe.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  gnuplot_restart
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end deffn
 
@@ -2419,7 +2419,7 @@ before reploting the window.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  gnuplot_replot
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end deffn
 
@@ -2432,7 +2432,7 @@ update the gnuplot window call @mref{gnuplot_replot} after @code{gnuplot_reset}.
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  gnuplot_reset
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end deffn
 
