--- a/doc/info/Runtime.texi
+++ b/doc/info/Runtime.texi
@@ -36,7 +36,7 @@ other Maxima statements.
 
 @opencatbox{Categories:}
 @ctindex  Session management  @subentry  Introduction for Runtime Environment
-@category{Session management}
+@cat2{ Session management ,  Session-management }
 @closecatbox
 
 @c -----------------------------------------------------------------------------
@@ -72,7 +72,7 @@ to resume from the point at which it was stopped.
 
 @opencatbox{Categories:}
 @ctindex  Console interaction  @subentry  Interrupts
-@category{Console interaction}
+@cat2{ Console interaction ,  Console-interaction }
 @closecatbox
 
 @c end concepts Runtime Environment
@@ -97,7 +97,7 @@ Maxima can locate it; otherwise Maxima makes a guess about a suitable directory.
 
 @opencatbox{Categories:}
 @ctindex  Global variables  @subentry  maxima_tempdir
-@category{Global variables}
+@cat2{ Global variables ,  Global-variables }
 @closecatbox
 @end defvr
 
@@ -120,7 +120,7 @@ those variables must be changed separately.
 
 @opencatbox{Categories:}
 @ctindex  Global variables  @subentry  maxima_userdir
-@category{Global variables}
+@cat2{ Global variables ,  Global-variables }
 @closecatbox
 @end defvr
 
@@ -146,7 +146,7 @@ the same name.
 
 @opencatbox{Categories:}
 @ctindex  Debugging  @subentry  room
-@category{Debugging}
+@cat2{ Debugging ,  Debugging }
 @closecatbox
 @end deffn
 
@@ -165,7 +165,7 @@ See also @mrefdot{status}
 
 @opencatbox{Categories:}
 @ctindex  Programming  @subentry  sstatus
-@category{Programming}
+@cat2{ Programming ,  Programming }
 @closecatbox
 @end deffn
 
@@ -201,7 +201,7 @@ information.
 
 @opencatbox{Categories:}
 @ctindex  Programming  @subentry  status
-@category{Programming}
+@cat2{ Programming ,  Programming }
 @closecatbox
 @end deffn
 
@@ -248,7 +248,7 @@ and elapsed time with each output line.
 
 @opencatbox{Categories:}
 @ctindex  Debugging  @subentry  time
-@category{Debugging}
+@cat2{ Debugging ,  Debugging }
 @closecatbox
 @end deffn
 
@@ -321,7 +321,7 @@ timedate reports current time 2010-06-08 04:08:09+01:00
 
 @opencatbox{Categories:}
 @ctindex  Time and date functions  @subentry  timedate
-@category{Time and date functions}
+@cat2{ Time and date functions ,  Time-and-date-functions }
 @closecatbox
 @end deffn
 
@@ -447,7 +447,7 @@ Midnight, January 1, 1900, GMT, in different indicated time zones.
 
 @opencatbox{Categories:}
 @ctindex  Time and date functions  @subentry  parse_timedate
-@category{Time and date functions}
+@cat2{ Time and date functions ,  Time-and-date-functions }
 @closecatbox
 @end deffn
 
@@ -522,7 +522,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Time and date functions  @subentry  encode_time
-@category{Time and date functions}
+@cat2{ Time and date functions ,  Time-and-date-functions }
 @closecatbox
 @end deffn
 
@@ -580,7 +580,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Time and date functions  @subentry  decode_time
-@category{Time and date functions}
+@cat2{ Time and date functions ,  Time-and-date-functions }
 @closecatbox
 @end deffn
 
@@ -608,7 +608,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Time and date functions  @subentry  absolute_real_time
-@category{Time and date functions}
+@cat2{ Time and date functions ,  Time-and-date-functions }
 @closecatbox
 @end deffn
 
@@ -639,7 +639,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Time and date functions  @subentry  elapsed_real_time
-@category{Time and date functions}
+@cat2{ Time and date functions ,  Time-and-date-functions }
 @closecatbox
 @end deffn
 
@@ -670,7 +670,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Time and date functions  @subentry  elapsed_run_time
-@category{Time and date functions}
+@cat2{ Time and date functions ,  Time-and-date-functions }
 @closecatbox
 @end deffn
 
