--- a/doc/info/Series.texi
+++ b/doc/info/Series.texi
@@ -25,7 +25,7 @@ with summations or products.  The form of the unique index is
 
 @opencatbox{Categories:}
 @ctindex  Sums and products  @subentry  bashindices
-@category{Sums and products}
+@cat2{ Sums and products ,  Sums-and-products }
 @closecatbox
 @end deffn
 
@@ -61,7 +61,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Sums and products  @subentry  lsum
-@category{Sums and products}
+@cat2{ Sums and products ,  Sums-and-products }
 @closecatbox
 @end deffn
 
@@ -84,7 +84,7 @@ the @code{intosum}.
 
 @opencatbox{Categories:}
 @ctindex  Expressions  @subentry  intosum
-@category{Expressions}
+@cat2{ Expressions ,  Expressions }
 @closecatbox
 @end deffn
 
@@ -101,9 +101,9 @@ in mathematics.
 
 @opencatbox{Categories:}
 @ctindex  Sums and products  @subentry  simpproduct
-@category{Sums and products}
+@cat2{ Sums and products ,  Sums-and-products }
 @ctindex  Simplification flags and variables  @subentry  simpproduct
-@category{Simplification flags and variables}
+@cat2{ Simplification flags and variables ,  Simplification-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -184,7 +184,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Sums and products  @subentry  product
-@category{Sums and products}
+@cat2{ Sums and products ,  Sums-and-products }
 @closecatbox
 @end deffn
 
@@ -203,9 +203,9 @@ in mathematics.
 
 @opencatbox{Categories:}
 @ctindex  Sums and products  @subentry  simpsum
-@category{Sums and products}
+@cat2{ Sums and products ,  Sums-and-products }
 @ctindex  Simplification flags and variables  @subentry  simpsum
-@category{Simplification flags and variables}
+@cat2{ Simplification flags and variables ,  Simplification-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -331,7 +331,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Sums and products  @subentry  sum
-@category{Sums and products}
+@cat2{ Sums and products ,  Sums-and-products }
 @closecatbox
 @end deffn
 
@@ -355,7 +355,7 @@ It may be necessary to do an @code{intosum (@var{expr})} before the
 
 @opencatbox{Categories:}
 @ctindex  Sums and products  @subentry  sumcontract
-@category{Sums and products}
+@cat2{ Sums and products ,  Sums-and-products }
 @closecatbox
 @end deffn
 
@@ -395,9 +395,9 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Sums and products  @subentry  sumexpand
-@category{Sums and products}
+@cat2{ Sums and products ,  Sums-and-products }
 @ctindex  Simplification flags and variables  @subentry  sumexpand
-@category{Simplification flags and variables}
+@cat2{ Simplification flags and variables ,  Simplification-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -472,7 +472,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Sums and products  @subentry  cauchysum
-@category{Sums and products}
+@cat2{ Sums and products ,  Sums-and-products }
 @closecatbox
 @end defvr
 
@@ -513,7 +513,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Power series  @subentry  deftaylor
-@category{Power series}
+@cat2{ Power series ,  Power-series }
 @closecatbox
 @end deffn
 
@@ -529,7 +529,7 @@ as many terms as are known to be correct.
 
 @opencatbox{Categories:}
 @ctindex  Power series  @subentry  maxtayorder
-@category{Power series}
+@cat2{ Power series ,  Power-series }
 @closecatbox
 @end defvr
 
@@ -575,7 +575,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Sums and products  @subentry  niceindices
-@category{Sums and products}
+@cat2{ Sums and products ,  Sums-and-products }
 @closecatbox
 @end deffn
 
@@ -614,7 +614,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Sums and products  @subentry  niceindicespref
-@category{Sums and products}
+@cat2{ Sums and products ,  Sums-and-products }
 @closecatbox
 @end defvr
 
@@ -677,7 +677,7 @@ Dependent equations eliminated:  (2 3)
 
 @opencatbox{Categories:}
 @ctindex  Sums and products  @subentry  nusum
-@category{Sums and products}
+@cat2{ Sums and products ,  Sums-and-products }
 @closecatbox
 @end deffn
 
@@ -755,7 +755,7 @@ in order to have enough unknown coefficients to solve.
 
 @opencatbox{Categories:}
 @ctindex  Power series  @subentry  pade
-@category{Power series}
+@cat2{ Power series ,  Power-series }
 @closecatbox
 @end deffn
 
@@ -814,7 +814,7 @@ in the first simplification we have returned:
 
 @opencatbox{Categories:}
 @ctindex  Power series  @subentry  powerseries
-@category{Power series}
+@cat2{ Power series ,  Power-series }
 @closecatbox
 @end deffn
 
@@ -837,7 +837,7 @@ then terms with the same total degree in the variables are grouped together.
 
 @opencatbox{Categories:}
 @ctindex  Display flags and variables  @subentry  psexpand
-@category{Display flags and variables}
+@cat2{ Display flags and variables ,  Display-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -889,7 +889,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Power series  @subentry  revert
-@category{Power series}
+@cat2{ Power series ,  Power-series }
 @closecatbox
 @end deffn
 
@@ -1080,7 +1080,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Power series  @subentry  taylor
-@category{Power series}
+@cat2{ Power series ,  Power-series }
 @closecatbox
 @end deffn
 
@@ -1096,7 +1096,7 @@ less than or equal to @code{@var{n} 2^taylordepth}.
 
 @opencatbox{Categories:}
 @ctindex  Power series  @subentry  taylordepth
-@category{Power series}
+@cat2{ Power series ,  Power-series }
 @closecatbox
 @end defvr
 
@@ -1132,7 +1132,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Power series  @subentry  taylorinfo
-@category{Power series}
+@cat2{ Power series ,  Power-series }
 @closecatbox
 @end deffn
 
@@ -1145,9 +1145,9 @@ and @code{false} otherwise.
 
 @opencatbox{Categories:}
 @ctindex  Predicate functions  @subentry  taylorp
-@category{Predicate functions}
+@cat2{ Predicate functions ,  Predicate-functions }
 @ctindex  Power series  @subentry  taylorp
-@category{Power series}
+@cat2{ Power series ,  Power-series }
 @closecatbox
 @end deffn
 
@@ -1172,9 +1172,9 @@ logarithms that occur is that necessary to obtain a formal power series.
 @c NEED EXAMPLES HERE
 @opencatbox{Categories:}
 @ctindex  Power series  @subentry  taylor_logexpand
-@category{Power series}
+@cat2{ Power series ,  Power-series }
 @ctindex  Exponential and logarithm functions  @subentry  taylor_logexpand
-@category{Exponential and logarithm functions}
+@cat2{ Exponential and logarithm functions ,  Exponential-and-logarithm-functions }
 @closecatbox
 @end defvr
 
@@ -1194,7 +1194,7 @@ coefficients of taylor series are ordered canonically.
 @c NEED EXAMPLES HERE
 @opencatbox{Categories:}
 @ctindex  Power series  @subentry  taylor_order_coefficients
-@category{Power series}
+@cat2{ Power series ,  Power-series }
 @closecatbox
 @end defvr
 
@@ -1207,7 +1207,7 @@ Simplifies coefficients of the power series @var{expr}.
 
 @opencatbox{Categories:}
 @ctindex  Power series  @subentry  taylor_simplifier
-@category{Power series}
+@cat2{ Power series ,  Power-series }
 @closecatbox
 @end deffn
 
@@ -1226,7 +1226,7 @@ polynomials input to @code{taylor} are considered to have infinite precision.
 
 @opencatbox{Categories:}
 @ctindex  Power series  @subentry  taylor_truncate_polynomials
-@category{Power series}
+@cat2{ Power series ,  Power-series }
 @closecatbox
 @end defvr
 
@@ -1240,9 +1240,9 @@ faster.
 
 @opencatbox{Categories:}
 @ctindex  Power series  @subentry  taytorat
-@category{Power series}
+@cat2{ Power series ,  Power-series }
 @ctindex  Rational expressions  @subentry  taytorat
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @closecatbox
 @end deffn
 
@@ -1269,7 +1269,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Power series  @subentry  trunc
-@category{Power series}
+@cat2{ Power series ,  Power-series }
 @closecatbox
 @end deffn
 
@@ -1315,7 +1315,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Sums and products  @subentry  unsum
-@category{Sums and products}
+@cat2{ Sums and products ,  Sums-and-products }
 @closecatbox
 @end deffn
 
@@ -1329,7 +1329,7 @@ When @code{verbose} is @code{true},
 
 @opencatbox{Categories:}
 @ctindex  Power series  @subentry  verbose
-@category{Power series}
+@cat2{ Power series ,  Power-series }
 @closecatbox
 @end defvr
 
@@ -1345,11 +1345,11 @@ coefficients and some functions for manipulation of expressions.
 
 @opencatbox{Categories:}
 @ctindex  Fourier transform  @subentry  Introduction to Fourier series
-@category{Fourier transform}
+@cat2{ Fourier transform ,  Fourier-transform }
 @ctindex  Share packages  @subentry  Introduction to Fourier series
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package fourie  @subentry  Introduction to Fourier series
-@category{Package fourie}
+@cat2{ Package fourie ,  Package-fourie }
 @closecatbox
 
 @c -----------------------------------------------------------------------------
@@ -1369,7 +1369,7 @@ Returns @code{true} if @code{equal (@var{x}, @var{y})} otherwise @code{false}
 @c NEEDS EXAMPLES
 @opencatbox{Categories:}
 @ctindex  Package fourie  @subentry  equalp
-@category{Package fourie}
+@cat2{ Package fourie ,  Package-fourie }
 @closecatbox
 @end deffn
 
@@ -1389,7 +1389,7 @@ the variable @var{x}.
 @c NEEDS EXAMPLES
 @opencatbox{Categories:}
 @ctindex  Package fourie  @subentry  remfun
-@category{Package fourie}
+@cat2{ Package fourie ,  Package-fourie }
 @closecatbox
 @end deffn
 
@@ -1409,7 +1409,7 @@ returns @code{true} if @var{expr} contains the function @var{f} and the variable
 @c NEEDS EXAMPLES
 @opencatbox{Categories:}
 @ctindex  Package fourie  @subentry  funp
-@category{Package fourie}
+@cat2{ Package fourie ,  Package-fourie }
 @closecatbox
 @end deffn
 
@@ -1437,9 +1437,9 @@ of @var{f} with respect to @var{x} from @var{a} to @var{b}.
 @c NEEDS EXAMPLES
 @opencatbox{Categories:}
 @ctindex  Package fourie  @subentry  absint
-@category{Package fourie}
+@cat2{ Package fourie ,  Package-fourie }
 @ctindex  Integral calculus  @subentry  absint
-@category{Integral calculus}
+@cat2{ Integral calculus ,  Integral-calculus }
 @closecatbox
 @end deffn
 
@@ -1455,7 +1455,7 @@ on the interval @code{[-p, p]}.
 @c NEEDS EXAMPLES
 @opencatbox{Categories:}
 @ctindex  Package fourie  @subentry  fourier
-@category{Package fourie}
+@cat2{ Package fourie ,  Package-fourie }
 @closecatbox
 @end deffn
 
@@ -1471,11 +1471,11 @@ Simplifies @code{sin (n %pi)} to 0 if @code{sinnpiflag} is @code{true} and
 @c NEEDS EXAMPLES
 @opencatbox{Categories:}
 @ctindex  Package fourie  @subentry  foursimp
-@category{Package fourie}
+@cat2{ Package fourie ,  Package-fourie }
 @ctindex  Trigonometric functions  @subentry  foursimp
-@category{Trigonometric functions}
+@cat2{ Trigonometric functions ,  Trigonometric-functions }
 @ctindex  Simplification functions  @subentry  foursimp
-@category{Simplification functions}
+@cat2{ Simplification functions ,  Simplification-functions }
 @closecatbox
 @end deffn
 
@@ -1488,7 +1488,7 @@ See @code{foursimp}.
 
 @opencatbox{Categories:}
 @ctindex  Package fourie  @subentry  sinnpiflag
-@category{Package fourie}
+@cat2{ Package fourie ,  Package-fourie }
 @closecatbox
 @end defvr
 
@@ -1501,7 +1501,7 @@ See @code{foursimp}.
 
 @opencatbox{Categories:}
 @ctindex  Package fourie  @subentry  cosnpiflag
-@category{Package fourie}
+@cat2{ Package fourie ,  Package-fourie }
 @closecatbox
 @end defvr
 
@@ -1518,7 +1518,7 @@ and @var{p} have same meaning as in @code{fourier}.
 @c NEEDS EXAMPLES
 @opencatbox{Categories:}
 @ctindex  Package fourie  @subentry  fourexpand
-@category{Package fourie}
+@cat2{ Package fourie ,  Package-fourie }
 @closecatbox
 @end deffn
 
@@ -1534,7 +1534,7 @@ Returns the Fourier cosine coefficients for @code{@var{f}(@var{x})} defined on
 @c NEEDS EXAMPLES
 @opencatbox{Categories:}
 @ctindex  Package fourie  @subentry  fourcos
-@category{Package fourie}
+@cat2{ Package fourie ,  Package-fourie }
 @closecatbox
 @end deffn
 
@@ -1550,7 +1550,7 @@ Returns the Fourier sine coefficients for @code{@var{f}(@var{x})} defined on
 @c NEEDS EXAMPLES
 @opencatbox{Categories:}
 @ctindex  Package fourie  @subentry  foursin
-@category{Package fourie}
+@cat2{ Package fourie ,  Package-fourie }
 @closecatbox
 @end deffn
 
@@ -1566,7 +1566,7 @@ Returns @code{fourexpand (foursimp (fourier (@var{f}, @var{x}, @var{p})),
 @c NEEDS EXAMPLES
 @opencatbox{Categories:}
 @ctindex  Package fourie  @subentry  totalfourier
-@category{Package fourie}
+@cat2{ Package fourie ,  Package-fourie }
 @closecatbox
 @end deffn
 
@@ -1582,7 +1582,7 @@ Constructs and returns a list of the Fourier integral coefficients of
 @c NEEDS EXAMPLES
 @opencatbox{Categories:}
 @ctindex  Package fourie  @subentry  fourint
-@category{Package fourie}
+@cat2{ Package fourie ,  Package-fourie }
 @closecatbox
 @end deffn
 
@@ -1598,7 +1598,7 @@ on @code{[0, inf]}.
 @c NEEDS EXAMPLES
 @opencatbox{Categories:}
 @ctindex  Package fourie  @subentry  fourintcos
-@category{Package fourie}
+@cat2{ Package fourie ,  Package-fourie }
 @closecatbox
 @end deffn
 
@@ -1614,7 +1614,7 @@ Returns the Fourier sine integral coefficients for @code{@var{f}(@var{x})} on
 @c NEEDS EXAMPLES
 @opencatbox{Categories:}
 @ctindex  Package fourie  @subentry  fourintsin
-@category{Package fourie}
+@cat2{ Package fourie ,  Package-fourie }
 @closecatbox
 @end deffn
 
@@ -1633,7 +1633,7 @@ Converts @var{a} into a Poisson encoding.
 
 @opencatbox{Categories:}
 @ctindex  Poisson series  @subentry  intopois
-@category{Poisson series}
+@cat2{ Poisson series ,  Poisson-series }
 @closecatbox
 @end deffn
 
@@ -1651,7 +1651,7 @@ for sums of powers of sine and cosine terms of a particular type.
 
 @opencatbox{Categories:}
 @ctindex  Poisson series  @subentry  outofpois
-@category{Poisson series}
+@cat2{ Poisson series ,  Poisson-series }
 @closecatbox
 @end deffn
 
@@ -1667,7 +1667,7 @@ in the trig arguments or only in the coefficients.
 
 @opencatbox{Categories:}
 @ctindex  Poisson series  @subentry  poisdiff
-@category{Poisson series}
+@cat2{ Poisson series ,  Poisson-series }
 @closecatbox
 @end deffn
 
@@ -1684,7 +1684,7 @@ Functionally identical to @code{intopois (@var{a}^@var{b})}.
 
 @opencatbox{Categories:}
 @ctindex  Poisson series  @subentry  poisexpt
-@category{Poisson series}
+@cat2{ Poisson series ,  Poisson-series }
 @closecatbox
 @end deffn
 
@@ -1699,7 +1699,7 @@ terms in @var{b} are dropped if @var{b} is in the trig arguments.
 
 @opencatbox{Categories:}
 @ctindex  Poisson series  @subentry  poisint
-@category{Poisson series}
+@cat2{ Poisson series ,  Poisson-series }
 @closecatbox
 @end deffn
 
@@ -1715,7 +1715,7 @@ can be set to [-2^(n-1)+1, 2^(n-1)].
 
 @opencatbox{Categories:}
 @ctindex  Poisson series  @subentry  poislim
-@category{Poisson series}
+@cat2{ Poisson series ,  Poisson-series }
 @closecatbox
 @end defvr
 
@@ -1732,7 +1732,7 @@ a term in series respectively.
 
 @opencatbox{Categories:}
 @ctindex  Poisson series  @subentry  poismap
-@category{Poisson series}
+@cat2{ Poisson series ,  Poisson-series }
 @closecatbox
 @end deffn
 
@@ -1746,7 +1746,7 @@ Is functionally identical to @code{intopois (a + b)}.
 
 @opencatbox{Categories:}
 @ctindex  Poisson series  @subentry  poisplus
-@category{Poisson series}
+@cat2{ Poisson series ,  Poisson-series }
 @closecatbox
 @end deffn
 
@@ -1759,7 +1759,7 @@ representation.
 
 @opencatbox{Categories:}
 @ctindex  Poisson series  @subentry  poissimp
-@category{Poisson series}
+@cat2{ Poisson series ,  Poisson-series }
 @closecatbox
 @end deffn
 
@@ -1774,7 +1774,7 @@ expressions.
 
 @opencatbox{Categories:}
 @ctindex  Poisson series  @subentry  poisson
-@category{Poisson series}
+@cat2{ Poisson series ,  Poisson-series }
 @closecatbox
 @end defvr
 
@@ -1802,7 +1802,7 @@ expansion in terms of a small parameter.  For example,
 
 @opencatbox{Categories:}
 @ctindex  Poisson series  @subentry  poissubst
-@category{Poisson series}
+@cat2{ Poisson series ,  Poisson-series }
 @closecatbox
 @end deffn
 
@@ -1816,7 +1816,7 @@ Is functionally identical to @code{intopois (@var{a}*@var{b})}.
 
 @opencatbox{Categories:}
 @ctindex  Poisson series  @subentry  poistimes
-@category{Poisson series}
+@cat2{ Poisson series ,  Poisson-series }
 @closecatbox
 @end deffn
 
@@ -1834,7 +1834,7 @@ that term) are eliminated during multiplication.
 
 @opencatbox{Categories:}
 @ctindex  Poisson series  @subentry  poistrim
-@category{Poisson series}
+@cat2{ Poisson series ,  Poisson-series }
 @closecatbox
 @end deffn
 
@@ -1848,9 +1848,9 @@ necessary.
 
 @opencatbox{Categories:}
 @ctindex  Poisson series  @subentry  printpois
-@category{Poisson series}
+@cat2{ Poisson series ,  Poisson-series }
 @ctindex  Display functions  @subentry  printpois
-@category{Display functions}
+@cat2{ Display functions ,  Display-functions }
 @closecatbox
 @end deffn
 
