--- a/doc/info/Symmetries.texi
+++ b/doc/info/Symmetries.texi
@@ -68,13 +68,13 @@ Springer-Verlag, New York Berlin, 308-320, 1989.
 
 @opencatbox{Categories:}
 @ctindex  Group theory  @subentry  Introduction to Symmetries
-@category{Group theory}
+@cat2{ Group theory ,  Group-theory }
 @ctindex  Polynomials  @subentry  Introduction to Symmetries
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @ctindex  Share packages  @subentry  Introduction to Symmetries
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package sym  @subentry  Introduction to Symmetries
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 
 
@@ -105,7 +105,7 @@ otherwise the size is set to @var{n}.
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  comp2pui
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -118,7 +118,7 @@ Other functions for changing bases: @code{comp2ele}.
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  ele2pui
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -131,7 +131,7 @@ Other functions for changing bases: @code{comp2ele}.
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  ele2comp
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -176,7 +176,7 @@ Other functions for changing bases: @code{comp2ele}.
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  elem
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -244,7 +244,7 @@ Other functions for changing bases: @code{comp2ele}.
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  mon2schur
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -276,7 +276,7 @@ Other functions for changing bases: @code{comp2ele}.
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  multi_elem
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -302,7 +302,7 @@ the function @code{elem}.
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  multi_pui
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -350,7 +350,7 @@ Other functions for changing bases: @code{comp2ele}.
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  pui
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -397,7 +397,7 @@ Other functions for changing bases: @code{comp2ele}.
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  pui2comp
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -413,7 +413,7 @@ Other functions for changing bases: @code{comp2ele}.
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  pui2ele
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -444,7 +444,7 @@ first @var{m}.
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  puireduc
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -476,7 +476,7 @@ functions.
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  schur2comp
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -508,7 +508,7 @@ returns the partitioned polynomial associated to the contracted form
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  cont2part
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -543,7 +543,7 @@ the polynomial.
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  contract
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -563,7 +563,7 @@ returns the symmetric polynomial associated with the contracted form
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  explose
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -584,7 +584,7 @@ The contracted form is rendered with the variables in @var{lvar}.
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  part2cont
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -605,7 +605,7 @@ The contracted form is rendered with the variables in @var{lvar}.
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  partpol
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -617,7 +617,7 @@ function @code{contract}.
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  tcontract
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -630,7 +630,7 @@ the function @code{partpol}.
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  tpartpol
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -743,7 +743,7 @@ Functions of @code{sym} used in this function:
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  direct
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -776,7 +776,7 @@ Also see: @code{orbit} for the action of a single symmetric group.
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  multi_orbit
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -810,7 +810,7 @@ Functions for changing the representations of a symmetric polynomial:
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  multsym
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -841,7 +841,7 @@ groups on a polynomial.
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  orbit
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -925,7 +925,7 @@ element is kept per orbit, under the action of @var{SD}.
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  pui_direct
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -951,7 +951,7 @@ written by P. Esperet, calculates the Kostka number of the partition
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  kostka
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -973,7 +973,7 @@ Also see: @mrefcomma{ltreillis} @mref{treillis} and @mrefdot{treinat}
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  lgtreillis
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -996,7 +996,7 @@ Also see: @mrefcomma{lgtreillis} @mref{treillis} and @mrefdot{treinat}
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  ltreillis
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -1018,7 +1018,7 @@ See also: @mrefcomma{lgtreillis} @mref{ltreillis} and @mrefdot{treinat}
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  treillis
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -1053,7 +1053,7 @@ See also: @mrefcomma{lgtreillis} @mref{ltreillis} and @mrefdot{treillis}
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  treinat
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -1098,7 +1098,7 @@ Also see:
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  ele2polynome
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -1129,7 +1129,7 @@ The inverse: @code{ele2polynome (@var{l}, @var{x})}
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  polynome2ele
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -1144,7 +1144,7 @@ Also see @code{somrac}.
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  prodrac
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -1186,7 +1186,7 @@ See also:
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  pui2polynome
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -1201,7 +1201,7 @@ Also see @code{prodrac}.
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  somrac
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -1459,7 +1459,7 @@ See also:
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  resolvante
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -1484,7 +1484,7 @@ See also:
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  resolvante_alternee1
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -1521,7 +1521,7 @@ See also:
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  resolvante_bipartite
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -1555,7 +1555,7 @@ See also:
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  resolvante_diedrale
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -1574,7 +1574,7 @@ See also:
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  resolvante_klein
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -1592,7 +1592,7 @@ See also:
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  resolvante_klein3
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -1641,7 +1641,7 @@ See also:
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  resolvante_produit_sym
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -1660,7 +1660,7 @@ See also:
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  resolvante_unitaire
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -1679,7 +1679,7 @@ See also:
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  resolvante_vierer
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -1697,7 +1697,7 @@ returns the associate multinomial coefficient: if the parts of
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  multinomial
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @closecatbox
 @end deffn
 
@@ -1707,8 +1707,8 @@ returns the list of permutations of the list @var{L}.
 
 @opencatbox{Categories:}
 @ctindex  Package sym  @subentry  permut
-@category{Package sym}
+@cat2{ Package sym ,  Package-sym }
 @ctindex  Lists  @subentry  permut
-@category{Lists}
+@cat2{ Lists ,  Lists }
 @closecatbox
 @end deffn
