--- a/doc/info/alt-display.texi
+++ b/doc/info/alt-display.texi
@@ -144,7 +144,7 @@ PROMPT;>>(%i5) <<PROMPT;
 
 @opencatbox{Categories:}
 @ctindex  Package alt-display  @subentry  alt_display_output_type
-@category{Package alt-display}
+@cat2{ Package alt-display ,  Package-alt-display }
 @closecatbox
 
 @end deffn
@@ -194,7 +194,7 @@ an infinite recursion in @code{displa}.
 
 @opencatbox{Categories:}
 @ctindex  Package alt-display  @subentry  define_alt_display
-@category{Package alt-display}
+@cat2{ Package alt-display ,  Package-alt-display }
 @closecatbox
 
 @end deffn
@@ -217,7 +217,7 @@ an alternative 1-d or 2-d display function.
 
 @opencatbox{Categories:}
 @ctindex  Package alt-display  @subentry  info_display
-@category{Package alt-display}
+@cat2{ Package alt-display ,  Package-alt-display }
 @closecatbox
 
 @end deffn
@@ -237,7 +237,7 @@ Produces MathML output.
 
 @opencatbox{Categories:}
 @ctindex  Package alt-display  @subentry  mathml_display
-@category{Package alt-display}
+@cat2{ Package alt-display ,  Package-alt-display }
 @closecatbox
 
 @end deffn
@@ -255,7 +255,7 @@ Produces TeX output.
 
 @opencatbox{Categories:}
 @ctindex  Package alt-display  @subentry  tex_display
-@category{Package alt-display}
+@cat2{ Package alt-display ,  Package-alt-display }
 @closecatbox
 
 @end deffn
@@ -293,7 +293,7 @@ Produces Texinfo output using all three display functions.
 
 @opencatbox{Categories:}
 @ctindex  Package alt-display  @subentry  multi_display_for_texinfo
-@category{Package alt-display}
+@cat2{ Package alt-display ,  Package-alt-display }
 @closecatbox
 
 @end deffn
@@ -305,7 +305,7 @@ Resets the prompt prefix and suffix to the empty string, and sets both
 
 @opencatbox{Categories:}
 @ctindex  Package alt-display  @subentry  reset_displays
-@category{Package alt-display}
+@cat2{ Package alt-display ,  Package-alt-display }
 @closecatbox
 
 @end deffn
@@ -334,7 +334,7 @@ display nothing, nor cause any errors.
 
 @opencatbox{Categories:}
 @ctindex  Package alt-display  @subentry  set_alt_display
-@category{Package alt-display}
+@cat2{ Package alt-display ,  Package-alt-display }
 @closecatbox
 
 @end deffn
@@ -415,7 +415,7 @@ information on how to use control strings to set the terminal colors.
 
 @opencatbox{Categories:}
 @ctindex  Package alt-display  @subentry  set_prompt
-@category{Package alt-display}
+@cat2{ Package alt-display ,  Package-alt-display }
 @closecatbox
 
 @end deffn
