--- a/doc/info/asympa.texi
+++ b/doc/info/asympa.texi
@@ -17,7 +17,7 @@ numerical analysis.
 
 @opencatbox{Categories:}
 @ctindex  Package asympa  @subentry  asympa
-@category{Package asympa}
+@cat2{ Package asympa ,  Package-asympa }
 @closecatbox
 @end deffn
 
