--- a/doc/info/bitwise.texi
+++ b/doc/info/bitwise.texi
@@ -51,11 +51,11 @@ Inverts all bits of a signed integer. The result of this action reads
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  bit_not
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @ctindex  Binary operations  @subentry  bit_not
-@category{Binary operations}
+@cat2{ Binary operations ,  Binary-operations }
 @ctindex  Package bitwise  @subentry  bit_not
-@category{Package bitwise}
+@cat2{ Package bitwise ,  Package-bitwise }
 @closecatbox
 @end deffn
 
@@ -117,11 +117,11 @@ is taken into consideration by the function.
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  bit_and
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @ctindex  Binary operations  @subentry  bit_and
-@category{Binary operations}
+@cat2{ Binary operations ,  Binary-operations }
 @ctindex  Package bitwise  @subentry  bit_and
-@category{Package bitwise}
+@cat2{ Package bitwise ,  Package-bitwise }
 @closecatbox
 @end deffn
 
@@ -183,11 +183,11 @@ is taken into consideration by the function.
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  bit_or
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @ctindex  Binary operations  @subentry  bit_or
-@category{Binary operations}
+@cat2{ Binary operations ,  Binary-operations }
 @ctindex  Package bitwise  @subentry  bit_or
-@category{Package bitwise}
+@cat2{ Package bitwise ,  Package-bitwise }
 @closecatbox
 @end deffn
 
@@ -249,11 +249,11 @@ is taken into consideration by the function.
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  bit_xor
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @ctindex  Binary operations  @subentry  bit_xor
-@category{Binary operations}
+@cat2{ Binary operations ,  Binary-operations }
 @ctindex  Package bitwise  @subentry  bit_xor
-@category{Package bitwise}
+@cat2{ Package bitwise ,  Package-bitwise }
 @closecatbox
 @end deffn
 
@@ -303,11 +303,11 @@ this process. The result of @code{bit_lsh} therefore is @code{int * 2}.
 @end example
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  bit_lsh
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @ctindex  Binary operations  @subentry  bit_lsh
-@category{Binary operations}
+@cat2{ Binary operations ,  Binary-operations }
 @ctindex  Package bitwise  @subentry  bit_lsh
-@category{Package bitwise}
+@cat2{ Package bitwise ,  Package-bitwise }
 @closecatbox
 @end deffn
 
@@ -362,11 +362,11 @@ this process.
 @end example
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  bit_rsh
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @ctindex  Binary operations  @subentry  bit_rsh
-@category{Binary operations}
+@cat2{ Binary operations ,  Binary-operations }
 @ctindex  Package bitwise  @subentry  bit_rsh
-@category{Package bitwise}
+@cat2{ Package bitwise ,  Package-bitwise }
 @closecatbox
 @end deffn
 
@@ -404,11 +404,11 @@ number @code{int}. This function only operates on positive numbers.
 @end example
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  bit_length
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @ctindex  Binary operations  @subentry  bit_length
-@category{Binary operations}
+@cat2{ Binary operations ,  Binary-operations }
 @ctindex  Package bitwise  @subentry  bit_length
-@category{Package bitwise}
+@cat2{ Package bitwise ,  Package-bitwise }
 @closecatbox
 @end deffn
 
@@ -515,10 +515,10 @@ is taken into consideration by the function.
 
 @opencatbox{Categories:}
 @ctindex  Number theory  @subentry  bit_onep
-@category{Number theory}
+@cat2{ Number theory ,  Number-theory }
 @ctindex  Binary operations  @subentry  bit_onep
-@category{Binary operations}
+@cat2{ Binary operations ,  Binary-operations }
 @ctindex  Package bitwise  @subentry  bit_onep
-@category{Package bitwise}
+@cat2{ Package bitwise ,  Package-bitwise }
 @closecatbox
 @end deffn
