--- a/doc/info/bode.texi
+++ b/doc/info/bode.texi
@@ -57,9 +57,9 @@ To use this function write first @code{load("bode")}. See also @mrefdot{bode_pha
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  bode_gain
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @ctindex  Package bode  @subentry  bode_gain
-@category{Package bode}
+@cat2{ Package bode ,  Package-bode }
 @closecatbox
 
 @end deffn
@@ -121,9 +121,9 @@ To use this function write first @code{load("bode")}. See also @mrefdot{bode_gai
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  bode_phase
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @ctindex  Package bode  @subentry  bode_phase
-@category{Package bode}
+@cat2{ Package bode ,  Package-bode }
 @closecatbox
 
 @end deffn
