--- a/doc/info/clebsch_gordan.texi
+++ b/doc/info/clebsch_gordan.texi
@@ -12,7 +12,7 @@ Compute the Clebsch-Gordan coefficient @verb{|<j1, j2, m1, m2 | j, m>|}.
 
 @opencatbox{Categories:}
 @ctindex  clebsch_gordan  @subentry  clebsch_gordan
-@category{clebsch_gordan}
+@cat2{ clebsch_gordan ,  clebsch_gordan }
 @closecatbox
 @end deffn
 
@@ -24,7 +24,7 @@ Clebsch-Gordan coefficient).
 
 @opencatbox{Categories:}
 @ctindex  clebsch_gordan  @subentry  racah_v
-@category{clebsch_gordan}
+@cat2{ clebsch_gordan ,  clebsch_gordan }
 @closecatbox
 @end deffn
 
@@ -35,7 +35,7 @@ Compute Racah's W coefficient (computed in terms of a Wigner @verb{|6j|} symbol)
 
 @opencatbox{Categories:}
 @ctindex  clebsch_gordan  @subentry  racah_w
-@category{clebsch_gordan}
+@cat2{ clebsch_gordan ,  clebsch_gordan }
 @closecatbox
 @end deffn
 
@@ -47,7 +47,7 @@ Clebsch-Gordan coefficient).
 
 @opencatbox{Categories:}
 @ctindex  clebsch_gordan  @subentry  wigner_3j
-@category{clebsch_gordan}
+@cat2{ clebsch_gordan ,  clebsch_gordan }
 @closecatbox
 @end deffn
 
@@ -58,7 +58,7 @@ Compute Wigner's @verb{|6j|} symbol.
 
 @opencatbox{Categories:}
 @ctindex  clebsch_gordan  @subentry  wigner_6j
-@category{clebsch_gordan}
+@cat2{ clebsch_gordan ,  clebsch_gordan }
 @closecatbox
 @end deffn
 
@@ -69,6 +69,6 @@ Compute Wigner's @verb{|9j|} symbol.
 
 @opencatbox{Categories:}
 @ctindex  clebsch_gordan  @subentry  wigner_9j
-@category{clebsch_gordan}
+@cat2{ clebsch_gordan ,  clebsch_gordan }
 @closecatbox
 @end deffn
