--- a/doc/info/combinatorics.texi
+++ b/doc/info/combinatorics.texi
@@ -42,9 +42,9 @@ with the command @code{load("combinatorics")}.
 
 @opencatbox{Categories:}
 @ctindex  Share packages  @subentry  Package combinatorics
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package combinatorics  @subentry  Package combinatorics
-@category{Package combinatorics}
+@cat2{ Package combinatorics ,  Package-combinatorics }
 @closecatbox
 
 @node Functions and Variables for Combinatorics,  , Package combinatorics, combinatorics-pkg
@@ -84,7 +84,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package combinatorics  @subentry  apply_cycles
-@category{Package combinatorics}
+@cat2{ Package combinatorics ,  Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -129,7 +129,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Package combinatorics  @subentry  cyclep
-@category{Package combinatorics}
+@cat2{ Package combinatorics ,  Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -159,7 +159,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package combinatorics  @subentry  perm_cycles
-@category{Package combinatorics}
+@cat2{ Package combinatorics ,  Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -189,7 +189,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package combinatorics  @subentry  perm_decomp
-@category{Package combinatorics}
+@cat2{ Package combinatorics ,  Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -220,7 +220,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package combinatorics  @subentry  perm_inverse
-@category{Package combinatorics}
+@cat2{ Package combinatorics ,  Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -251,7 +251,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package combinatorics  @subentry  perm_length
-@category{Package combinatorics}
+@cat2{ Package combinatorics ,  Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -278,7 +278,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package combinatorics  @subentry  perm_lex_next
-@category{Package combinatorics}
+@cat2{ Package combinatorics ,  Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -308,7 +308,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package combinatorics  @subentry  perm_lex_rank
-@category{Package combinatorics}
+@cat2{ Package combinatorics ,  Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -337,7 +337,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package combinatorics  @subentry  perm_lex_unrank
-@category{Package combinatorics}
+@cat2{ Package combinatorics ,  Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -366,7 +366,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package combinatorics  @subentry  perm_next
-@category{Package combinatorics}
+@cat2{ Package combinatorics ,  Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -396,7 +396,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package combinatorics  @subentry  perm_parity
-@category{Package combinatorics}
+@cat2{ Package combinatorics ,  Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -426,7 +426,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package combinatorics  @subentry  perm_rank
-@category{Package combinatorics}
+@cat2{ Package combinatorics ,  Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -455,7 +455,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package combinatorics  @subentry  perm_undecomp
-@category{Package combinatorics}
+@cat2{ Package combinatorics ,  Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -484,7 +484,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package combinatorics  @subentry  perm_unrank
-@category{Package combinatorics}
+@cat2{ Package combinatorics ,  Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -517,7 +517,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Package combinatorics  @subentry  permp
-@category{Package combinatorics}
+@cat2{ Package combinatorics ,  Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -576,7 +576,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Package combinatorics  @subentry  perms
-@category{Package combinatorics}
+@cat2{ Package combinatorics ,  Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -640,7 +640,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Package combinatorics  @subentry  perms_lex
-@category{Package combinatorics}
+@cat2{ Package combinatorics ,  Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -666,7 +666,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package combinatorics  @subentry  permult
-@category{Package combinatorics}
+@cat2{ Package combinatorics ,  Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -702,7 +702,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package combinatorics  @subentry  permute
-@category{Package combinatorics}
+@cat2{ Package combinatorics ,  Package-combinatorics }
 @closecatbox
 
 @end deffn
@@ -730,7 +730,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package combinatorics  @subentry  random_perm
-@category{Package combinatorics}
+@cat2{ Package combinatorics ,  Package-combinatorics }
 @closecatbox
 
 @end deffn
