--- a/doc/info/contrib_ode.texi
+++ b/doc/info/contrib_ode.texi
@@ -233,11 +233,11 @@ Extensive debugging traces and messages are displayed if the command
 
 @opencatbox{Categories:}
 @ctindex  Differential equations  @subentry  Introduction to contrib_ode
-@category{Differential equations}
+@cat2{ Differential equations ,  Differential-equations }
 @ctindex  Share packages  @subentry  Introduction to contrib_ode
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package contrib_ode  @subentry  Introduction to contrib_ode
-@category{Package contrib_ode}
+@cat2{ Package contrib_ode ,  Package-contrib_ode }
 @closecatbox
 
 
@@ -253,7 +253,7 @@ independent variable @var{x} and dependent variable @var{y}.
 
 @opencatbox{Categories:}
 @ctindex  Package contrib_ode  @subentry  contrib_ode
-@category{Package contrib_ode}
+@cat2{ Package contrib_ode ,  Package-contrib_ode }
 @closecatbox
 
 @end deffn
@@ -287,7 +287,7 @@ special functions.
 
 @opencatbox{Categories:}
 @ctindex  Package contrib_ode  @subentry  odelin
-@category{Package contrib_ode}
+@cat2{ Package contrib_ode ,  Package-contrib_ode }
 @closecatbox
 
 @end deffn
@@ -334,7 +334,7 @@ zero if @var{soln} is a solution of @var{eqn}.
 
 @opencatbox{Categories:}
 @ctindex  Package contrib_ode  @subentry  ode_check
-@category{Package contrib_ode}
+@cat2{ Package contrib_ode ,  Package-contrib_ode }
 @closecatbox
 
 @end deffn
@@ -356,7 +356,7 @@ See also @mrefcomma{gauss_b} @mref{dgauss_a} and @mrefdot{gauss_b}
 
 @opencatbox{Categories:}
 @ctindex  Package contrib_ode  @subentry  gauss_a
-@category{Package contrib_ode}
+@cat2{ Package contrib_ode ,  Package-contrib_ode }
 @closecatbox
 
 @end deffn
@@ -367,7 +367,7 @@ See @mrefdot{gauss_a}
 
 @opencatbox{Categories:}
 @ctindex  Package contrib_ode  @subentry  gauss_b
-@category{Package contrib_ode}
+@cat2{ Package contrib_ode ,  Package-contrib_ode }
 @closecatbox
 
 @end deffn
@@ -379,7 +379,7 @@ of @mref{gauss_a}@code{(@var{a}, @var{b}, @var{c}, @var{x})}.
 
 @opencatbox{Categories:}
 @ctindex  Package contrib_ode  @subentry  dgauss_a
-@category{Package contrib_ode}
+@cat2{ Package contrib_ode ,  Package-contrib_ode }
 @closecatbox
 
 @end deffn
@@ -391,7 +391,7 @@ of @mref{gauss_b}@code{(@var{a}, @var{b}, @var{c}, @var{x})}.
 
 @opencatbox{Categories:}
 @ctindex  Package contrib_ode  @subentry  dgauss_b
-@category{Package contrib_ode}
+@cat2{ Package contrib_ode ,  Package-contrib_ode }
 @closecatbox
 
 @end deffn
@@ -411,7 +411,7 @@ See also @mrefcomma{kummer_u} @mrefcomma{dkummer_m} and @mrefdot{dkummer_u}
 
 @opencatbox{Categories:}
 @ctindex  Package contrib_ode  @subentry  kummer_m
-@category{Package contrib_ode}
+@cat2{ Package contrib_ode ,  Package-contrib_ode }
 @closecatbox
 
 @end deffn
@@ -426,7 +426,7 @@ See @mrefdot{kummer_m}
 
 @opencatbox{Categories:}
 @ctindex  Package contrib_ode  @subentry  kummer_u
-@category{Package contrib_ode}
+@cat2{ Package contrib_ode ,  Package-contrib_ode }
 @closecatbox
 
 @end deffn
@@ -438,7 +438,7 @@ of @mref{kummer_m}@code{(@var{a}, @var{b}, @var{x})}.
 
 @opencatbox{Categories:}
 @ctindex  Package contrib_ode  @subentry  dkummer_m
-@category{Package contrib_ode}
+@cat2{ Package contrib_ode ,  Package-contrib_ode }
 @closecatbox
 
 @end deffn
@@ -450,7 +450,7 @@ of @mref{kummer_u}@code{(@var{a}, @var{b}, @var{x})}.
 
 @opencatbox{Categories:}
 @ctindex  Package contrib_ode  @subentry  dkummer_u
-@category{Package contrib_ode}
+@cat2{ Package contrib_ode ,  Package-contrib_ode }
 @closecatbox
 
 @end deffn
@@ -501,11 +501,11 @@ differ by less than 2.
 
 @opencatbox{Categories:}
 @ctindex  Package contrib_ode  @subentry  bessel_simplify
-@category{Package contrib_ode}
+@cat2{ Package contrib_ode ,  Package-contrib_ode }
 @ctindex  Bessel functions  @subentry  bessel_simplify
-@category{Bessel functions}
+@cat2{ Bessel functions ,  Bessel-functions }
 @ctindex  Special functions  @subentry  bessel_simplify
-@category{Special functions}
+@cat2{ Special functions ,  Special-functions }
 @closecatbox
 
 @end deffn
@@ -520,11 +520,11 @@ using the recurrence (A&S 5.1.14).
 
 @opencatbox{Categories:}
 @ctindex  Package contrib_ode  @subentry  expintegral_e_simplify
-@category{Package contrib_ode}
+@cat2{ Package contrib_ode ,  Package-contrib_ode }
 @ctindex  Exponential Integrals  @subentry  expintegral_e_simplify
-@category{Exponential Integrals}
+@cat2{ Exponential Integrals ,  Exponential-Integrals }
 @ctindex  Special functions  @subentry  expintegral_e_simplify
-@category{Special functions}
+@cat2{ Special functions ,  Special-functions }
 @closecatbox
 
 @end deffn
