--- a/doc/info/defstruct.texi
+++ b/doc/info/defstruct.texi
@@ -53,9 +53,9 @@ all fields are always visible.
 
 @opencatbox{Categories:}
 @ctindex  Structures  @subentry  structures
-@category{Structures}
+@cat2{ Structures ,  Structures }
 @ctindex  Global variables  @subentry  structures
-@category{Global variables}
+@cat2{ Global variables ,  Global-variables }
 @closecatbox
 @end defvr
 
@@ -114,7 +114,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Structures  @subentry  defstruct
-@category{Structures}
+@cat2{ Structures ,  Structures }
 @closecatbox
 @end deffn
 
@@ -151,7 +151,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Structures  @subentry  new
-@category{Structures}
+@cat2{ Structures ,  Structures }
 @closecatbox
 @end deffn
 
@@ -231,9 +231,9 @@ The field name is not evaluated.
 
 @opencatbox{Categories:}
 @ctindex  Structures  @subentry  @@
-@category{Structures}
+@cat2{ Structures ,  Structures }
 @ctindex  Operators  @subentry  @@
-@category{Operators}
+@cat2{ Operators ,  Operators }
 @closecatbox
 @end deffn
 
