--- a/doc/info/draw.texi
+++ b/doc/info/draw.texi
@@ -70,11 +70,11 @@ If you want to use VTK with draw, you need VTK with the Python interface install
 
 @opencatbox{Categories:}
 @ctindex  Plotting  @subentry  Introduction to draw
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @ctindex  Share packages  @subentry  Introduction to draw
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package draw  @subentry  Introduction to draw
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 
@@ -146,7 +146,7 @@ and @mrefdot{draw2d}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  gr2d
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
@@ -173,7 +173,7 @@ See also @mref{draw} and @mrefdot{draw3d}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  gr3d
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
@@ -250,9 +250,9 @@ See also @mrefcomma{gr2d} @mrefcomma{gr3d} @mref{draw2d} and @mrefdot{draw3d}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  draw
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @ctindex  File output  @subentry  draw
-@category{File output}
+@cat2{ File output ,  File-output }
 @closecatbox
 @end deffn
 
@@ -272,9 +272,9 @@ See also @mref{draw} and @mrefdot{gr2d}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  draw2d
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @ctindex  File output  @subentry  draw2d
-@category{File output}
+@cat2{ File output ,  File-output }
 @closecatbox
 @end deffn
 
@@ -295,9 +295,9 @@ See also @mref{draw} and @mrefdot{gr3d}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  draw3d
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @ctindex  File output  @subentry  draw3d
-@category{File output}
+@cat2{ File output ,  File-output }
 @closecatbox
 @end deffn
 
@@ -321,9 +321,9 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  draw_file
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @ctindex  File output  @subentry  draw_file
-@category{File output}
+@cat2{ File output ,  File-output }
 @closecatbox
 @end deffn
 
@@ -366,9 +366,9 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  multiplot_mode
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @ctindex  File output  @subentry  multiplot_mode
-@category{File output}
+@cat2{ File output ,  File-output }
 @closecatbox
 @end deffn
 
@@ -400,7 +400,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  set_draw_defaults
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
@@ -419,7 +419,7 @@ See also @code{nticks}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  adapt_depth
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -470,7 +470,7 @@ See also option @mrefdot{columns}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  allocation
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -497,7 +497,7 @@ See also @mrefcomma{axis_bottom}  @mrefcomma{axis_left} @mrefcomma{axis_top} and
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  axis_3d
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -525,7 +525,7 @@ See also @mrefcomma{axis_left}  @mrefcomma{axis_top} @mref{axis_right} and @mref
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  axis_bottom
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -552,7 +552,7 @@ See also @mrefcomma{axis_bottom}  @mrefcomma{axis_top} @mref{axis_right} and @mr
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  axis_left
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -579,7 +579,7 @@ See also @mrefcomma{axis_bottom}  @mrefcomma{axis_left} @mref{axis_top} and @mre
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  axis_right
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -606,7 +606,7 @@ See also @mrefcomma{axis_bottom}   @mrefcomma{axis_left}  @mrefcomma{axis_right}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  axis_top
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -628,7 +628,7 @@ See also @code{color}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  background_color
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -663,7 +663,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  border
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -693,7 +693,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  capping
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -733,7 +733,7 @@ See also @mrefcomma{enhanced3d}  @mref{colorbox} and @mrefdot{cbtics}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  cbrange
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 @end defvr
 
@@ -767,7 +767,7 @@ See also @mrefcomma{enhanced3d}  @mref{colorbox} and @mrefdot{cbrange}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  cbtics
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -879,7 +879,7 @@ See also @mrefdot{fill_color}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  color
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -924,7 +924,7 @@ See also @mrefdot{palette_draw}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  colorbox
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -955,7 +955,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  columns
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -1017,7 +1017,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  contour
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -1087,7 +1087,7 @@ See also @mrefdot{contour}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  contour_levels
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -1108,7 +1108,7 @@ See example in @code{gnuplot_file_name}.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  data_file_name
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -1145,7 +1145,7 @@ See also @mrefcomma{terminal} and @code{dimensions}.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  delay
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -1202,7 +1202,7 @@ We want an eps file with A4 portrait dimensions.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  dimensions
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -1232,7 +1232,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  draw_realpart
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -1394,7 +1394,7 @@ being @code{k} an ordering parameter.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  enhanced3d
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -1439,7 +1439,7 @@ See also @mrefcomma{terminal}  @mrefdot{dimensions_draw}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  file_name
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -1457,7 +1457,7 @@ See @code{color} to learn how colors are specified.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  fill_color
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -1519,7 +1519,7 @@ See also @mref{fill_color} and @mrefdot{explicit}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  filled_func
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -1633,7 +1633,7 @@ The gnuplot documentation is an important source of information about terminals 
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  font
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -1655,7 +1655,7 @@ See also @mrefdot{font}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  font_size
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -1689,7 +1689,7 @@ See also @mrefdot{data_file_name}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  gnuplot_file_name
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -1725,7 +1725,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  grid
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -1772,7 +1772,7 @@ See also @mrefcomma{head_both}  @mrefcomma{head_length}  and @mrefdot{head_type}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  head_angle
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -1804,7 +1804,7 @@ See also @mrefcomma{head_length}  @mrefcomma{head_angle}  and @mrefdot{head_type
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  head_both
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -1838,7 +1838,7 @@ See also @mrefcomma{head_both}  @mrefcomma{head_angle}  and @mrefdot{head_type}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  head_length
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -1875,7 +1875,7 @@ See also @mrefcomma{head_both}  @mrefcomma{head_angle}  and @mrefdot{head_length
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  head_type
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -1963,7 +1963,7 @@ See also @mrefdot{enhanced3d}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  interpolate_color
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -1980,7 +1980,7 @@ This option is relevant only for @code{implicit} objects.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  ip_grid
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -1997,7 +1997,7 @@ This option is relevant only for @code{implicit} objects.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  ip_grid_in
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -2035,7 +2035,7 @@ Example:
 @figure{draw_key}
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  key
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -2078,7 +2078,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  key_pos
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -2115,7 +2115,7 @@ See also @mrefcomma{label_orientation}  and @code{color}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  label_alignment
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -2152,7 +2152,7 @@ See also @mref{label_alignment} and @code{color}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  label_orientation
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -2193,7 +2193,7 @@ See also @mrefdot{line_width}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  line_type
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -2233,7 +2233,7 @@ See also @mrefdot{line_type}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  line_width
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -2270,7 +2270,7 @@ See also @mrefcomma{enhanced3d}  @mref{colorbox} and @mrefdot{cbrange}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  logcb
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -2299,7 +2299,7 @@ See also @mrefcomma{logy}  @mrefcomma{logx_secondary}  @mrefcomma{logy_secondary
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  logx
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -2339,7 +2339,7 @@ See also @mrefcomma{logx_draw}  @mrefcomma{logy_draw}  @mrefcomma{logy_secondary
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  logx_secondary
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -2367,7 +2367,7 @@ See also @mrefcomma{logx_draw}  @mrefcomma{logx_secondary}  @mrefcomma{logy_seco
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  logy
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -2406,7 +2406,7 @@ See also @mrefcomma{logx_draw}  @mrefcomma{logy_draw}  @mrefcomma{logx_secondary
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  logy_secondary
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -2434,7 +2434,7 @@ See also @mref{logx_draw} and @mrefdot{logy_draw}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  logz
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -2471,7 +2471,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  nticks
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -2564,7 +2564,7 @@ See also @mref{colorbox} and @mrefdot{enhanced3d}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  palette
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -2601,7 +2601,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  point_size
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -2658,7 +2658,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  point_type
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -2705,7 +2705,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  points_joined
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -2757,7 +2757,7 @@ Multiplot.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  proportional_axes
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -2785,7 +2785,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  surface_hide
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -2878,7 +2878,7 @@ See also @mrefcomma{file_name}  @mref{dimensions_draw} and @mrefdot{delay}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  terminal
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -2905,7 +2905,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  title
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -2958,7 +2958,7 @@ Translation in 3D.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  transform
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 @end defvr
 
@@ -2989,7 +2989,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  transparent
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -3021,7 +3021,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  unit_vectors
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -3068,7 +3068,7 @@ Tell gnuplot to draw all contour lines in black
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  user_preamble
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -3108,7 +3108,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  view
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -3138,7 +3138,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  wired_surface
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -3157,7 +3157,7 @@ object @mrefdot{region}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  x_voxel
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -3187,7 +3187,7 @@ See also @mrefcomma{xaxis_width}  @mref{xaxis_type} and @mrefdot{xaxis_color}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  xaxis
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -3217,7 +3217,7 @@ See also @mrefcomma{xaxis}  @mref{xaxis_width} and @mrefdot{xaxis_type}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  xaxis_color
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -3252,7 +3252,7 @@ See also @mrefcomma{xrange_secondary}  @mrefcomma{xtics_secondary}  @mrefcomma{x
 @c TODO: Document xtics_axis_secondary
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  xaxis_secondary
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -3282,7 +3282,7 @@ See also @mrefcomma{xaxis}  @mref{xaxis_width} and @mrefdot{xaxis_color}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  xaxis_type
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -3311,7 +3311,7 @@ See also @mrefcomma{xaxis}  @mref{xaxis_type} and @mrefdot{xaxis_color}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  xaxis_width
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -3340,7 +3340,7 @@ See also @mrefcomma{xlabel_secondary}  @mrefcomma{ylabel}  @mref{ylabel_secondar
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  xlabel
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -3373,7 +3373,7 @@ See also @mrefcomma{xlabel_draw}  @mrefcomma{ylabel_draw}  @mref{ylabel_secondar
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  xlabel_secondary
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -3404,7 +3404,7 @@ See also @mref{yrange} and @mrefdot{zrange}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  xrange
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -3428,7 +3428,7 @@ See also @mrefcomma{xrange}  @mrefcomma{yrange}  @mref{zrange} and @mrefdot{yran
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  xrange_secondary
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 @end defvr
 
@@ -3509,7 +3509,7 @@ See also @mrefcomma{ytics_draw}  and @mrefdot{ztics_draw}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  xtics
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -3528,7 +3528,7 @@ does not matter.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  xtics_axis
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -3547,7 +3547,7 @@ does not matter.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  xtics_rotate
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -3565,7 +3565,7 @@ does not matter.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  xtics_rotate_secondary
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -3582,7 +3582,7 @@ See @mref{xtics_draw} for a complete description.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  xtics_secondary
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -3601,7 +3601,7 @@ does not matter.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  xtics_secondary_axis
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -3634,7 +3634,7 @@ See also @mrefdot{yv_grid}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  xu_grid
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -3655,7 +3655,7 @@ does not matter.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  xy_file
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -3684,7 +3684,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  xyplane
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -3703,7 +3703,7 @@ object @mrefdot{region}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  y_voxel
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -3731,7 +3731,7 @@ See also @mrefcomma{yaxis_width}  @mref{yaxis_type} and @mrefdot{yaxis_color}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  yaxis
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -3760,7 +3760,7 @@ See also @mrefcomma{yaxis}  @mref{yaxis_width} and @mrefdot{yaxis_type}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  yaxis_color
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -3794,7 +3794,7 @@ and @code{ytics_axis_secondary}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  yaxis_secondary
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -3823,7 +3823,7 @@ See also @mrefcomma{yaxis}  @mref{yaxis_width} and @mrefdot{yaxis_color}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  yaxis_type
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -3852,7 +3852,7 @@ See also @mrefcomma{yaxis}  @mref{yaxis_type} and @mrefdot{yaxis_color}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  yaxis_width
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -3881,7 +3881,7 @@ See also @mrefcomma{xlabel_draw}  @mrefcomma{xlabel_secondary}  @mrefcomma{ylabe
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  ylabel
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -3918,7 +3918,7 @@ See also @mrefcomma{xlabel_draw}  @mrefcomma{xlabel_secondary}  @mref{ylabel_dra
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  ylabel_secondary
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -3950,7 +3950,7 @@ See also @mrefcomma{xrange}  @mref{yrange_secondary} and @mrefdot{zrange}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  yrange
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -3987,7 +3987,7 @@ See also @mrefcomma{xrange}  @mref{yrange} and @mrefdot{zrange}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  yrange_secondary
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 @end defvr
 
@@ -4003,7 +4003,7 @@ See @code{xtics} for a complete description.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  ytics
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -4022,7 +4022,7 @@ does not matter.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  ytics_axis
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -4042,7 +4042,7 @@ does not matter.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  ytics_rotate
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -4061,7 +4061,7 @@ does not matter.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  ytics_rotate_secondary
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -4078,7 +4078,7 @@ See @code{xtics} for a complete description.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  ytics_secondary
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -4097,7 +4097,7 @@ does not matter.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  ytics_secondary_axis
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -4131,7 +4131,7 @@ See also @mrefdot{xu_grid}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  yv_grid
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -4147,7 +4147,7 @@ by the 3d @code{implicit} object.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  z_voxel
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -4176,7 +4176,7 @@ See also @mrefcomma{zaxis_width}  @mref{zaxis_type} and @mrefdot{zaxis_color}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  zaxis
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -4207,7 +4207,7 @@ See also @mrefcomma{zaxis}  @mref{zaxis_width} and @mrefdot{zaxis_type}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  zaxis_color
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -4237,7 +4237,7 @@ See also @mrefcomma{zaxis}  @mref{zaxis_width} and @mrefdot{zaxis_color}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  zaxis_type
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -4268,7 +4268,7 @@ See also @mrefcomma{zaxis}  @mref{zaxis_type} and @mrefdot{zaxis_color}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  zaxis_width
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -4298,7 +4298,7 @@ See also @mrefcomma{xlabel_draw}  @mrefcomma{ylabel_draw}  and @mrefdot{zlabel_r
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  zlabel
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -4331,7 +4331,7 @@ See also @mrefdot{zlabel_draw}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  zlabel_rotate
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -4365,7 +4365,7 @@ See also @mref{xrange} and @mrefdot{yrange}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  zrange
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 @end defvr
 
@@ -4380,7 +4380,7 @@ See @mref{xtics_draw} for a complete description.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  ztics
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -4400,7 +4400,7 @@ does not matter.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  ztics_axis
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -4418,7 +4418,7 @@ does not matter.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  ztics_rotate
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -4462,7 +4462,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  bars
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
@@ -4493,7 +4493,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  cylindrical
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
@@ -4532,7 +4532,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  elevation_grid
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
@@ -4577,7 +4577,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  ellipse
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
@@ -4629,7 +4629,7 @@ Vertical and horizontal error bars.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  errors
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
@@ -4697,7 +4697,7 @@ See also @mref{filled_func} for filled functions.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  explicit
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
@@ -4811,7 +4811,7 @@ contains more elaborated examples.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  image
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
@@ -4875,7 +4875,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  implicit
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 @end deffn
 
@@ -4930,7 +4930,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  label
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
@@ -4989,7 +4989,7 @@ Two quadrilaterals.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  mesh
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
@@ -5044,7 +5044,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  parametric
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
@@ -5085,7 +5085,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  parametric_surface
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
@@ -5273,7 +5273,7 @@ Color numbers explicitly specified by the user.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  points
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
@@ -5310,7 +5310,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  polar
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
@@ -5350,7 +5350,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  polygon
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
@@ -5394,7 +5394,7 @@ This object is affected by the following @i{graphic options}: @mrefcomma{line_ty
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  quadrilateral
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 @end deffn
 
@@ -5431,7 +5431,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  rectangle
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
@@ -5488,7 +5488,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  spherical
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
@@ -5526,7 +5526,7 @@ This object is affected by the following @i{graphic options}: @mrefcomma{line_ty
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  triangle
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
@@ -5560,7 +5560,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  tube
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
@@ -5617,7 +5617,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  vector
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
@@ -5631,7 +5631,7 @@ When @code{draw_renderer} is set to @code{'vtk}, the VTK interface is used for d
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  draw_renderer
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -5651,7 +5651,7 @@ Returns pixel from picture. Coordinates @var{x} and @var{y} range from 0 to
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  get_pixel
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
@@ -5699,7 +5699,7 @@ Level picture from numeric list.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  make_level_picture
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
@@ -5740,7 +5740,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  make_rgb_picture
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
@@ -5755,7 +5755,7 @@ Returns the negative of a (@var{level} or @var{rgb}) picture.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  negative_picture
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 @end deffn
 
@@ -5769,9 +5769,9 @@ Returns @code{true} in case of equal pictures, and @code{false} otherwise.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  picture_equalp
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @ctindex  Predicate functions  @subentry  picture_equalp
-@category{Predicate functions}
+@cat2{ Predicate functions ,  Predicate-functions }
 @closecatbox
 
 @end deffn
@@ -5786,9 +5786,9 @@ and @code{false} otherwise.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  picturep
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @ctindex  Predicate functions  @subentry  picturep
-@category{Predicate functions}
+@cat2{ Predicate functions ,  Predicate-functions }
 @closecatbox
 
 @end deffn
@@ -5801,7 +5801,7 @@ Reads a file in xpm and returns a picture object.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  read_xpm
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
@@ -5816,7 +5816,7 @@ averaging the red, green and blue channels.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  rgb2level
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
@@ -5847,7 +5847,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  take_channel
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
@@ -5877,7 +5877,7 @@ See also @mrefdot{geomap}
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  boundaries_array
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end defvr
@@ -5905,7 +5905,7 @@ Map of Europe labeling borders with their component number in
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  numbered_boundaries
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
@@ -5939,7 +5939,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  make_poly_continent
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
@@ -5965,7 +5965,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  make_poly_country
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
@@ -6035,7 +6035,7 @@ polygon can be drawn.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  make_polygon
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
@@ -6063,7 +6063,7 @@ Returns segment numbers for plotting southern Italy.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  region_boundaries
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
@@ -6089,7 +6089,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  region_boundaries_plus
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
@@ -6249,7 +6249,7 @@ for more elaborated examples.
 
 @opencatbox{Categories:}
 @ctindex  Package draw  @subentry  geomap
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 @end deffn
