--- a/doc/info/drawdf.texi
+++ b/doc/info/drawdf.texi
@@ -62,15 +62,15 @@ equation into a system of two autonomous equations.
 
 @opencatbox{Categories:}
 @ctindex  Differential equations  @subentry  Introduction to drawdf
-@category{Differential equations}
+@cat2{ Differential equations ,  Differential-equations }
 @ctindex  Plotting  @subentry  Introduction to drawdf
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @ctindex  Share packages  @subentry  Introduction to drawdf
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package drawdf  @subentry  Introduction to drawdf
-@category{Package drawdf}
+@cat2{ Package drawdf ,  Package-drawdf }
 @ctindex  Package draw  @subentry  Introduction to drawdf
-@category{Package draw}
+@cat2{ Package draw ,  Package-draw }
 @closecatbox
 
 
@@ -283,7 +283,7 @@ generate graphics.
 
 @opencatbox{Categories:}
 @ctindex  Package drawdf  @subentry  drawdf
-@category{Package drawdf}
+@cat2{ Package drawdf ,  Package-drawdf }
 @closecatbox
 
 @end deffn
