--- a/doc/info/dynamics.texi
+++ b/doc/info/dynamics.texi
@@ -19,11 +19,11 @@ time they are used.
 
 @opencatbox{Categories:}
 @ctindex  Dynamical systems  @subentry  The dynamics package
-@category{Dynamical systems}
+@cat2{ Dynamical systems ,  Dynamical-systems }
 @ctindex  Share packages  @subentry  The dynamics package
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package dynamics  @subentry  The dynamics package
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @closecatbox
 
 @node Graphical analysis of discrete dynamical systems,  Visualization with VTK, The dynamics package, dynamics-pkg
@@ -54,9 +54,9 @@ same as for @mrefdot{plot2d}
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  chaosgame
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  chaosgame
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 
 @end deffn
@@ -95,9 +95,9 @@ depend on @var{y}, but any other variable can be used),
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  evolution
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  evolution
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 
 @end deffn
@@ -147,9 +147,9 @@ And an enlargement of a small region in that fractal:
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  evolution2d
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  evolution2d
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 
 @end deffn
@@ -191,9 +191,9 @@ options are the same as for @mrefdot{plot2d}
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ifs
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ifs
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 
 @end deffn
@@ -241,9 +241,9 @@ To enlarge the region around the lower bifurcation near x @code{=} -1.25 use:
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  orbits
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  orbits
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 
 @end deffn
@@ -283,9 +283,9 @@ reached. The options are the same as for @mrefdot{plot2d}
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  staircase
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  staircase
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 
 @end deffn
@@ -372,9 +372,9 @@ option of plot2d.
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  scene
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  scene
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 
 @end deffn
@@ -392,9 +392,9 @@ direction of the y axis and the x axis will appear on the right.
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -407,9 +407,9 @@ hexadecimal red-green-blue strings (see the @mref{color} option of plot2d).
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -424,9 +424,9 @@ down from the horizontal.
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -439,9 +439,9 @@ positive integer number.
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -455,9 +455,9 @@ end of the list is reached. Writing just ``restart'' is equivalent to
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -470,9 +470,9 @@ consecutive animation frames. @var{time} must be a real number.
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -485,9 +485,9 @@ positive integer number.
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -501,9 +501,9 @@ value @code{.scene} implies that a new top level window will be created.
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -516,9 +516,9 @@ window created by @code{scene}.
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -549,9 +549,9 @@ axis when the play button is pressed.
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -566,9 +566,9 @@ the faces can be rotated with option @mxrefdot{object_orientation,orientation}
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -588,9 +588,9 @@ be at the origin; use options @mxref{object_orientation,orientation} and
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -601,9 +601,9 @@ A sphere with default radius of 0.5 units and center at the origin.
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -627,9 +627,9 @@ See also @mxrefdot{object_track,track}
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -643,9 +643,9 @@ of 0 makes it invisible.
  
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -660,9 +660,9 @@ or cube it will be at half its height and in a sphere at its center.
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -675,9 +675,9 @@ red-green-blue strings (see the @mref{color} option of plot2d).
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -696,9 +696,9 @@ See also @mxref{object_startphi,startphi} and
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -717,9 +717,9 @@ See also @mxref{object_starttheta,starttheta} and
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -732,9 +732,9 @@ or a cylinder.
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -747,9 +747,9 @@ used. @var{value} must be a positive number.
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -763,9 +763,9 @@ completely opaque object.
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -780,9 +780,9 @@ the x axis of the object to the y axis of the reference frame.
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -796,9 +796,9 @@ real numbers, or 3 real numbers separated by commas.
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -815,9 +815,9 @@ See also @mxref{object_startphi,startphi} and
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -832,9 +832,9 @@ See also @mxref{object_surface,surface} and
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  points  [points]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  points  [points]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -847,9 +847,9 @@ used. @var{value} must be a positive number.
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -862,9 +862,9 @@ real numbers, or 3 real numbers separated by commas.
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -877,9 +877,9 @@ vertices in a cylinder or a cone. @var{value} must be a positive number.
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -892,9 +892,9 @@ edges in the base of a cone or a cylinder.
  
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -911,9 +911,9 @@ unchanged.
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -932,9 +932,9 @@ See also @mxref{object_endphi,endphi} and
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -953,9 +953,9 @@ See also @mxref{object_endtheta,endtheta} and
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -969,9 +969,9 @@ the default behavior, which can be changed using either the option
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  surface [surface]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  surface [surface]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -988,9 +988,9 @@ See also @mxref{object_starttheta,starttheta} and
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1025,9 +1025,9 @@ See also @mxrefdot{object_animation,animation}
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1041,9 +1041,9 @@ number. See also @mxref{object_ylength,ylength} and
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1057,9 +1057,9 @@ number. See also @mxref{object_xlength,xlength} and
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1073,9 +1073,9 @@ The height of a cube in z the direction. @var{length} must be a positive
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  ]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  ]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
 
@@ -1090,8 +1090,8 @@ See also @mxref{object_surface,surface} and
 
 @opencatbox{Categories:}
 @ctindex  Package dynamics  @subentry  wireframe  [wireframe]
-@category{Package dynamics}
+@cat2{ Package dynamics ,  Package-dynamics }
 @ctindex  Plotting  @subentry  wireframe  [wireframe]
-@category{Plotting}
+@cat2{ Plotting ,  Plotting }
 @closecatbox
 @end defvr
