--- a/doc/info/engineering-format.texi
+++ b/doc/info/engineering-format.texi
@@ -42,11 +42,11 @@ See also @mref{fpprintprec} and @mrefdot{float}
 
 @opencatbox{Categories:}
 @ctindex  Display functions  @subentry  engineering_format_floats
-@category{Display functions}
+@cat2{ Display functions ,  Display-functions }
 @ctindex  Global flags  @subentry  engineering_format_floats
-@category{Global flags}
+@cat2{ Global flags ,  Global-flags }
 @ctindex  Share packages  @subentry  engineering_format_floats
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @closecatbox
 @end defvr
 
@@ -89,11 +89,11 @@ mat.lisp
 
 @opencatbox{Categories:}
 @ctindex  Display functions  @subentry  engineering_format_min
-@category{Display functions}
+@cat2{ Display functions ,  Display-functions }
 @ctindex  Global flags  @subentry  engineering_format_min
-@category{Global flags}
+@cat2{ Global flags ,  Global-flags }
 @ctindex  Share packages  @subentry  engineering_format_min
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @closecatbox
 @end defvr
 
@@ -107,10 +107,10 @@ See also @mref{engineering_format_min} and @mrefdot{engineering_format_floats}
 
 @opencatbox{Categories:}
 @ctindex  Display functions  @subentry  engineering_format_max
-@category{Display functions}
+@cat2{ Display functions ,  Display-functions }
 @ctindex  Global flags  @subentry  engineering_format_max
-@category{Global flags}
+@cat2{ Global flags ,  Global-flags }
 @ctindex  Share packages  @subentry  engineering_format_max
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @closecatbox
 @end defvr
