--- a/doc/info/ezunits.texi
+++ b/doc/info/ezunits.texi
@@ -85,11 +85,11 @@ but other fundamental dimensions and units can be declared.
 
 @opencatbox{Categories:}
 @ctindex  Physical units  @subentry  Introduction to ezunits
-@category{Physical units}
+@cat2{ Physical units ,  Physical-units }
 @ctindex  Share packages  @subentry  Introduction to ezunits
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package ezunits  @subentry  Introduction to ezunits
-@category{Package ezunits}
+@cat2{ Package ezunits ,  Package-ezunits }
 @closecatbox
 
 @node Introduction to physical_constants, Functions and Variables for ezunits, Introduction to ezunits, ezunits-pkg
@@ -287,11 +287,11 @@ Computing conversions to base units; may take a moment.
 
 @opencatbox{Categories:}
 @ctindex  Physical units  @subentry  Introduction to physical_constants
-@category{Physical units}
+@cat2{ Physical units ,  Physical-units }
 @ctindex  Share packages  @subentry  Introduction to physical_constants
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package physical_constants  @subentry  Introduction to physical_constants
-@category{Package physical_constants}
+@cat2{ Package physical_constants ,  Package-physical_constants }
 @closecatbox
 
 @node Functions and Variables for ezunits, , Introduction to physical_constants, ezunits-pkg
@@ -422,7 +422,7 @@ Arithmetic operations on dimensional quantities.
 
 @opencatbox{Categories:}
 @ctindex  Package ezunits  @subentry  `
-@category{Package ezunits}
+@cat2{ Package ezunits ,  Package-ezunits }
 @closecatbox
 
 @end deffn
@@ -644,7 +644,7 @@ Computing conversions to base units; may take a moment.
 
 @opencatbox{Categories:}
 @ctindex  Package ezunits  @subentry  `@w{}`
-@category{Package ezunits}
+@cat2{ Package ezunits ,  Package-ezunits }
 @closecatbox
 
 @end deffn
@@ -682,7 +682,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package ezunits  @subentry  constvalue
-@category{Package ezunits}
+@cat2{ Package ezunits ,  Package-ezunits }
 @closecatbox
 @end deffn
 
@@ -714,7 +714,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package ezunits  @subentry  declare_constvalue
-@category{Package ezunits}
+@cat2{ Package ezunits ,  Package-ezunits }
 @closecatbox
 @end deffn
 
@@ -726,7 +726,7 @@ loaded with @code{load ("ezunits")}.
 
 @opencatbox{Categories:}
 @ctindex  Package ezunits  @subentry  remove_constvalue
-@category{Package ezunits}
+@cat2{ Package ezunits ,  Package-ezunits }
 @closecatbox
 @end deffn
 
@@ -783,7 +783,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package ezunits  @subentry  units
-@category{Package ezunits}
+@cat2{ Package ezunits ,  Package-ezunits }
 @closecatbox
 @end deffn
 
@@ -824,7 +824,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package ezunits  @subentry  declare_units
-@category{Package ezunits}
+@cat2{ Package ezunits ,  Package-ezunits }
 @closecatbox
 @end deffn
 
@@ -869,7 +869,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package ezunits  @subentry  qty
-@category{Package ezunits}
+@cat2{ Package ezunits ,  Package-ezunits }
 @closecatbox
 @end deffn
 
@@ -907,7 +907,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package ezunits  @subentry  declare_qty
-@category{Package ezunits}
+@cat2{ Package ezunits ,  Package-ezunits }
 @closecatbox
 @end deffn
 
@@ -974,7 +974,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Package ezunits  @subentry  unitp
-@category{Package ezunits}
+@cat2{ Package ezunits ,  Package-ezunits }
 @closecatbox
 
 @end deffn
@@ -1042,7 +1042,7 @@ Computing conversions to base units; may take a moment.
 
 @opencatbox{Categories:}
 @ctindex  Package ezunits  @subentry  declare_unit_conversion
-@category{Package ezunits}
+@cat2{ Package ezunits ,  Package-ezunits }
 @closecatbox
 
 @end deffn
@@ -1085,7 +1085,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Package ezunits  @subentry  declare_dimensions
-@category{Package ezunits}
+@cat2{ Package ezunits ,  Package-ezunits }
 @closecatbox
 @end deffn
 
@@ -1098,7 +1098,7 @@ loaded with @code{load ("ezunits")}.
 
 @opencatbox{Categories:}
 @ctindex  Package ezunits  @subentry  remove_dimensions
-@category{Package ezunits}
+@cat2{ Package ezunits ,  Package-ezunits }
 @closecatbox
 @end deffn
 
@@ -1145,7 +1145,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Package ezunits  @subentry  declare_fundamental_dimensions
-@category{Package ezunits}
+@cat2{ Package ezunits ,  Package-ezunits }
 @closecatbox
 
 @end deffn
@@ -1202,7 +1202,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Package ezunits  @subentry  declare_fundamental_units
-@category{Package ezunits}
+@cat2{ Package ezunits ,  Package-ezunits }
 @closecatbox
 
 @end deffn
@@ -1270,7 +1270,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Package ezunits  @subentry  dimensions
-@category{Package ezunits}
+@cat2{ Package ezunits ,  Package-ezunits }
 @closecatbox
 
 @end deffn
@@ -1324,7 +1324,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Package ezunits  @subentry  fundamental_units
-@category{Package ezunits}
+@cat2{ Package ezunits ,  Package-ezunits }
 @closecatbox
 
 @end deffn
@@ -1376,7 +1376,7 @@ is proportional to the fine-structure constant.
 
 @opencatbox{Categories:}
 @ctindex  Package ezunits  @subentry  dimensionless
-@category{Package ezunits}
+@cat2{ Package ezunits ,  Package-ezunits }
 @closecatbox
 
 @end deffn
@@ -1399,7 +1399,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Package ezunits  @subentry  natural_unit
-@category{Package ezunits}
+@cat2{ Package ezunits ,  Package-ezunits }
 @closecatbox
 
 @end deffn
