--- a/doc/info/f90.texi
+++ b/doc/info/f90.texi
@@ -8,9 +8,9 @@
 
 @opencatbox{Categories:}
 @ctindex  Share packages  @subentry  Package f90
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package f90  @subentry  Package f90
-@category{Package f90}
+@cat2{ Package f90 ,  Package-f90 }
 @closecatbox
 @c -----------------------------------------------------------------------------
 
@@ -64,11 +64,11 @@ foo = yyy**4+4*xxx*yyy**3+28*yyy**3+6*xx&
 
 @opencatbox{Categories:}
 @ctindex  Global variables  @subentry  f90_output_line_length_max
-@category{Global variables}
+@cat2{ Global variables ,  Global-variables }
 @ctindex  Translation and compilation  @subentry  f90_output_line_length_max
-@category{Translation and compilation}
+@cat2{ Translation and compilation ,  Translation-and-compilation }
 @ctindex  Package f90  @subentry  f90_output_line_length_max
-@category{Package f90}
+@cat2{ Package f90 ,  Package-f90 }
 @closecatbox
 @end defvr
 
@@ -141,9 +141,9 @@ end
 
 @opencatbox{Categories:}
 @ctindex  Translation and compilation  @subentry  f90
-@category{Translation and compilation}
+@cat2{ Translation and compilation ,  Translation-and-compilation }
 @ctindex  Package f90  @subentry  f90
-@category{Package f90}
+@cat2{ Package f90 ,  Package-f90 }
 @closecatbox
 @end deffn
 
