--- a/doc/info/finance.texi
+++ b/doc/info/finance.texi
@@ -38,7 +38,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package finance  @subentry  days360
-@category{Package finance}
+@cat2{ Package finance ,  Package-finance }
 @closecatbox
 
 @end deffn
@@ -61,7 +61,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package finance  @subentry  fv
-@category{Package finance}
+@cat2{ Package finance ,  Package-finance }
 @closecatbox
 
 @end deffn
@@ -84,7 +84,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package finance  @subentry  pv
-@category{Package finance}
+@cat2{ Package finance ,  Package-finance }
 @closecatbox
 
 @end deffn
@@ -107,7 +107,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package finance  @subentry  graph_flow
-@category{Package finance}
+@cat2{ Package finance ,  Package-finance }
 @closecatbox
 
 @end deffn
@@ -130,7 +130,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package finance  @subentry  annuity_pv
-@category{Package finance}
+@cat2{ Package finance ,  Package-finance }
 @closecatbox
 
 @end deffn
@@ -153,7 +153,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package finance  @subentry  annuity_fv
-@category{Package finance}
+@cat2{ Package finance ,  Package-finance }
 @closecatbox
 
 @end deffn
@@ -176,7 +176,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package finance  @subentry  geo_annuity_pv
-@category{Package finance}
+@cat2{ Package finance ,  Package-finance }
 @closecatbox
 
 @end deffn
@@ -199,7 +199,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package finance  @subentry  geo_annuity_fv
-@category{Package finance}
+@cat2{ Package finance ,  Package-finance }
 @closecatbox
 
 @end deffn
@@ -234,7 +234,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package finance  @subentry  amortization
-@category{Package finance}
+@cat2{ Package finance ,  Package-finance }
 @closecatbox
 
 @end deffn
@@ -274,7 +274,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package finance  @subentry  arit_amortization
-@category{Package finance}
+@cat2{ Package finance ,  Package-finance }
 @closecatbox
 
 @end deffn
@@ -314,7 +314,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package finance  @subentry  geo_amortization
-@category{Package finance}
+@cat2{ Package finance ,  Package-finance }
 @closecatbox
 
 @end deffn
@@ -354,7 +354,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package finance  @subentry  saving
-@category{Package finance}
+@cat2{ Package finance ,  Package-finance }
 @closecatbox
 
 @end deffn
@@ -377,7 +377,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package finance  @subentry  npv
-@category{Package finance}
+@cat2{ Package finance ,  Package-finance }
 @closecatbox
 
 @end deffn
@@ -402,7 +402,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package finance  @subentry  irr
-@category{Package finance}
+@cat2{ Package finance ,  Package-finance }
 @closecatbox
 
 @end deffn
@@ -428,7 +428,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package finance  @subentry  benefit_cost
-@category{Package finance}
+@cat2{ Package finance ,  Package-finance }
 @closecatbox
 
 @end deffn
