--- a/doc/info/fractals.texi
+++ b/doc/info/fractals.texi
@@ -63,7 +63,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package fractals  @subentry  sierpinskiale
-@category{Package fractals}
+@cat2{ Package fractals ,  Package-fractals }
 @closecatbox
 
 @end deffn
@@ -84,7 +84,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package fractals  @subentry  treefale
-@category{Package fractals}
+@cat2{ Package fractals ,  Package-fractals }
 @closecatbox
 
 @end deffn
@@ -105,7 +105,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package fractals  @subentry  fernfale
-@category{Package fractals}
+@cat2{ Package fractals ,  Package-fractals }
 @closecatbox
 
 @end deffn
@@ -133,7 +133,7 @@ the computing time is also related with the number of grid points.
 
 @opencatbox{Categories:}
 @ctindex  Package fractals  @subentry  mandelbrot_set
-@category{Package fractals}
+@cat2{ Package fractals ,  Package-fractals }
 @closecatbox
 
 @end deffn
@@ -162,7 +162,7 @@ See also @mref{julia_parameter}.
 
 @opencatbox{Categories:}
 @ctindex  Package fractals  @subentry  julia_set
-@category{Package fractals}
+@cat2{ Package fractals ,  Package-fractals }
 @closecatbox
 
 @end deffn
@@ -180,7 +180,7 @@ Its default value is @mref{%i}; we  suggest the  values @code{-.745+%i*.113002},
 
 @opencatbox{Categories:}
 @ctindex  Package fractals  @subentry  julia_parameter
-@category{Package fractals}
+@cat2{ Package fractals ,  Package-fractals }
 @closecatbox
 
 @end defvr
@@ -215,7 +215,7 @@ See also @mref{julia_parameter}.
 
 @opencatbox{Categories:}
 @ctindex  Package fractals  @subentry  julia_sin
-@category{Package fractals}
+@cat2{ Package fractals ,  Package-fractals }
 @closecatbox
 
 @end deffn
@@ -247,7 +247,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Package fractals  @subentry  snowmap
-@category{Package fractals}
+@cat2{ Package fractals ,  Package-fractals }
 @closecatbox
 
 @end deffn
@@ -273,7 +273,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package fractals  @subentry  hilbertmap
-@category{Package fractals}
+@cat2{ Package fractals ,  Package-fractals }
 @closecatbox
 
 @end deffn
@@ -293,7 +293,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package fractals  @subentry  sierpinskimap
-@category{Package fractals}
+@cat2{ Package fractals ,  Package-fractals }
 @closecatbox
 
 @end deffn
