--- a/doc/info/hompack.texi
+++ b/doc/info/hompack.texi
@@ -11,11 +11,11 @@ Fortran library HOMPACK, as obtained from Netlib.
 
 @opencatbox{Categories:}
 @ctindex  Numerical methods   @subentry  Introduction to hompack
-@category{Numerical methods} 
+@cat2{ Numerical methods  ,  Numerical-methods- }
 @ctindex  Share packages  @subentry  Introduction to hompack
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package hompack  @subentry  Introduction to hompack
-@category{Package hompack}
+@cat2{ Package hompack ,  Package-hompack }
 @closecatbox
 
 @node Functions and Variables for hompack,  , Introduction to hompack
