--- a/doc/info/impdiff.texi
+++ b/doc/info/impdiff.texi
@@ -16,11 +16,11 @@ To use this function write first @code{load("impdiff")}.
 
 @opencatbox{Categories:}
 @ctindex  Differential calculus  @subentry  implicit_derivative
-@category{Differential calculus}
+@cat2{ Differential calculus ,  Differential-calculus }
 @ctindex  Share packages  @subentry  implicit_derivative
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package impdiff  @subentry  implicit_derivative
-@category{Package impdiff}
+@cat2{ Package impdiff ,  Package-impdiff }
 @closecatbox
 
 @end deffn
