--- a/doc/info/interpol.texi
+++ b/doc/info/interpol.texi
@@ -13,11 +13,11 @@ For comments, bugs or suggestions, please contact me at @var{'mario AT edu DOT x
 
 @opencatbox{Categories:}
 @ctindex  Numerical methods  @subentry  Introduction to interpol
-@category{Numerical methods}
+@cat2{ Numerical methods ,  Numerical-methods }
 @ctindex  Share packages  @subentry  Introduction to interpol
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package interpol  @subentry  Introduction to interpol
-@category{Package interpol}
+@cat2{ Package interpol ,  Package-interpol }
 @closecatbox
 
 @node Functions and Variables for interpol,  , Introduction to interpol, interpol-pkg
@@ -127,7 +127,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Package interpol  @subentry  lagrange
-@category{Package interpol}
+@cat2{ Package interpol ,  Package-interpol }
 @closecatbox
 
 @end deffn
@@ -189,7 +189,7 @@ Otherwise, @code{charfun2} returns a partially-evaluated result in terms of @mre
 
 @opencatbox{Categories:}
 @ctindex  Package interpol  @subentry  charfun2
-@category{Package interpol}
+@cat2{ Package interpol ,  Package-interpol }
 @closecatbox
 
 @end deffn
@@ -269,7 +269,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Package interpol  @subentry  linearinterpol
-@category{Package interpol}
+@cat2{ Package interpol ,  Package-interpol }
 @closecatbox
 
 @end deffn
@@ -382,7 +382,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Package interpol  @subentry  cspline
-@category{Package interpol}
+@cat2{ Package interpol ,  Package-interpol }
 @closecatbox
 
 @end deffn
@@ -432,7 +432,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Package interpol  @subentry  ratinterpol
-@category{Package interpol}
+@cat2{ Package interpol ,  Package-interpol }
 @closecatbox
 
 @end deffn
