--- a/doc/info/lindstedt.texi
+++ b/doc/info/lindstedt.texi
@@ -44,11 +44,11 @@ To use this function write first @code{load("makeOrders")} and @code{load("linds
 
 @opencatbox{Categories:}
 @ctindex  Differential equations  @subentry  Lindstedt
-@category{Differential equations}
+@cat2{ Differential equations ,  Differential-equations }
 @ctindex  Share packages  @subentry  Lindstedt
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package lindstedt  @subentry  Lindstedt
-@category{Package lindstedt}
+@cat2{ Package lindstedt ,  Package-lindstedt }
 @closecatbox
 
 @end deffn
