--- a/doc/info/lsquares.texi
+++ b/doc/info/lsquares.texi
@@ -13,11 +13,11 @@ to estimate parameters for a model from numerical data.
 
 @opencatbox{Categories:}
 @ctindex  Statistical estimation  @subentry  Introduction to lsquares
-@category{Statistical estimation}
+@cat2{ Statistical estimation ,  Statistical-estimation }
 @ctindex  Share packages  @subentry  Introduction to lsquares
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package lsquares  @subentry  Introduction to lsquares
-@category{Package lsquares}
+@cat2{ Package lsquares ,  Package-lsquares }
 @closecatbox
 
 @c -----------------------------------------------------------------------------
@@ -202,9 +202,9 @@ I NFN FUNC                  GNORM                 STEPLENGTH
 
 @opencatbox{Categories:}
 @ctindex  Package lsquares  @subentry  lsquares_estimates
-@category{Package lsquares}
+@cat2{ Package lsquares ,  Package-lsquares }
 @ctindex  Numerical methods  @subentry  lsquares_estimates
-@category{Numerical methods}
+@cat2{ Numerical methods ,  Numerical-methods }
 @closecatbox
 
 @end deffn
@@ -275,7 +275,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package lsquares  @subentry  lsquares_estimates_exact
-@category{Package lsquares}
+@cat2{ Package lsquares ,  Package-lsquares }
 @closecatbox
 
 @end deffn
@@ -360,9 +360,9 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package lsquares  @subentry  lsquares_estimates_approximate
-@category{Package lsquares}
+@cat2{ Package lsquares ,  Package-lsquares }
 @ctindex  Numerical methods  @subentry  lsquares_estimates_approximate
-@category{Numerical methods}
+@cat2{ Numerical methods ,  Numerical-methods }
 @closecatbox
 
 @end deffn
@@ -495,7 +495,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package lsquares  @subentry  lsquares_mse
-@category{Package lsquares}
+@cat2{ Package lsquares ,  Package-lsquares }
 @closecatbox
 
 @end deffn
@@ -575,7 +575,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package lsquares  @subentry  lsquares_residuals
-@category{Package lsquares}
+@cat2{ Package lsquares ,  Package-lsquares }
 @closecatbox
 
 @end deffn
@@ -655,7 +655,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package lsquares  @subentry  lsquares_residual_mse
-@category{Package lsquares}
+@cat2{ Package lsquares ,  Package-lsquares }
 @closecatbox
 
 @end deffn
@@ -739,9 +739,9 @@ To use this function write first @code{load("lsquares")}.
 
 @opencatbox{Categories:}
 @ctindex  Package lsquares  @subentry  plsquares
-@category{Package lsquares}
+@cat2{ Package lsquares ,  Package-lsquares }
 @ctindex  Numerical methods  @subentry  plsquares
-@category{Numerical methods}
+@cat2{ Numerical methods ,  Numerical-methods }
 @closecatbox
 
 @end deffn
