--- a/doc/info/makeOrders.texi
+++ b/doc/info/makeOrders.texi
@@ -28,11 +28,11 @@ To use this function write first @code{load("makeOrders")}.
 
 @opencatbox{Categories:}
 @ctindex  Polynomials  @subentry  makeOrders
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @ctindex  Share packages  @subentry  makeOrders
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package makeOrders  @subentry  makeOrders
-@category{Package makeOrders}
+@cat2{ Package makeOrders ,  Package-makeOrders }
 @closecatbox
 
 @end deffn
