--- a/doc/info/mnewton.texi
+++ b/doc/info/mnewton.texi
@@ -13,11 +13,11 @@ equations in one or more variables.
 
 @opencatbox{Categories:}
 @ctindex  Numerical methods  @subentry  Introduction to mnewton
-@category{Numerical methods}
+@cat2{ Numerical methods ,  Numerical-methods }
 @ctindex  Share packages  @subentry  Introduction to mnewton
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package mnewton  @subentry  Introduction to mnewton
-@category{Package mnewton}
+@cat2{ Package mnewton ,  Package-mnewton }
 @closecatbox
 
 @c -----------------------------------------------------------------------------
@@ -36,7 +36,7 @@ computations are done with bigfloats.  See also @mrefdot{mnewton}
 
 @opencatbox{Categories:}
 @ctindex  Package mnewton  @subentry  newtonepsilon
-@category{Package mnewton}
+@cat2{ Package mnewton ,  Package-mnewton }
 @closecatbox
 @end defvr
 
@@ -52,7 +52,7 @@ See also @mrefdot{mnewton}
 
 @opencatbox{Categories:}
 @ctindex  Package mnewton  @subentry  newtonmaxiter
-@category{Package mnewton}
+@cat2{ Package mnewton ,  Package-mnewton }
 @closecatbox
 @end defvr
 
@@ -109,7 +109,7 @@ See also @mref{newtonepsilon} and @mrefdot{newtonmaxiter}
 
 @opencatbox{Categories:}
 @ctindex  Package mnewton  @subentry  mnewton
-@category{Package mnewton}
+@cat2{ Package mnewton ,  Package-mnewton }
 @closecatbox
 @end deffn
 
