--- a/doc/info/nset.texi
+++ b/doc/info/nset.texi
@@ -235,7 +235,7 @@ the set functions in Maxima.
 
 @opencatbox{Categories:}
 @ctindex  Sets  @subentry  Introduction to Sets
-@category{Sets}
+@cat2{ Sets ,  Sets }
 @closecatbox
 
 @subsection Set Member Iteration
@@ -320,7 +320,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Sets  @subentry  adjoin
-@category{Sets}
+@cat2{ Sets ,  Sets }
 @closecatbox
 
 @end deffn
@@ -369,7 +369,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Sets  @subentry  belln
-@category{Sets}
+@cat2{ Sets ,  Sets }
 @closecatbox
 
 @end deffn
@@ -403,7 +403,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Sets  @subentry  cardinality
-@category{Sets}
+@cat2{ Sets ,  Sets }
 @closecatbox
 
 @end deffn
@@ -439,7 +439,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Sets  @subentry  cartesian_product
-@category{Sets}
+@cat2{ Sets ,  Sets }
 @closecatbox
 
 @end deffn
@@ -547,7 +547,7 @@ is equal to the product of the lengths of the arguments.
 
 @opencatbox{Categories:}
 @ctindex  Sets  @subentry  cartesian_product_list
-@category{Sets}
+@cat2{ Sets ,  Sets }
 @closecatbox
 
 @end deffn
@@ -582,7 +582,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Sets  @subentry  disjoin
-@category{Sets}
+@cat2{ Sets ,  Sets }
 @closecatbox
 
 @end deffn
@@ -608,9 +608,9 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Sets  @subentry  disjointp
-@category{Sets}
+@cat2{ Sets ,  Sets }
 @ctindex  Predicate functions  @subentry  disjointp
-@category{Predicate functions}
+@cat2{ Predicate functions ,  Predicate-functions }
 @closecatbox
 
 @end deffn
@@ -681,7 +681,7 @@ yields the divisors without reevaluating @code{divisors(8)}.
 
 @opencatbox{Categories:}
 @ctindex  Integers  @subentry  divisors
-@category{Integers}
+@cat2{ Integers ,  Integers }
 @closecatbox
 
 @end deffn
@@ -708,9 +708,9 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Sets  @subentry  elementp
-@category{Sets}
+@cat2{ Sets ,  Sets }
 @ctindex  Predicate functions  @subentry  elementp
-@category{Predicate functions}
+@cat2{ Predicate functions ,  Predicate-functions }
 @closecatbox
 
 @end deffn
@@ -735,9 +735,9 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Sets  @subentry  emptyp
-@category{Sets}
+@cat2{ Sets ,  Sets }
 @ctindex  Predicate functions  @subentry  emptyp
-@category{Predicate functions}
+@cat2{ Predicate functions ,  Predicate-functions }
 @closecatbox
 
 @end deffn
@@ -799,7 +799,7 @@ The equivalence classes are numbers which differ by a multiple of 3.
 
 @opencatbox{Categories:}
 @ctindex  Sets  @subentry  equiv_classes
-@category{Sets}
+@cat2{ Sets ,  Sets }
 @closecatbox
 
 @end deffn
@@ -902,7 +902,7 @@ are governed by the global flag @code{prederror}.
 
 @opencatbox{Categories:}
 @ctindex  Sets  @subentry  every
-@category{Sets}
+@cat2{ Sets ,  Sets }
 @closecatbox
 
 @end deffn
@@ -935,7 +935,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Sets  @subentry  extremal_subset
-@category{Sets}
+@cat2{ Sets ,  Sets }
 @closecatbox
 
 @end deffn
@@ -1032,9 +1032,9 @@ Wrong number of arguments to mod
 
 @opencatbox{Categories:}
 @ctindex  Sets  @subentry  flatten
-@category{Sets}
+@cat2{ Sets ,  Sets }
 @ctindex  Lists  @subentry  flatten
-@category{Lists}
+@cat2{ Lists ,  Lists }
 @closecatbox
 
 @end deffn
@@ -1063,7 +1063,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Sets  @subentry  full_listify
-@category{Sets}
+@cat2{ Sets ,  Sets }
 @closecatbox
 
 @end deffn
@@ -1094,7 +1094,7 @@ because the main operator of @code{f([b])} isn't a list.
 
 @opencatbox{Categories:}
 @ctindex  Lists  @subentry  fullsetify
-@category{Lists}
+@cat2{ Lists ,  Lists }
 @closecatbox
 
 @end deffn
@@ -1184,7 +1184,7 @@ here is an example that finds all partitions of 10 that consist of prime numbers
 
 @opencatbox{Categories:}
 @ctindex  Integers  @subentry  integer_partitions
-@category{Integers}
+@cat2{ Integers ,  Integers }
 @closecatbox
 
 @end deffn
@@ -1196,7 +1196,7 @@ here is an example that finds all partitions of 10 that consist of prime numbers
 
 @opencatbox{Categories:}
 @ctindex  Sets  @subentry  intersect
-@category{Sets}
+@cat2{ Sets ,  Sets }
 @closecatbox
 
 @end deffn
@@ -1241,7 +1241,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Sets  @subentry  intersection
-@category{Sets}
+@cat2{ Sets ,  Sets }
 @closecatbox
 
 @end deffn
@@ -1305,7 +1305,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Sets  @subentry  listify
-@category{Sets}
+@cat2{ Sets ,  Sets }
 @closecatbox
 
 @end deffn
@@ -1361,7 +1361,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Sets  @subentry  makeset
-@category{Sets}
+@cat2{ Sets ,  Sets }
 @closecatbox
 
 @end deffn
@@ -1416,7 +1416,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Integers  @subentry  moebius
-@category{Integers}
+@cat2{ Integers ,  Integers }
 @closecatbox
 
 @end deffn
@@ -1465,7 +1465,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Integers  @subentry  multinomial_coeff
-@category{Integers}
+@cat2{ Integers ,  Integers }
 @closecatbox
 
 @end deffn
@@ -1504,7 +1504,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Integers  @subentry  num_distinct_partitions
-@category{Integers}
+@cat2{ Integers ,  Integers }
 @closecatbox
 
 @end deffn
@@ -1543,7 +1543,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Integers  @subentry  num_partitions
-@category{Integers}
+@cat2{ Integers ,  Integers }
 @closecatbox
 
 @end deffn
@@ -1581,7 +1581,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Sets  @subentry  partition_set
-@category{Sets}
+@cat2{ Sets ,  Sets }
 @closecatbox
 
 @end deffn
@@ -1614,9 +1614,9 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Sets  @subentry  permutations
-@category{Sets}
+@cat2{ Sets ,  Sets }
 @ctindex  Lists  @subentry  permutations
-@category{Lists}
+@cat2{ Lists ,  Lists }
 @closecatbox
 
 @end deffn
@@ -1664,7 +1664,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Sets  @subentry  powerset
-@category{Sets}
+@cat2{ Sets ,  Sets }
 @closecatbox
 
 @end deffn
@@ -1700,9 +1700,9 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Sets  @subentry  random_permutation
-@category{Sets}
+@cat2{ Sets ,  Sets }
 @ctindex  Lists  @subentry  random_permutation
-@category{Lists}
+@cat2{ Lists ,  Lists }
 @closecatbox
 
 @end deffn
@@ -1745,7 +1745,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Sets  @subentry  setdifference
-@category{Sets}
+@cat2{ Sets ,  Sets }
 @closecatbox
 
 @end deffn
@@ -1780,9 +1780,9 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Sets  @subentry  setequalp
-@category{Sets}
+@cat2{ Sets ,  Sets }
 @ctindex  Predicate functions  @subentry  setequalp
-@category{Predicate functions}
+@cat2{ Predicate functions ,  Predicate-functions }
 @closecatbox
 
 @end deffn
@@ -1814,7 +1814,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Lists  @subentry  setify
-@category{Lists}
+@cat2{ Lists ,  Lists }
 @closecatbox
 
 @end deffn
@@ -1849,9 +1849,9 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Sets  @subentry  setp
-@category{Sets}
+@cat2{ Sets ,  Sets }
 @ctindex  Predicate functions  @subentry  setp
-@category{Predicate functions}
+@cat2{ Predicate functions ,  Predicate-functions }
 @closecatbox
 
 @end deffn
@@ -1938,7 +1938,7 @@ equal @code{s}; again let's check.
 
 @opencatbox{Categories:}
 @ctindex  Sets  @subentry  set_partitions
-@category{Sets}
+@cat2{ Sets ,  Sets }
 @closecatbox
 
 @end deffn
@@ -2045,9 +2045,9 @@ are governed by the global flag @code{prederror}.
 
 @opencatbox{Categories:}
 @ctindex  Sets  @subentry  some
-@category{Sets}
+@cat2{ Sets ,  Sets }
 @ctindex  Lists  @subentry  some
-@category{Lists}
+@cat2{ Lists ,  Lists }
 @closecatbox
 
 @end deffn
@@ -2102,7 +2102,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Integers  @subentry  stirling1
-@category{Integers}
+@cat2{ Integers ,  Integers }
 @closecatbox
 
 @end deffn
@@ -2158,7 +2158,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Integers  @subentry  stirling2
-@category{Integers}
+@cat2{ Integers ,  Integers }
 @closecatbox
 
 @end deffn
@@ -2191,7 +2191,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Sets  @subentry  subset
-@category{Sets}
+@cat2{ Sets ,  Sets }
 @closecatbox
 
 @end deffn
@@ -2218,9 +2218,9 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Sets  @subentry  subsetp
-@category{Sets}
+@cat2{ Sets ,  Sets }
 @ctindex  Predicate functions  @subentry  subsetp
-@category{Predicate functions}
+@cat2{ Predicate functions ,  Predicate-functions }
 @closecatbox
 
 @end deffn
@@ -2269,7 +2269,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Sets  @subentry  symmdifference
-@category{Sets}
+@cat2{ Sets ,  Sets }
 @closecatbox
 
 @end deffn
@@ -2315,7 +2315,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Sets  @subentry  union
-@category{Sets}
+@cat2{ Sets ,  Sets }
 @closecatbox
 
 @end deffn
