--- a/doc/info/numericalio.texi
+++ b/doc/info/numericalio.texi
@@ -21,13 +21,13 @@ to store the data, and return that object.
 
 @opencatbox{Categories:}
 @ctindex  File input  @subentry  Introduction to numericalio
-@category{File input}
+@cat2{ File input ,  File-input }
 @ctindex  File output  @subentry  Introduction to numericalio
-@category{File output}
+@cat2{ File output ,  File-output }
 @ctindex  Share packages  @subentry  Introduction to numericalio
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package numericalio  @subentry  Introduction to numericalio
-@category{Package numericalio}
+@cat2{ Package numericalio ,  Package-numericalio }
 @closecatbox
 
 @subsection Plain-text input and output
@@ -142,9 +142,9 @@ See also @mrefcomma{openr} @mrefcomma{read_array} @mrefcomma{read_hashed_array}
 
 @opencatbox{Categories:}
 @ctindex  Package numericalio  @subentry  read_matrix
-@category{Package numericalio}
+@cat2{ Package numericalio ,  Package-numericalio }
 @ctindex  File input  @subentry  read_matrix
-@category{File input}
+@cat2{ File input ,  File-input }
 @closecatbox
 
 @end deffn
@@ -173,9 +173,9 @@ See also @mrefcomma{openr} @mrefcomma{read_matrix} @mrefcomma{read_hashed_array}
 
 @opencatbox{Categories:}
 @ctindex  Package numericalio  @subentry  read_array
-@category{Package numericalio}
+@cat2{ Package numericalio ,  Package-numericalio }
 @ctindex  File input  @subentry  read_array
-@category{File input}
+@cat2{ File input ,  File-input }
 @closecatbox
 
 @end deffn
@@ -206,9 +206,9 @@ See also @mrefcomma{openr} @mrefcomma{read_matrix} @mrefcomma{read_array}
 
 @opencatbox{Categories:}
 @ctindex  Package numericalio  @subentry  read_hashed_array
-@category{Package numericalio}
+@cat2{ Package numericalio ,  Package-numericalio }
 @ctindex  File input  @subentry  read_hashed_array
-@category{File input}
+@cat2{ File input ,  File-input }
 @closecatbox
 
 @end deffn
@@ -237,9 +237,9 @@ See also @mrefcomma{openr} @mrefcomma{read_matrix} @mrefcomma{read_array}
 
 @opencatbox{Categories:}
 @ctindex  Package numericalio  @subentry  read_nested_list
-@category{Package numericalio}
+@cat2{ Package numericalio ,  Package-numericalio }
 @ctindex  File input  @subentry  read_nested_list
-@category{File input}
+@cat2{ File input ,  File-input }
 @closecatbox
 
 @end deffn
@@ -270,9 +270,9 @@ See also @mrefcomma{openr} @mrefcomma{read_matrix} @mrefcomma{read_array}
 
 @opencatbox{Categories:}
 @ctindex  Package numericalio  @subentry  read_list
-@category{Package numericalio}
+@cat2{ Package numericalio ,  Package-numericalio }
 @ctindex  File input  @subentry  read_list
-@category{File input}
+@cat2{ File input ,  File-input }
 @closecatbox
 
 @end deffn
@@ -317,9 +317,9 @@ See also @mref{openw} and @mrefdot{read_matrix}
 
 @opencatbox{Categories:}
 @ctindex  Package numericalio  @subentry  write_data
-@category{Package numericalio}
+@cat2{ Package numericalio ,  Package-numericalio }
 @ctindex  File output  @subentry  write_data
-@category{File output}
+@cat2{ File output ,  File-output }
 @closecatbox
 
 @end deffn
@@ -338,7 +338,7 @@ If not specified, @code{numericalio} assumes the external byte order is most-sig
 
 @opencatbox{Categories:}
 @ctindex  Package numericalio  @subentry  assume_external_byte_order
-@category{Package numericalio}
+@cat2{ Package numericalio ,  Package-numericalio }
 @closecatbox
 @end deffn
 
@@ -350,9 +350,9 @@ See also @mref{openw_binary} and @mrefdot{openr}
 
 @opencatbox{Categories:}
 @ctindex  Package numericalio  @subentry  openr_binary
-@category{Package numericalio}
+@cat2{ Package numericalio ,  Package-numericalio }
 @ctindex  File input  @subentry  openr_binary
-@category{File input}
+@cat2{ File input ,  File-input }
 @closecatbox
 @end deffn
 
@@ -364,9 +364,9 @@ See also @mrefcomma{openr_binary} @mref{opena_binary} and @mrefdot{openw}
 
 @opencatbox{Categories:}
 @ctindex  Package numericalio  @subentry  openw_binary
-@category{Package numericalio}
+@cat2{ Package numericalio ,  Package-numericalio }
 @ctindex  File output  @subentry  openw_binary
-@category{File output}
+@cat2{ File output ,  File-output }
 @closecatbox
 @end deffn
 
@@ -376,9 +376,9 @@ Returns an output stream of 8-bit unsigned bytes to append the file named by @va
 
 @opencatbox{Categories:}
 @ctindex  Package numericalio  @subentry  opena_binary
-@category{Package numericalio}
+@cat2{ Package numericalio ,  Package-numericalio }
 @ctindex  File output  @subentry  opena_binary
-@category{File output}
+@cat2{ File output ,  File-output }
 @closecatbox
 @end deffn
 
@@ -396,9 +396,9 @@ See also @mrefdot{read_matrix}
 
 @opencatbox{Categories:}
 @ctindex  Package numericalio  @subentry  read_binary_matrix
-@category{Package numericalio}
+@cat2{ Package numericalio ,  Package-numericalio }
 @ctindex  File input  @subentry  read_binary_matrix
-@category{File input}
+@cat2{ File input ,  File-input }
 @closecatbox
 @end deffn
 
@@ -417,9 +417,9 @@ See also @mrefdot{read_array}
 
 @opencatbox{Categories:}
 @ctindex  Package numericalio  @subentry  read_binary_array
-@category{Package numericalio}
+@cat2{ Package numericalio ,  Package-numericalio }
 @ctindex  File input  @subentry  read_binary_array
-@category{File input}
+@cat2{ File input ,  File-input }
 @closecatbox
 @end deffn
 
@@ -441,9 +441,9 @@ See also @mrefdot{read_list}
 
 @opencatbox{Categories:}
 @ctindex  Package numericalio  @subentry  read_binary_list
-@category{Package numericalio}
+@cat2{ Package numericalio ,  Package-numericalio }
 @ctindex  File input  @subentry  read_binary_list
-@category{File input}
+@cat2{ File input ,  File-input }
 @closecatbox
 @end deffn
 
@@ -475,8 +475,8 @@ See also @mrefdot{write_data}
 
 @opencatbox{Categories:}
 @ctindex  Package numericalio  @subentry  write_binary_data
-@category{Package numericalio}
+@cat2{ Package numericalio ,  Package-numericalio }
 @ctindex  File output  @subentry  write_binary_data
-@category{File output}
+@cat2{ File output ,  File-output }
 @closecatbox
 @end deffn
