--- a/doc/info/odepack.texi
+++ b/doc/info/odepack.texi
@@ -30,11 +30,11 @@ References:
 
 @opencatbox{Categories:}
 @ctindex  Numerical methods  @subentry  Introduction to ODEPACK
-@category{Numerical methods}
+@cat2{ Numerical methods ,  Numerical-methods }
 @ctindex  Share packages  @subentry  Introduction to ODEPACK
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package odepack  @subentry  Introduction to ODEPACK
-@category{Package odepack}
+@cat2{ Package odepack ,  Package-odepack }
 @closecatbox
 
 @node Getting Started with ODEPACK, Functions and Variables for odepack, Introduction to ODEPACK, odepack-pkg
