--- a/doc/info/opsubst.texi
+++ b/doc/info/opsubst.texi
@@ -78,11 +78,11 @@ To use this function write first @code{load("opsubst")}.
 
 @opencatbox{Categories:}
 @ctindex  Expressions  @subentry  opsubst
-@category{Expressions}
+@cat2{ Expressions ,  Expressions }
 @ctindex  Share packages  @subentry  opsubst
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package opsubst  @subentry  opsubst
-@category{Package opsubst}
+@cat2{ Package opsubst ,  Package-opsubst }
 @closecatbox
 
 @end deffn
