--- a/doc/info/romberg.texi
+++ b/doc/info/romberg.texi
@@ -150,9 +150,9 @@ A 2-dimensional integration, implemented by nested calls to @code{romberg}.
 
 @opencatbox{Categories:}
 @ctindex  Package romberg  @subentry  romberg
-@category{Package romberg}
+@cat2{ Package romberg ,  Package-romberg }
 @ctindex  Numerical methods  @subentry  romberg
-@category{Numerical methods}
+@cat2{ Numerical methods ,  Numerical-methods }
 @closecatbox
 
 @end deffn
@@ -173,7 +173,7 @@ See also @mref{rombergit} and @mref{rombergmin}.
 
 @opencatbox{Categories:}
 @ctindex  Package romberg  @subentry  rombergabs
-@category{Package romberg}
+@cat2{ Package romberg ,  Package-romberg }
 @closecatbox
 
 @end defvr
@@ -191,7 +191,7 @@ See also @mref{rombergabs} and @mref{rombergtol}.
 
 @opencatbox{Categories:}
 @ctindex  Package romberg  @subentry  rombergit
-@category{Package romberg}
+@cat2{ Package romberg ,  Package-romberg }
 @closecatbox
 
 @end defvr
@@ -207,7 +207,7 @@ See also @mref{rombergit}, @mref{rombergabs}, and @mref{rombergtol}.
 
 @opencatbox{Categories:}
 @ctindex  Package romberg  @subentry  rombergmin
-@category{Package romberg}
+@cat2{ Package romberg ,  Package-romberg }
 @closecatbox
 
 @end defvr
@@ -228,7 +228,7 @@ See also @mref{rombergit} and @mref{rombergmin}.
 
 @opencatbox{Categories:}
 @ctindex  Package romberg  @subentry  rombergtol
-@category{Package romberg}
+@cat2{ Package romberg ,  Package-romberg }
 @closecatbox
 
 @end defvr
