--- a/doc/info/simplifications.texi
+++ b/doc/info/simplifications.texi
@@ -66,13 +66,13 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Simplification functions  @subentry  Package absimp
-@category{Simplification functions}
+@cat2{ Simplification functions ,  Simplification-functions }
 @ctindex  Rules and patterns  @subentry  Package absimp
-@category{Rules and patterns}
+@cat2{ Rules and patterns ,  Rules-and-patterns }
 @ctindex  Share packages  @subentry  Package absimp
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package absimp  @subentry  Package absimp
-@category{Package absimp}
+@cat2{ Package absimp ,  Package-absimp }
 @closecatbox
 
 
@@ -116,11 +116,11 @@ useful when the expressions are very large.
 
 @opencatbox{Categories:}
 @ctindex  Expressions  @subentry  Package facexp
-@category{Expressions}
+@cat2{ Expressions ,  Expressions }
 @ctindex  Share packages  @subentry  Package facexp
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package facexp  @subentry  Package facexp
-@category{Package facexp}
+@cat2{ Package facexp ,  Package-facexp }
 @closecatbox
 
 
@@ -167,9 +167,9 @@ In  addition,  the  setting  of  the  switches   @code{facsum_combine}  and
 
 @opencatbox{Categories:}
 @ctindex  Package facexp  @subentry  facsum
-@category{Package facexp}
+@cat2{ Package facexp ,  Package-facexp }
 @ctindex  Expressions  @subentry  facsum
-@category{Expressions}
+@cat2{ Expressions ,  Expressions }
 @closecatbox
 
 @end deffn
@@ -193,9 +193,9 @@ must be presented single-quoted whenever it appears in the argument list of @cod
 
 @opencatbox{Categories:}
 @ctindex  Package facexp  @subentry  nextlayerfactor
-@category{Package facexp}
+@cat2{ Package facexp ,  Package-facexp }
 @ctindex  Expressions  @subentry  nextlayerfactor
-@category{Expressions}
+@cat2{ Expressions ,  Expressions }
 @closecatbox
 
 @end defvr
@@ -218,9 +218,9 @@ through the terms of the numerator.
 
 @opencatbox{Categories:}
 @ctindex  Package facexp  @subentry  facsum_combine
-@category{Package facexp}
+@cat2{ Package facexp ,  Package-facexp }
 @ctindex  Expressions  @subentry  facsum_combine
-@category{Expressions}
+@cat2{ Expressions ,  Expressions }
 @closecatbox
 
 @end defvr
@@ -234,9 +234,9 @@ the factor and the exponent will be processed in this way.
 
 @opencatbox{Categories:}
 @ctindex  Package facexp  @subentry  factorfacsum
-@category{Package facexp}
+@cat2{ Package facexp ,  Package-facexp }
 @ctindex  Expressions  @subentry  factorfacsum
-@category{Expressions}
+@cat2{ Expressions ,  Expressions }
 @closecatbox
 
 @end deffn
@@ -281,9 +281,9 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package facexp  @subentry  collectterms
-@category{Package facexp}
+@cat2{ Package facexp ,  Package-facexp }
 @ctindex  Expressions  @subentry  collectterms
-@category{Expressions}
+@cat2{ Expressions ,  Expressions }
 @closecatbox
 @end deffn
 
@@ -295,9 +295,9 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Share packages  @subentry  Package functs
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package functs  @subentry  Package functs
-@category{Package functs}
+@cat2{ Package functs ,  Package-functs }
 @closecatbox
 
 @anchor{rempart}
@@ -311,9 +311,9 @@ To use this function write first @code{load("functs")}.
 
 @opencatbox{Categories:}
 @ctindex  Package functs  @subentry  rempart
-@category{Package functs}
+@cat2{ Package functs ,  Package-functs }
 @ctindex  Expressions  @subentry  rempart
-@category{Expressions}
+@cat2{ Expressions ,  Expressions }
 @closecatbox
 
 @end deffn
@@ -343,9 +343,9 @@ To use @code{wronskian}, first @code{load("functs")}. Example:
 
 @opencatbox{Categories:}
 @ctindex  Package functs  @subentry  wronskian
-@category{Package functs}
+@cat2{ Package functs ,  Package-functs }
 @ctindex  Differential calculus  @subentry  wronskian
-@category{Differential calculus}
+@cat2{ Differential calculus ,  Differential-calculus }
 @closecatbox
 
 @end deffn
@@ -360,9 +360,9 @@ To use this function write first @code{load("functs")}.
 
 @opencatbox{Categories:}
 @ctindex  Package functs  @subentry  tracematrix
-@category{Package functs}
+@cat2{ Package functs ,  Package-functs }
 @ctindex  Matrices  @subentry  tracematrix
-@category{Matrices}
+@cat2{ Matrices ,  Matrices }
 @closecatbox
 
 @end deffn
@@ -376,9 +376,9 @@ To use this function write first @code{load("functs")}.
 
 @opencatbox{Categories:}
 @ctindex  Package functs  @subentry  rational
-@category{Package functs}
+@cat2{ Package functs ,  Package-functs }
 @ctindex  Expressions  @subentry  rational
-@category{Expressions}
+@cat2{ Expressions ,  Expressions }
 @closecatbox
 
 @end deffn
@@ -396,9 +396,9 @@ To use this function write first @code{load("functs")}.
 
 @opencatbox{Categories:}
 @ctindex  Package functs  @subentry  nonzeroandfreeof
-@category{Package functs}
+@cat2{ Package functs ,  Package-functs }
 @ctindex  Expressions  @subentry  nonzeroandfreeof
-@category{Expressions}
+@cat2{ Expressions ,  Expressions }
 @closecatbox
 
 @end deffn
@@ -436,9 +436,9 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package antid  @subentry  linear
-@category{Package antid}
+@cat2{ Package antid ,  Package-antid }
 @ctindex  Expressions  @subentry  linear
-@category{Expressions}
+@cat2{ Expressions ,  Expressions }
 @closecatbox
 
 @end deffn
@@ -493,9 +493,9 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package functs  @subentry  gcdivide
-@category{Package functs}
+@cat2{ Package functs ,  Package-functs }
 @ctindex  Polynomials  @subentry  gcdivide
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @closecatbox
 @end deffn
 
@@ -510,9 +510,9 @@ To use this function write first @code{load("functs")}.
 
 @opencatbox{Categories:}
 @ctindex  Package functs  @subentry  arithmetic
-@category{Package functs}
+@cat2{ Package functs ,  Package-functs }
 @ctindex  Sums and products  @subentry  arithmetic
-@category{Sums and products}
+@cat2{ Sums and products ,  Sums-and-products }
 @closecatbox
 
 @end deffn
@@ -526,9 +526,9 @@ To use this function write first @code{load("functs")}.
 
 @opencatbox{Categories:}
 @ctindex  Package functs  @subentry  geometric
-@category{Package functs}
+@cat2{ Package functs ,  Package-functs }
 @ctindex  Sums and products  @subentry  geometric
-@category{Sums and products}
+@cat2{ Sums and products ,  Sums-and-products }
 @closecatbox
 
 @end deffn
@@ -542,9 +542,9 @@ To use this function write first @code{load("functs")}.
 
 @opencatbox{Categories:}
 @ctindex  Package functs  @subentry  harmonic
-@category{Package functs}
+@cat2{ Package functs ,  Package-functs }
 @ctindex  Sums and products  @subentry  harmonic
-@category{Sums and products}
+@cat2{ Sums and products ,  Sums-and-products }
 @closecatbox
 
 @end deffn
@@ -557,9 +557,9 @@ To use this function write first @code{load("functs")}.
 
 @opencatbox{Categories:}
 @ctindex  Package functs  @subentry  arithsum
-@category{Package functs}
+@cat2{ Package functs ,  Package-functs }
 @ctindex  Sums and products  @subentry  arithsum
-@category{Sums and products}
+@cat2{ Sums and products ,  Sums-and-products }
 @closecatbox
 
 @end deffn
@@ -574,9 +574,9 @@ To use this function write first @code{load("functs")}.
 
 @opencatbox{Categories:}
 @ctindex  Package functs  @subentry  geosum
-@category{Package functs}
+@cat2{ Package functs ,  Package-functs }
 @ctindex  Sums and products  @subentry  geosum
-@category{Sums and products}
+@cat2{ Sums and products ,  Sums-and-products }
 @closecatbox
 
 @end deffn
@@ -590,9 +590,9 @@ To use this function write first @code{load("functs")}.
 
 @opencatbox{Categories:}
 @ctindex  Package functs  @subentry  gaussprob
-@category{Package functs}
+@cat2{ Package functs ,  Package-functs }
 @ctindex  Mathematical functions  @subentry  gaussprob
-@category{Mathematical functions}
+@cat2{ Mathematical functions ,  Mathematical-functions }
 @closecatbox
 
 @end deffn
@@ -606,9 +606,9 @@ To use this function write first @code{load("functs")}.
 
 @opencatbox{Categories:}
 @ctindex  Package functs  @subentry  gd
-@category{Package functs}
+@cat2{ Package functs ,  Package-functs }
 @ctindex  Mathematical functions  @subentry  gd
-@category{Mathematical functions}
+@cat2{ Mathematical functions ,  Mathematical-functions }
 @closecatbox
 
 @end deffn
@@ -622,9 +622,9 @@ To use this function write first @code{load("functs")}.
 
 @opencatbox{Categories:}
 @ctindex  Package functs  @subentry  agd
-@category{Package functs}
+@cat2{ Package functs ,  Package-functs }
 @ctindex  Mathematical functions  @subentry  agd
-@category{Mathematical functions}
+@cat2{ Mathematical functions ,  Mathematical-functions }
 @closecatbox
 
 @end deffn
@@ -637,9 +637,9 @@ To use this function write first @code{load("functs")}.
 
 @opencatbox{Categories:}
 @ctindex  Package functs  @subentry  vers
-@category{Package functs}
+@cat2{ Package functs ,  Package-functs }
 @ctindex  Mathematical functions  @subentry  vers
-@category{Mathematical functions}
+@cat2{ Mathematical functions ,  Mathematical-functions }
 @closecatbox
 
 @end deffn
@@ -652,9 +652,9 @@ To use this function write first @code{load("functs")}.
 
 @opencatbox{Categories:}
 @ctindex  Package functs  @subentry  covers
-@category{Package functs}
+@cat2{ Package functs ,  Package-functs }
 @ctindex  Mathematical functions  @subentry  covers
-@category{Mathematical functions}
+@cat2{ Mathematical functions ,  Mathematical-functions }
 @closecatbox
 
 @end deffn
@@ -667,9 +667,9 @@ To use this function write first @code{load("functs")}.
 
 @opencatbox{Categories:}
 @ctindex  Package functs  @subentry  exsec
-@category{Package functs}
+@cat2{ Package functs ,  Package-functs }
 @ctindex  Mathematical functions  @subentry  exsec
-@category{Mathematical functions}
+@cat2{ Mathematical functions ,  Mathematical-functions }
 @closecatbox
 
 @end deffn
@@ -682,9 +682,9 @@ To use this function write first @code{load("functs")}.
 
 @opencatbox{Categories:}
 @ctindex  Package functs  @subentry  hav
-@category{Package functs}
+@cat2{ Package functs ,  Package-functs }
 @ctindex  Mathematical functions  @subentry  hav
-@category{Mathematical functions}
+@cat2{ Mathematical functions ,  Mathematical-functions }
 @closecatbox
 
 @end deffn
@@ -699,9 +699,9 @@ To use this function write first @code{load("functs")}.
 
 @opencatbox{Categories:}
 @ctindex  Package functs  @subentry  combination
-@category{Package functs}
+@cat2{ Package functs ,  Package-functs }
 @ctindex  Mathematical functions  @subentry  combination
-@category{Mathematical functions}
+@cat2{ Mathematical functions ,  Mathematical-functions }
 @closecatbox
 
 @end deffn
@@ -716,9 +716,9 @@ To use this function write first @code{load("functs")}.
 
 @opencatbox{Categories:}
 @ctindex  Package functs  @subentry  permutation
-@category{Package functs}
+@cat2{ Package functs ,  Package-functs }
 @ctindex  Mathematical functions  @subentry  permutation
-@category{Mathematical functions}
+@cat2{ Mathematical functions ,  Mathematical-functions }
 @closecatbox
 
 @end deffn
@@ -854,13 +854,13 @@ or @code{disprule ("*rule2")} to display the definition of the second multiplica
 
 @opencatbox{Categories:}
 @ctindex  Simplification functions  @subentry  Package ineq
-@category{Simplification functions}
+@cat2{ Simplification functions ,  Simplification-functions }
 @ctindex  Rules and patterns  @subentry  Package ineq
-@category{Rules and patterns}
+@cat2{ Rules and patterns ,  Rules-and-patterns }
 @ctindex  Share packages  @subentry  Package ineq
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package ineq  @subentry  Package ineq
-@category{Package ineq}
+@cat2{ Package ineq ,  Package-ineq }
 @closecatbox
 
 
@@ -873,11 +873,11 @@ or @code{disprule ("*rule2")} to display the definition of the second multiplica
 
 @opencatbox{Categories:}
 @ctindex  Expressions  @subentry  Package rducon
-@category{Expressions}
+@cat2{ Expressions ,  Expressions }
 @ctindex  Share packages  @subentry  Package rducon
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package rducon  @subentry  Package rducon
-@category{Package rducon}
+@cat2{ Package rducon ,  Package-rducon }
 @closecatbox
 
 
@@ -918,9 +918,9 @@ symbols to represent each constant subexpression found by @code{reduce_consts}.
 
 @opencatbox{Categories:}
 @ctindex  Package rducon  @subentry  reduce_consts
-@category{Package rducon}
+@cat2{ Package rducon ,  Package-rducon }
 @ctindex  Expressions  @subentry  reduce_consts
-@category{Expressions}
+@cat2{ Expressions ,  Expressions }
 @closecatbox
 
 @end deffn
@@ -933,11 +933,11 @@ symbols to represent each constant subexpression found by @code{reduce_consts}.
 
 @opencatbox{Categories:}
 @ctindex  Expressions  @subentry  Package scifac
-@category{Expressions}
+@cat2{ Expressions ,  Expressions }
 @ctindex  Share packages  @subentry  Package scifac
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package scifac  @subentry  Package scifac
-@category{Package scifac}
+@cat2{ Package scifac ,  Package-scifac }
 @closecatbox
 
 
@@ -970,9 +970,9 @@ compact pair-factored result.
 
 @opencatbox{Categories:}
 @ctindex  Package scifac  @subentry  gcfac
-@category{Package scifac}
+@cat2{ Package scifac ,  Package-scifac }
 @ctindex  Expressions  @subentry  gcfac
-@category{Expressions}
+@cat2{ Expressions ,  Expressions }
 @closecatbox
 
 @end deffn
