--- a/doc/info/stirling.texi
+++ b/doc/info/stirling.texi
@@ -68,11 +68,11 @@ To use this function write first @code{load("stirling")}.
 
 @opencatbox{Categories:}
 @ctindex  Gamma and factorial functions  @subentry  stirling
-@category{Gamma and factorial functions}
+@cat2{ Gamma and factorial functions ,  Gamma-and-factorial-functions }
 @ctindex  Share packages  @subentry  stirling
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package stirling  @subentry  stirling
-@category{Package stirling}
+@cat2{ Package stirling ,  Package-stirling }
 @closecatbox
 
 @end deffn
