--- a/doc/info/unit.texi
+++ b/doc/info/unit.texi
@@ -76,11 +76,11 @@ units.
 
 @opencatbox{Categories:}
 @ctindex  Physical units  @subentry  Introduction to Units
-@category{Physical units}
+@cat2{ Physical units ,  Physical-units }
 @ctindex  Share packages  @subentry  Introduction to Units
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package unit  @subentry  Introduction to Units
-@category{Package unit}
+@cat2{ Package unit ,  Package-unit }
 @closecatbox
 
 
@@ -249,7 +249,7 @@ See also @mref{uforget}. To use this function write first @code{load("unit")}.
 
 @opencatbox{Categories:}
 @ctindex  Package unit  @subentry  setunits
-@category{Package unit}
+@cat2{ Package unit ,  Package-unit }
 @closecatbox
 
 @end deffn
@@ -294,7 +294,7 @@ See also @mref{setunits}. To use this function write first @code{load("unit")}.
 
 @opencatbox{Categories:}
 @ctindex  Package unit  @subentry  uforget
-@category{Package unit}
+@cat2{ Package unit ,  Package-unit }
 @closecatbox
 
 @end deffn
@@ -402,7 +402,7 @@ See also @mref{setunits} and @mref{uforget}. To use this function write first @c
 
 @opencatbox{Categories:}
 @ctindex  Package unit  @subentry  convert
-@category{Package unit}
+@cat2{ Package unit ,  Package-unit }
 @closecatbox
 
 @end deffn
@@ -692,7 +692,7 @@ control over their working environment.
 
 @opencatbox{Categories:}
 @ctindex  Package unit  @subentry  usersetunits
-@category{Package unit}
+@cat2{ Package unit ,  Package-unit }
 @closecatbox
 
 @end defvr
@@ -723,7 +723,7 @@ in the @emph{unit.mac} file is @var{%unitexpand}.
 
 @opencatbox{Categories:}
 @ctindex  Package unit  @subentry  metricexpandall
-@category{Package unit}
+@cat2{ Package unit ,  Package-unit }
 @closecatbox
 
 @end deffn
@@ -736,7 +736,7 @@ of @emph{unit}.
 
 @opencatbox{Categories:}
 @ctindex  Package unit  @subentry  %unitexpand
-@category{Package unit}
+@cat2{ Package unit ,  Package-unit }
 @closecatbox
 
 @end defvr
