--- a/doc/info/wrstcse.texi
+++ b/doc/info/wrstcse.texi
@@ -24,9 +24,9 @@ will make both parameters tolerate in the same way.
 
 @opencatbox{Categories:}
 @ctindex  Share packages  @subentry  Introduction to wrstcse
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package wrstcse  @subentry  Introduction to wrstcse
-@category{Package wrstcse}
+@cat2{ Package wrstcse ,  Package-wrstcse }
 @closecatbox
 
 @node Functions and Variables for wrstcse, , Introduction to wrstcse, wrstcse-pkg
