--- a/doc/info/Bugs.texi
+++ b/doc/info/Bugs.texi
@@ -57,7 +57,7 @@ and then defines functions and variables appropriate to the test.
 
 @opencatbox{Categories:}
 @ctindex  Debugging  @subentry  run_testsuite
-@category{Debugging}
+@cat2{ Debugging ,  Debugging }
 @closecatbox
 @end deffn
 
@@ -83,9 +83,9 @@ and 63.
 
 @opencatbox{Categories:}
 @ctindex  Debugging  @subentry  testsuite_files
-@category{Debugging}
+@cat2{ Debugging ,  Debugging }
 @ctindex  Global variables  @subentry  testsuite_files
-@category{Global variables}
+@cat2{ Global variables ,  Global-variables }
 @closecatbox
 @end defvr
 
@@ -97,9 +97,9 @@ directory that is run as a part of the test suite by
 
 @opencatbox{Categories:}
 @ctindex  Debugging  @subentry  share_testsuite_files
-@category{Debugging}
+@cat2{ Debugging ,  Debugging }
 @ctindex  Global variables  @subentry  share_testsuite_files
-@category{Global variables}
+@cat2{ Global variables ,  Global-variables }
 @closecatbox
 @end defvr
 
@@ -119,7 +119,7 @@ and Lisp version information into the bug report.
 
 @opencatbox{Categories:}
 @ctindex  Debugging  @subentry  bug_report
-@category{Debugging}
+@cat2{ Debugging ,  Debugging }
 @closecatbox
 @end deffn
 
@@ -217,7 +217,7 @@ by setting the variables @code{maxima_frontend} and
 
 @opencatbox{Categories:}
 @ctindex  Debugging  @subentry  build_info
-@category{Debugging}
+@cat2{ Debugging ,  Debugging }
 @closecatbox
 @end deffn
 
