--- a/doc/info/Database.texi
+++ b/doc/info/Database.texi
@@ -46,7 +46,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  alphabetic
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end defvr
 
@@ -108,9 +108,9 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  constant
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @ctindex  Constants  @subentry  constant
-@category{Constants}
+@cat2{ Constants ,  Constants }
 @closecatbox
 @end deffn
 
@@ -163,9 +163,9 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Predicate functions  @subentry  constantp
-@category{Predicate functions}
+@cat2{ Predicate functions ,  Predicate-functions }
 @ctindex  Constants  @subentry  constantp
-@category{Constants}
+@cat2{ Constants ,  Constants }
 @closecatbox
 @end deffn
 
@@ -325,7 +325,7 @@ for each separate description of a property.
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  declare
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end deffn
 
@@ -356,7 +356,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  decreasing
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end defvr
 
@@ -388,7 +388,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  even
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end defvr
 
@@ -434,9 +434,9 @@ See also @mref{declare} and @mrefdot{features}
 
 @opencatbox{Categories:}
 @ctindex  Predicate functions  @subentry  featurep
-@category{Predicate functions}
+@cat2{ Predicate functions ,  Predicate-functions }
 @ctindex  Declarations and inferences  @subentry  featurep
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end deffn
 
@@ -495,7 +495,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  features
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end defvr
 
@@ -547,7 +547,7 @@ x is not numeric.
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  get
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end deffn
 
@@ -575,7 +575,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  integer
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end defvr
 
@@ -603,7 +603,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  integervalued
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end defvr
 
@@ -640,7 +640,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Expressions  @subentry  nonarray
-@category{Expressions}
+@cat2{ Expressions ,  Expressions }
 @closecatbox
 @end deffn
 
@@ -656,11 +656,11 @@ See also @mrefdot{declare}
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  nonscalar
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @ctindex  Vectors  @subentry  nonscalar
-@category{Vectors}
+@cat2{ Vectors ,  Vectors }
 @ctindex  Matrices  @subentry  nonscalar
-@category{Matrices}
+@cat2{ Matrices ,  Matrices }
 @closecatbox
 @end defvr
 
@@ -675,11 +675,11 @@ See also the predicate function @mref{scalarp} and @mrefdot{declare}
 
 @opencatbox{Categories:}
 @ctindex  Predicate functions  @subentry  nonscalarp
-@category{Predicate functions}
+@cat2{ Predicate functions ,  Predicate-functions }
 @ctindex  Vectors  @subentry  nonscalarp
-@category{Vectors}
+@cat2{ Vectors ,  Vectors }
 @ctindex  Matrices  @subentry  nonscalarp
-@category{Matrices}
+@cat2{ Matrices ,  Matrices }
 @closecatbox
 @end deffn
 
@@ -696,9 +696,9 @@ See also @mrefdot{declare}
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  posfun
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @ctindex  Operators  @subentry  posfun
-@category{Operators}
+@cat2{ Operators ,  Operators }
 @closecatbox
 @end defvr
 
@@ -721,9 +721,9 @@ cannot otherwise be displayed, i.e.  for @mrefcomma{atvalue}@w{}
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  printprops
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @ctindex  Display functions  @subentry  printprops
-@category{Display functions}
+@cat2{ Display functions ,  Display-functions }
 @closecatbox
 @end deffn
 
@@ -739,7 +739,7 @@ Returns a list of the names of all the properties associated with the atom
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  properties
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end deffn
 
@@ -759,9 +759,9 @@ mentioned in @mrefcomma{infolists} such as specified by @mrefcomma{atvalue}@w{}
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  props
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @ctindex  Global variables  @subentry  props
-@category{Global variables}
+@cat2{ Global variables ,  Global-variables }
 @closecatbox
 @end defvr
 
@@ -778,7 +778,7 @@ returns a list of atoms which have atvalues.
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  propvars
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end deffn
 
@@ -821,7 +821,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  put
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end deffn
 
@@ -857,7 +857,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  qput
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end deffn
 
@@ -874,7 +874,7 @@ See also @mrefdot{declare}
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  rational
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end defvr
 
@@ -894,7 +894,7 @@ See also @mrefdot{declare}
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  real
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end defvr
 
@@ -915,7 +915,7 @@ when @code{rem} was called, or @code{false} if it had no such property.
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  rem
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end deffn
 
@@ -976,7 +976,7 @@ property.  This behavior is unlike the more specific remove functions
 @c IN SERIOUS NEED OF EXAMPLES HERE
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  remove
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end deffn
 
@@ -991,7 +991,7 @@ See also @mrefdot{declare}
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  scalar
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end defvr
 
@@ -1009,11 +1009,11 @@ See also the predicate function @mrefdot{nonscalarp}
 
 @opencatbox{Categories:}
 @ctindex  Predicate functions  @subentry  scalarp
-@category{Predicate functions}
+@cat2{ Predicate functions ,  Predicate-functions }
 @ctindex  Vectors  @subentry  scalarp
-@category{Vectors}
+@cat2{ Vectors ,  Vectors }
 @ctindex  Matrices  @subentry  scalarp
-@category{Matrices}
+@cat2{ Matrices ,  Matrices }
 @closecatbox
 @end deffn
 
@@ -1036,7 +1036,7 @@ of contexts which are active by way of the @code{activate} function.
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  activate
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end deffn
 
@@ -1051,7 +1051,7 @@ they are subcontexts of the current context.
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  activecontexts
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end defvr
 
@@ -1078,7 +1078,7 @@ See also @mrefdot{equal}
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  askequal
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end deffn
 
@@ -1107,7 +1107,7 @@ respectively.
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  askinteger
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end deffn
 
@@ -1126,7 +1126,7 @@ computation.  The return value of @code{asksign} is one of @code{pos},
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  asksign
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end deffn
 
@@ -1205,7 +1205,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  assume
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end deffn
 
@@ -1236,7 +1236,7 @@ scalars for all the operators listed above.
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  assumescalar
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end defvr
 
@@ -1274,7 +1274,7 @@ a function which returns @code{true} for all arguments.
 @c NEED EXAMPLES HERE
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  assume_pos
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end defvr
 
@@ -1368,7 +1368,7 @@ p;
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  assume_pos_pred
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end defvr
 
@@ -1391,7 +1391,7 @@ See @mref{contexts} for a general description of the context mechanism.
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  context
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end defvr
 
@@ -1432,7 +1432,7 @@ See also @mrefcomma{facts} @mrefcomma{newcontext} @mrefcomma{supcontext}@w{}
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  contexts
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end defvr
 
@@ -1444,7 +1444,7 @@ Deactivates the specified contexts @var{context_1}, @dots{}, @var{context_n}.
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  deactivate
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end deffn
 
@@ -1465,7 +1465,7 @@ are active, but in a different context, are not listed.
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  facts
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end deffn
 
@@ -1484,7 +1484,7 @@ forgets each item on the list.
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  forget
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end deffn
 
@@ -1568,9 +1568,9 @@ a > 0
 
 @opencatbox{Categories:}
 @ctindex  Predicate functions  @subentry  is
-@category{Predicate functions}
+@cat2{ Predicate functions ,  Predicate-functions }
 @ctindex  Declarations and inferences  @subentry  is
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end deffn
 
@@ -1595,7 +1595,7 @@ context, or by use of the function @mrefdot{activate}
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  killcontext
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end deffn
 
@@ -1634,9 +1634,9 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Predicate functions  @subentry  maybe
-@category{Predicate functions}
+@cat2{ Predicate functions ,  Predicate-functions }
 @ctindex  Declarations and inferences  @subentry  maybe
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end deffn
 
@@ -1657,7 +1657,7 @@ If @var{name} is not specified, a new name is created (via @code{gensym}) and re
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  newcontext
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end deffn
 
@@ -1675,7 +1675,7 @@ See also @mrefdot{signum}
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  sign
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end deffn
 
@@ -1698,7 +1698,7 @@ If @var{name} is not specified, a new name is created (via @code{gensym}) and re
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  supcontext
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end deffn
 
@@ -1735,7 +1735,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Mathematical functions  @subentry  charfun
-@category{Mathematical functions}
+@cat2{ Mathematical functions ,  Mathematical-functions }
 @closecatbox
 @end deffn
 
@@ -1790,7 +1790,7 @@ The real domain of @code{acos (x^2 + 1)} is empty.
 
 @opencatbox{Categories:}
 @ctindex  Declarations and inferences  @subentry  compare
-@category{Declarations and inferences}
+@cat2{ Declarations and inferences ,  Declarations-and-inferences }
 @closecatbox
 @end deffn
 
@@ -1949,7 +1949,7 @@ Because @code{not @var{expr}} causes evaluation of @var{expr},
 
 @opencatbox{Categories:}
 @ctindex  Operators  @subentry  equal
-@category{Operators}
+@cat2{ Operators ,  Operators }
 @closecatbox
 @end deffn
 
@@ -1998,7 +1998,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Operators  @subentry  notequal
-@category{Operators}
+@cat2{ Operators ,  Operators }
 @closecatbox
 @end deffn
 
@@ -2011,9 +2011,9 @@ not recognized by the Maxima simplifier.
 
 @opencatbox{Categories:}
 @ctindex  Predicate functions  @subentry  unknown
-@category{Predicate functions}
+@cat2{ Predicate functions ,  Predicate-functions }
 @ctindex  Simplification functions  @subentry  unknown
-@category{Simplification functions}
+@cat2{ Simplification functions ,  Simplification-functions }
 @closecatbox
 @end deffn
 
@@ -2052,7 +2052,7 @@ On the other hand @code{zeroequiv (log(a * b) - log(a) - log(b), a)} returns
 
 @opencatbox{Categories:}
 @ctindex  Predicate functions  @subentry  zeroequiv
-@category{Predicate functions}
+@cat2{ Predicate functions ,  Predicate-functions }
 @closecatbox
 @end deffn
 
