--- a/doc/info/Groups.texi
+++ b/doc/info/Groups.texi
@@ -65,6 +65,6 @@ Rows tried 71
 @end example
 @opencatbox{Categories:}
 @ctindex  Group theory  @subentry  todd_coxeter
-@category{Group theory}
+@cat2{ Group theory ,  Group-theory }
 @closecatbox
 @end deffn
