--- a/doc/info/Polynomials.texi
+++ b/doc/info/Polynomials.texi
@@ -68,9 +68,9 @@ symbol @code{/T/} follows the line label of such expressions.
 
 @opencatbox{Categories:}
 @ctindex  Polynomials  @subentry  Introduction to Polynomials
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @ctindex  Rational expressions  @subentry  Introduction to Polynomials
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @closecatbox
 
 @c end concepts Polynomials
@@ -90,7 +90,7 @@ algebraic integers to take effect.
 
 @opencatbox{Categories:}
 @ctindex  Simplification flags and variables  @subentry  algebraic
-@category{Simplification flags and variables}
+@cat2{ Simplification flags and variables ,  Simplification-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -105,7 +105,7 @@ default, will be used.
 
 @opencatbox{Categories:}
 @ctindex  Polynomials  @subentry  berlefact
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @closecatbox
 @end defvr
 
@@ -139,7 +139,7 @@ Examples:
 @end example
 @opencatbox{Categories:}
 @ctindex  Polynomials  @subentry  bezout
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @closecatbox
 @end deffn
 
@@ -172,7 +172,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Polynomials  @subentry  bothcoef
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @closecatbox
 @end deffn
 
@@ -351,7 +351,7 @@ function.
 
 @opencatbox{Categories:}
 @ctindex  Polynomials  @subentry  coeff
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @closecatbox
 @end deffn
 
@@ -381,7 +381,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Polynomials  @subentry  content
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @closecatbox
 @end deffn
 
@@ -426,7 +426,7 @@ See also @mref{num}
 
 @opencatbox{Categories:}
 @ctindex  Expressions  @subentry  denom
-@category{Expressions}
+@cat2{ Expressions ,  Expressions }
 @closecatbox
 @end deffn
 
@@ -460,7 +460,7 @@ Note that @code{y} is the main variable in the second example.
 
 @opencatbox{Categories:}
 @ctindex  Polynomials  @subentry  divide
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @closecatbox
 @end deffn
 
@@ -504,9 +504,9 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Polynomials  @subentry  eliminate
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @ctindex  Algebraic equations  @subentry  eliminate
-@category{Algebraic equations}
+@cat2{ Algebraic equations ,  Algebraic-equations }
 @closecatbox
 @end deffn
 
@@ -556,7 +556,7 @@ gcd is first calculated with the function @code{gcd} and then with the function
 
 @opencatbox{Categories:}
 @ctindex  Polynomials  @subentry  ezgcd
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @closecatbox
 @end deffn
 
@@ -569,7 +569,7 @@ Default value: @code{true}
 
 @opencatbox{Categories:}
 @ctindex  Polynomials  @subentry  facexpand
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @closecatbox
 @end defvr
 
@@ -741,7 +741,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Polynomials  @subentry  factor
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @closecatbox
 @end deffn
 
@@ -794,7 +794,7 @@ See also: @mref{factor_max_degree_print_warning}
 
 @opencatbox{Categories:}
 @ctindex  Polynomials  @subentry  factor_max_degree
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @closecatbox
 @end defvr
 
@@ -811,7 +811,7 @@ See also: @mref{factor_max_degree}
 
 @opencatbox{Categories:}
 @ctindex  Polynomials  @subentry  factor_max_degree_print_warning
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @closecatbox
 @end defvr 
 
@@ -826,7 +826,7 @@ integer factors of rational expressions.
 
 @opencatbox{Categories:}
 @ctindex  Polynomials  @subentry  factorflag
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @closecatbox
 @end defvr
 
@@ -862,7 +862,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Expressions  @subentry  factorout
-@category{Expressions}
+@cat2{ Expressions ,  Expressions }
 @closecatbox
 @end deffn
 
@@ -896,7 +896,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Expressions  @subentry  factorsum
-@category{Expressions}
+@cat2{ Expressions ,  Expressions }
 @closecatbox
 @end deffn
 
@@ -914,7 +914,7 @@ and @code{n_2} is the degree of @code{p_2}.
 
 @opencatbox{Categories:}
 @ctindex  Polynomials  @subentry  fasttimes
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @closecatbox
 @end deffn
 
@@ -970,9 +970,9 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Simplification functions  @subentry  fullratsimp
-@category{Simplification functions}
+@cat2{ Simplification functions ,  Simplification-functions }
 @ctindex  Rational expressions  @subentry  fullratsimp
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @closecatbox
 @end deffn
 
@@ -1072,7 +1072,7 @@ See also @mref{lrats_max_iter} and @mref{fullratsubstflag}.
 
 @opencatbox{Categories:}
 @ctindex  Rational expressions  @subentry  fullratsubst
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @closecatbox
 @end deffn
 
@@ -1087,9 +1087,9 @@ An option variable that is set to @code{true} in @mref{fullratsubst}.
 
 @opencatbox{Categories:}
 @ctindex  Polynomials  @subentry  fullratsubstflag
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @ctindex  Rational expressions  @subentry  fullratsubstflag
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @closecatbox
 @end defvr
 
@@ -1164,9 +1164,9 @@ the polynomials divided by the greatest common divisor.
 
 @opencatbox{Categories:}
 @ctindex  Polynomials  @subentry  gcd
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @ctindex  Rational expressions  @subentry  gcd
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @closecatbox
 @end deffn
 
@@ -1237,9 +1237,9 @@ not the  @code{y+1} we would expect in @code{k[y, x]}.
 
 @opencatbox{Categories:}
 @ctindex  Polynomials  @subentry  gcdex
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @ctindex  Rational expressions  @subentry  gcdex
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @closecatbox
 @end deffn
 
@@ -1257,7 +1257,7 @@ rational integers (i.e.,  ordinary integers).  Factors are normalized by making
 
 @opencatbox{Categories:}
 @ctindex  Integers  @subentry  gcfactor
-@category{Integers}
+@cat2{ Integers ,  Integers }
 @closecatbox
 @end deffn
 
@@ -1284,7 +1284,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Polynomials  @subentry  gfactor
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @closecatbox
 @end deffn
 
@@ -1300,7 +1300,7 @@ of @code{factor}.
 
 @opencatbox{Categories:}
 @ctindex  Expressions  @subentry  gfactorsum
-@category{Expressions}
+@cat2{ Expressions ,  Expressions }
 @closecatbox
 @end deffn
 
@@ -1342,7 +1342,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Expressions  @subentry  hipow
-@category{Expressions}
+@cat2{ Expressions ,  Expressions }
 @closecatbox
 @end deffn
 
@@ -1371,7 +1371,7 @@ the time spent factoring large integers.
 
 @opencatbox{Categories:}
 @ctindex  Integers  @subentry  intfaclim
-@category{Integers}
+@cat2{ Integers ,  Integers }
 @closecatbox
 @end defvr
 
@@ -1424,7 +1424,7 @@ rat: replaced 1.0 by 1/1 = 1.0
 
 @opencatbox{Categories:}
 @ctindex  Numerical evaluation  @subentry  keepfloat
-@category{Numerical evaluation}
+@cat2{ Numerical evaluation ,  Numerical-evaluation }
 @closecatbox
 @end defvr
 
@@ -1445,7 +1445,7 @@ Returns the lowest exponent of @var{x} which explicitly appears in
 
 @opencatbox{Categories:}
 @ctindex  Expressions  @subentry  lopow
-@category{Expressions}
+@cat2{ Expressions ,  Expressions }
 @closecatbox
 @end deffn
 
@@ -1526,9 +1526,9 @@ See also @mref{fullratsubst}.
 
 @opencatbox{Categories:}
 @ctindex  Polynomials  @subentry  lratsubst
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @ctindex  Rational expressions  @subentry  lratsubst
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @closecatbox
 @end deffn
 
@@ -1544,9 +1544,9 @@ the example for @mref{fullratsubst}.
 
 @opencatbox{Categories:}
 @ctindex  Polynomials  @subentry  lrats_max_iter
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @ctindex  Rational expressions  @subentry  lrats_max_iter
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @closecatbox
 @end defvr
 
@@ -1612,7 +1612,7 @@ Examples:
 @end example
 @opencatbox{Categories:}
 @ctindex  Integers  @subentry  modulus
-@category{Integers}
+@cat2{ Integers ,  Integers }
 @closecatbox
 @end defvr
 
@@ -1672,7 +1672,7 @@ See also @mref{denom}
 @c NEED SOME EXAMPLES HERE
 @opencatbox{Categories:}
 @ctindex  Expressions  @subentry  num
-@category{Expressions}
+@cat2{ Expressions ,  Expressions }
 @closecatbox
 @end deffn
 
@@ -1770,7 +1770,7 @@ returns @var{p} (unexpanded), @code{polydecomp (compose ([@var{p_1}, ...,
 
 @opencatbox{Categories:}
 @ctindex  Polynomials  @subentry  polydecomp
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @closecatbox
 @end deffn
 
@@ -1790,7 +1790,7 @@ See @mrefdot{modulus}
 
 @opencatbox{Categories:}
 @ctindex  Polynomials  @subentry  polymod
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @closecatbox
 @end deffn
 
@@ -1860,9 +1860,9 @@ Polynomials with two variables:
 
 @opencatbox{Categories:}
 @ctindex  Predicate functions  @subentry  polynomialp
-@category{Predicate functions}
+@cat2{ Predicate functions ,  Predicate-functions }
 @ctindex  Polynomials  @subentry  polynomialp
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @closecatbox
 @end deffn
 
@@ -1881,7 +1881,7 @@ arguments @var{x_1}, @dots{}, @var{x_n} are interpreted as in @code{ratvars}.
 @c NEED SOME EXAMPLES HERE
 @opencatbox{Categories:}
 @ctindex  Polynomials  @subentry  quotient
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @closecatbox
 @end deffn
 
@@ -1959,7 +1959,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Rational expressions  @subentry  rat
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @closecatbox
 @end deffn
 
@@ -1972,7 +1972,7 @@ when canonical rational expressions (CRE) are used in algebraic mode.
 
 @opencatbox{Categories:}
 @ctindex  Simplification flags and variables  @subentry  ratalgdenom
-@category{Simplification flags and variables}
+@cat2{ Simplification flags and variables ,  Simplification-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -2026,9 +2026,9 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Polynomials  @subentry  ratcoef
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @ctindex  Rational expressions  @subentry  ratcoef
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @closecatbox
 @end deffn
 
@@ -2054,7 +2054,7 @@ denominator, and thus some expressions which are considered ratios by
 @c NEEDS AN EXAMPLE HERE
 @opencatbox{Categories:}
 @ctindex  Rational expressions  @subentry  ratdenom
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @closecatbox
 @end deffn
 
@@ -2119,9 +2119,9 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Simplification flags and variables  @subentry  ratdenomdivide
-@category{Simplification flags and variables}
+@cat2{ Simplification flags and variables ,  Simplification-flags-and-variables }
 @ctindex  Rational expressions  @subentry  ratdenomdivide
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @closecatbox
 @end defvr
 
@@ -2191,7 +2191,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Rational expressions  @subentry  ratdiff
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @closecatbox
 @end deffn
 
@@ -2212,7 +2212,7 @@ See also @mrefdot{totaldisrep}
 
 @opencatbox{Categories:}
 @ctindex  Rational expressions  @subentry  ratdisrep
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @closecatbox
 @end deffn
 
@@ -2282,7 +2282,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Rational expressions  @subentry  ratexpand
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @closecatbox
 @end deffn
 
@@ -2314,7 +2314,7 @@ both be used at the same time.
 @c NEED EXAMPLES HERE
 @opencatbox{Categories:}
 @ctindex  Rational expressions  @subentry  ratfac
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @closecatbox
 @end defvr
 
@@ -2340,7 +2340,7 @@ are not considered ratios by @code{num}.
 @c NEEDS AN EXAMPLE HERE
 @opencatbox{Categories:}
 @ctindex  Rational expressions  @subentry  ratnumer
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @closecatbox
 @end deffn
 
@@ -2356,9 +2356,9 @@ Extended CRE are created by @code{taylor} and related functions.
 
 @opencatbox{Categories:}
 @ctindex  Predicate functions  @subentry  ratp
-@category{Predicate functions}
+@cat2{ Predicate functions ,  Predicate-functions }
 @ctindex  Rational expressions  @subentry  ratp
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @closecatbox
 @end deffn
 
@@ -2372,11 +2372,11 @@ to rational numbers is displayed.
 
 @opencatbox{Categories:}
 @ctindex  Rational expressions  @subentry  ratprint
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @ctindex  Numerical evaluation  @subentry  ratprint
-@category{Numerical evaluation}
+@cat2{ Numerical evaluation ,  Numerical-evaluation }
 @ctindex  Console interaction  @subentry  ratprint
-@category{Console interaction}
+@cat2{ Console interaction ,  Console-interaction }
 @closecatbox
 @end defvr
 
@@ -2447,9 +2447,9 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Simplification functions  @subentry  ratsimp
-@category{Simplification functions}
+@cat2{ Simplification functions ,  Simplification-functions }
 @ctindex  Rational expressions  @subentry  ratsimp
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @closecatbox
 @end deffn
 
@@ -2463,9 +2463,9 @@ When @code{ratsimpexpons} is @code{true},
 @c NEED AN EXAMPLE HERE -- RECYCLE THE ratsimpexpons EXAMPLE FROM ratsimp ABOVE
 @opencatbox{Categories:}
 @ctindex  Simplification flags and variables  @subentry  ratsimpexpons
-@category{Simplification flags and variables}
+@cat2{ Simplification flags and variables ,  Simplification-flags-and-variables }
 @ctindex  Rational expressions  @subentry  ratsimpexpons
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @closecatbox
 @end defvr
 
@@ -2479,7 +2479,7 @@ substitutions such as @code{u} for @code{sqrt (x)} in @code{x}.
 
 @opencatbox{Categories:}
 @ctindex  Simplification flags and variables  @subentry  radsubstflag
-@category{Simplification flags and variables}
+@cat2{ Simplification flags and variables ,  Simplification-flags-and-variables }
 @closecatbox
 @end defvr
 
@@ -2555,7 +2555,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Rational expressions  @subentry  ratsubst
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @closecatbox
 @end deffn
 
@@ -2585,7 +2585,7 @@ Each call to the function @code{ratvars} resets the list.
 @c NEED EXAMPLES HERE
 @opencatbox{Categories:}
 @ctindex  Rational expressions  @subentry  ratvars
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @closecatbox
 @end deffn
 
@@ -2660,9 +2660,9 @@ evaluation are still present.
 
 @opencatbox{Categories:}
 @ctindex  Rational expressions  @subentry  ratvarswitch
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @ctindex  Global flags  @subentry  ratvarswitch
-@category{Global flags}
+@cat2{ Global flags ,  Global-flags }
 @closecatbox
 @end defvr
 
@@ -2708,7 +2708,7 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Rational expressions  @subentry  ratweight
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @closecatbox
 @end deffn
 
@@ -2725,7 +2725,7 @@ each call to @code{ratweight} places additional items in the list.
 
 @opencatbox{Categories:}
 @ctindex  Rational expressions  @subentry  ratweights
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @closecatbox
 @end defvr
 
@@ -2740,7 +2740,7 @@ For the default value of @code{false}, no truncation occurs.
 
 @opencatbox{Categories:}
 @ctindex  Rational expressions  @subentry  ratwtlvl
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @closecatbox
 @end defvr
 
@@ -2759,7 +2759,7 @@ of the two-element list returned by @code{divide}.
 @c NEED SOME EXAMPLES HERE
 @opencatbox{Categories:}
 @ctindex  Polynomials  @subentry  remainder
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @closecatbox
 @end deffn
 
@@ -2815,7 +2815,7 @@ Examples:
 @end example
 @opencatbox{Categories:}
 @ctindex  Polynomials  @subentry  resultant
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @closecatbox
 @end deffn
 
@@ -2843,7 +2843,7 @@ On most problems the default value @code{subres} should be best.
 
 @opencatbox{Categories:}
 @ctindex  Polynomials  @subentry  resultant
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @closecatbox
 @end defvr
 
@@ -2860,7 +2860,7 @@ containing some of the same factors.
 
 @opencatbox{Categories:}
 @ctindex  Polynomials  @subentry  savefactors
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @closecatbox
 @end defvr
 
@@ -2875,9 +2875,9 @@ See also @mrefdot{ratvars}
 
 @opencatbox{Categories:}
 @ctindex  Rational expressions  @subentry  showratvars
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @ctindex  Display functions  @subentry  showratvars
-@category{Display functions}
+@cat2{ Display functions ,  Display-functions }
 @closecatbox
 @end deffn
 
@@ -2909,7 +2909,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Polynomials  @subentry  sqfr
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @closecatbox
 @end deffn
 
@@ -2990,9 +2990,9 @@ Examples:
 
 @opencatbox{Categories:}
 @ctindex  Polynomials  @subentry  tellrat
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @ctindex  Rational expressions  @subentry  tellrat
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @closecatbox
 @end deffn
 
@@ -3012,7 +3012,7 @@ have some subexpressions in CRE form.
 @c NEED EXAMPLES HERE
 @opencatbox{Categories:}
 @ctindex  Rational expressions  @subentry  totaldisrep
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @closecatbox
 @end deffn
 
@@ -3025,9 +3025,9 @@ Removes @code{tellrat} properties from @var{x_1}, @dots{}, @var{x_n}.
 @c NEED EXAMPLES HERE
 @opencatbox{Categories:}
 @ctindex  Polynomials  @subentry  untellrat
-@category{Polynomials}
+@cat2{ Polynomials ,  Polynomials }
 @ctindex  Rational expressions  @subentry  untellrat
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @closecatbox
 @end deffn
 
