--- a/doc/info/augmented_lagrangian.texi
+++ b/doc/info/augmented_lagrangian.texi
@@ -148,13 +148,13 @@ Same example as before, but this time the gradient is supplied as an argument.
 
 @opencatbox{Categories:}
 @ctindex  Numerical methods  @subentry  augmented_lagrangian_method
-@category{Numerical methods}
+@cat2{ Numerical methods ,  Numerical-methods }
 @ctindex  Optimization  @subentry  augmented_lagrangian_method
-@category{Optimization}
+@cat2{ Optimization ,  Optimization }
 @ctindex  Share packages  @subentry  augmented_lagrangian_method
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package augmented_lagrangian   @subentry  augmented_lagrangian_method
-@category{Package augmented_lagrangian} 
+@cat2{ Package augmented_lagrangian  ,  Package-augmented_lagrangian- }
 @closecatbox
 
 @end deffn
