--- a/doc/info/cobyla.texi
+++ b/doc/info/cobyla.texi
@@ -46,13 +46,13 @@ References:
 
 @opencatbox{Categories:}
 @ctindex  Numerical methods   @subentry  Introduction to cobyla
-@category{Numerical methods} 
+@cat2{ Numerical methods  ,  Numerical-methods- }
 @ctindex  Optimization  @subentry  Introduction to cobyla
-@category{Optimization}
+@cat2{ Optimization ,  Optimization }
 @ctindex  Share packages  @subentry  Introduction to cobyla
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package cobyla  @subentry  Introduction to cobyla
-@category{Package cobyla}
+@cat2{ Package cobyla ,  Package-cobyla }
 @closecatbox
 
 @node Functions and Variables for cobyla, Examples for cobyla, Introduction to cobyla, cobyla-pkg
