--- a/doc/info/ggf.texi
+++ b/doc/info/ggf.texi
@@ -24,7 +24,7 @@ See also @mref{ggf}.
 
 @opencatbox{Categories:}
 @ctindex  Package ggf  @subentry  GGFINFINITY
-@category{Package ggf}
+@cat2{ Package ggf ,  Package-ggf }
 @closecatbox
 
 @end defvr
@@ -47,7 +47,7 @@ See also @mref{ggf}.
 
 @opencatbox{Categories:}
 @ctindex  Package ggf  @subentry  GGFCFMAX
-@category{Package ggf}
+@cat2{ Package ggf ,  Package-ggf }
 @closecatbox
 
 @end defvr
@@ -67,11 +67,11 @@ To use this function write first @code{load("ggf")}.
 
 @opencatbox{Categories:}
 @ctindex  Generating functions  @subentry  ggf
-@category{Generating functions}
+@cat2{ Generating functions ,  Generating-functions }
 @ctindex  Share packages  @subentry  ggf
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package ggf  @subentry  ggf
-@category{Package ggf}
+@cat2{ Package ggf ,  Package-ggf }
 @closecatbox
 
 @end deffn
