--- a/doc/info/lbfgs.texi
+++ b/doc/info/lbfgs.texi
@@ -25,13 +25,13 @@ scale optimization". @i{Mathematical Programming B} 45:503--528 (1989)
 
 @opencatbox{Categories:}
 @ctindex  Numerical methods   @subentry  Introduction to lbfgs
-@category{Numerical methods} 
+@cat2{ Numerical methods  ,  Numerical-methods- }
 @ctindex  Optimization  @subentry  Introduction to lbfgs
-@category{Optimization}
+@cat2{ Optimization ,  Optimization }
 @ctindex  Share packages  @subentry  Introduction to lbfgs
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package lbfgs  @subentry  Introduction to lbfgs
-@category{Package lbfgs}
+@cat2{ Package lbfgs ,  Package-lbfgs }
 @closecatbox
 
 @node Functions and Variables for lbfgs, , Introduction to lbfgs, Top
@@ -428,7 +428,7 @@ I& NFN&   FUNC&                    GNORM&                   STEPLENGTH\cr
 
 @opencatbox{Categories:}
 @ctindex  Package lbfgs  @subentry  lbfgs
-@category{Package lbfgs}
+@cat2{ Package lbfgs ,  Package-lbfgs }
 @closecatbox
 
 @end deffn
@@ -443,7 +443,7 @@ When @code{lbfgs_nfeval_max} is reached,
 
 @opencatbox{Categories:}
 @ctindex  Package lbfgs  @subentry  lbfgs_nfeval_max
-@category{Package lbfgs}
+@cat2{ Package lbfgs ,  Package-lbfgs }
 @closecatbox
 
 @end defvr
@@ -457,7 +457,7 @@ to the approximate inverse Hessian matrix which is maintained by @code{lbfgs}.
 
 @opencatbox{Categories:}
 @ctindex  Package lbfgs  @subentry  lbfgs_ncorrections
-@category{Package lbfgs}
+@cat2{ Package lbfgs ,  Package-lbfgs }
 @closecatbox
 
 @end defvr
