--- a/doc/info/minpack.texi
+++ b/doc/info/minpack.texi
@@ -11,13 +11,13 @@ Fortran library MINPACK, as obtained from Netlib.
 
 @opencatbox{Categories:}
 @ctindex  Numerical methods   @subentry  Introduction to minpack
-@category{Numerical methods} 
+@cat2{ Numerical methods  ,  Numerical-methods- }
 @ctindex  Optimization  @subentry  Introduction to minpack
-@category{Optimization}
+@cat2{ Optimization ,  Optimization }
 @ctindex  Share packages  @subentry  Introduction to minpack
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package minpack  @subentry  Introduction to minpack
-@category{Package minpack}
+@cat2{ Package minpack ,  Package-minpack }
 @closecatbox
 
 @node Functions and Variables for minpack,  , Introduction to minpack, minpack-pkg
