--- a/doc/info/ratpow.texi
+++ b/doc/info/ratpow.texi
@@ -56,9 +56,9 @@ Returns the highest power of @var{x} in @code{ratnumer(expr)}
 
 @opencatbox{Categories:}
 @ctindex  Rational expressions  @subentry  ratp_hipow
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @ctindex  Package ratpow  @subentry  ratp_hipow
-@category{Package ratpow}
+@cat2{ Package ratpow ,  Package-ratpow }
 @closecatbox
 @end deffn
 
@@ -128,9 +128,9 @@ The CRE form of the following equation contains @code{sqrt(x)} and
 
 @opencatbox{Categories:}
 @ctindex  Rational expressions  @subentry  ratp_lopow
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @ctindex  Package ratpow  @subentry  ratp_lopow
-@category{Package ratpow}
+@cat2{ Package ratpow ,  Package-ratpow }
 @closecatbox
 @end deffn
 
@@ -156,9 +156,9 @@ returned coefficients are in CRE form except for numbers.
 @end example
 @opencatbox{Categories:}
 @ctindex  Rational expressions  @subentry  ratp_coeffs
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @ctindex  Package ratpow  @subentry  ratp_coeffs
-@category{Package ratpow}
+@cat2{ Package ratpow ,  Package-ratpow }
 @closecatbox
 @end deffn
 
@@ -182,9 +182,9 @@ returned coefficients are in CRE form except for numbers.
 
 @opencatbox{Categories:}
 @ctindex  Rational expressions  @subentry  ratp_dense_coeffs
-@category{Rational expressions}
+@cat2{ Rational expressions ,  Rational-expressions }
 @ctindex  Package ratpow  @subentry  ratp_dense_coeffs
-@category{Package ratpow}
+@cat2{ Package ratpow ,  Package-ratpow }
 @closecatbox
 @end deffn
 
