--- a/doc/info/simplex.texi
+++ b/doc/info/simplex.texi
@@ -24,13 +24,13 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Numerical methods   @subentry  Introduction to simplex
-@category{Numerical methods} 
+@cat2{ Numerical methods  ,  Numerical-methods- }
 @ctindex  Optimization  @subentry  Introduction to simplex
-@category{Optimization}
+@cat2{ Optimization ,  Optimization }
 @ctindex  Share packages  @subentry  Introduction to simplex
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package simplex  @subentry  Introduction to simplex
-@category{Package simplex}
+@cat2{ Package simplex ,  Package-simplex }
 @closecatbox
 
 @subsection Tests for simplex
@@ -134,7 +134,7 @@ See also: @mref{linear_program}, @mref{ratnump}.
 
 @opencatbox{Categories:}
 @ctindex  Package simplex  @subentry  epsilon_lp
-@category{Package simplex}
+@cat2{ Package simplex ,  Package-simplex }
 @closecatbox
 
 @end defvr
@@ -178,9 +178,9 @@ See also: @mref{minimize_lp}, @mref{scale_lp}, and @mref{epsilon_lp}.
 
 @opencatbox{Categories:}
 @ctindex  Package simplex  @subentry  linear_program
-@category{Package simplex}
+@cat2{ Package simplex ,  Package-simplex }
 @ctindex  Numerical methods  @subentry  linear_program
-@category{Numerical methods}
+@cat2{ Numerical methods ,  Numerical-methods }
 @closecatbox
 
 @end deffn
@@ -197,9 +197,9 @@ See also: @mref{minimize_lp}.
 
 @opencatbox{Categories:}
 @ctindex  Package simplex  @subentry  maximize_lp
-@category{Package simplex}
+@cat2{ Package simplex ,  Package-simplex }
 @ctindex  Numerical methods  @subentry  maximize_lp
-@category{Numerical methods}
+@cat2{ Numerical methods ,  Numerical-methods }
 @closecatbox
 
 @end deffn
@@ -301,9 +301,9 @@ See also: @mref{maximize_lp}, @mref{nonnegative_lp}, @mref{epsilon_lp}.
 
 @opencatbox{Categories:}
 @ctindex  Package simplex  @subentry  minimize_lp
-@category{Package simplex}
+@cat2{ Package simplex ,  Package-simplex }
 @ctindex  Numerical methods  @subentry  minimize_lp
-@category{Numerical methods}
+@cat2{ Numerical methods ,  Numerical-methods }
 @closecatbox
 
 @end deffn
@@ -321,7 +321,7 @@ See also: @mref{minimize_lp}.
 
 @opencatbox{Categories:}
 @ctindex  Package simplex  @subentry  nonnegative_lp
-@category{Package simplex}
+@cat2{ Package simplex ,  Package-simplex }
 @closecatbox
 
 @end defvr
@@ -335,7 +335,7 @@ When @code{scale_lp} is @code{true},
 
 @opencatbox{Categories:}
 @ctindex  Package simplex  @subentry  scale_lp
-@category{Package simplex}
+@cat2{ Package simplex ,  Package-simplex }
 @closecatbox
 
 @end defvr
@@ -348,7 +348,7 @@ After @code{linear_program} returns,
 
 @opencatbox{Categories:}
 @ctindex  Package simplex  @subentry  pivot_count_sx
-@category{Package simplex}
+@cat2{ Package simplex ,  Package-simplex }
 @closecatbox
 
 @end defvr
@@ -360,7 +360,7 @@ After @code{linear_program} returns,
 
 @opencatbox{Categories:}
 @ctindex  Package simplex  @subentry  pivot_max_sx
-@category{Package simplex}
+@cat2{ Package simplex ,  Package-simplex }
 @closecatbox
 
 @end defvr
