--- a/doc/info/solve_rec.texi
+++ b/doc/info/solve_rec.texi
@@ -27,11 +27,11 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Linear recurrences  @subentry  Introduction to solve_rec
-@category{Linear recurrences}
+@cat2{ Linear recurrences ,  Linear-recurrences }
 @ctindex  Share packages  @subentry  Introduction to solve_rec
-@category{Share packages}
+@cat2{ Share packages ,  Share-packages }
 @ctindex  Package solve_rec  @subentry  Introduction to solve_rec
-@category{Package solve_rec}
+@cat2{ Package solve_rec ,  Package-solve_rec }
 @closecatbox
 
 @node Functions and Variables for solve_rec,  , Introduction to solve_rec, solve_rec-pkg
@@ -97,7 +97,7 @@ So the general solution is
 
 @opencatbox{Categories:}
 @ctindex  Package solve_rec  @subentry  reduce_order
-@category{Package solve_rec}
+@cat2{ Package solve_rec ,  Package-solve_rec }
 @closecatbox
 
 @end deffn
@@ -113,7 +113,7 @@ See also: @mrefdot{solve_rec}
 
 @opencatbox{Categories:}
 @ctindex  Package solve_rec  @subentry  simplify_products
-@category{Package solve_rec}
+@cat2{ Package solve_rec ,  Package-solve_rec }
 @closecatbox
 
 @end defvr
@@ -155,11 +155,11 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package solve_rec  @subentry  simplify_sum
-@category{Package solve_rec}
+@cat2{ Package solve_rec ,  Package-solve_rec }
 @ctindex  Sums and products  @subentry  simplify_sum
-@category{Sums and products}
+@cat2{ Sums and products ,  Sums-and-products }
 @ctindex  Simplification functions  @subentry  simplify_sum
-@category{Simplification functions}
+@cat2{ Simplification functions ,  Simplification-functions }
 @closecatbox
 
 @end deffn
@@ -246,7 +246,7 @@ See also: @mrefcomma{solve_rec_rat} @mref{simplify_products} and @mrefdot{produc
 
 @opencatbox{Categories:}
 @ctindex  Package solve_rec  @subentry  solve_rec
-@category{Package solve_rec}
+@cat2{ Package solve_rec ,  Package-solve_rec }
 @closecatbox
 
 @end deffn
@@ -284,7 +284,7 @@ See also: @mrefdot{solve_rec}
 
 @opencatbox{Categories:}
 @ctindex  Package solve_rec  @subentry  solve_rec_rat
-@category{Package solve_rec}
+@cat2{ Package solve_rec ,  Package-solve_rec }
 @closecatbox
 
 @end deffn
@@ -300,7 +300,7 @@ See also: @mrefcomma{simplify_products} @mrefdot{solve_rec}
 
 @opencatbox{Categories:}
 @ctindex  Package solve_rec  @subentry  product_use_gamma
-@category{Package solve_rec}
+@cat2{ Package solve_rec ,  Package-solve_rec }
 @closecatbox
 
 @end defvr
@@ -358,7 +358,7 @@ Example:
 
 @opencatbox{Categories:}
 @ctindex  Package solve_rec  @subentry  summand_to_rec
-@category{Package solve_rec}
+@cat2{ Package solve_rec ,  Package-solve_rec }
 @closecatbox
 
 @end deffn
